@@ -27,12 +27,13 @@ import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.ListIterator;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
+import javax.xml.XMLConstants;
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
 import javax.xml.parsers.ParserConfigurationException;
@@ -46,18 +47,15 @@ import org.w3c.dom.Attr;
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 
-import edu.emory.mathcs.backport.java.util.Collections;
+import org.apache.camel.maven.htmlxlsx.process.CoverageResultsProcessor;
 import org.apache.camel.maven.model.RouteCoverageNode;
 import org.apache.camel.parser.RouteBuilderParser;
 import org.apache.camel.parser.XmlRouteParser;
 import org.apache.camel.parser.helper.RouteCoverageHelper;
 import org.apache.camel.parser.model.CamelNodeDetails;
 import org.apache.camel.parser.model.CoverageData;
-import org.apache.camel.support.PatternHelper;
 import org.apache.camel.util.FileUtil;
-import org.apache.maven.model.Resource;
 import org.apache.maven.plugin.MojoExecutionException;
-import org.apache.maven.plugin.MojoFailureException;
 import org.apache.maven.plugins.annotations.Mojo;
 import org.apache.maven.plugins.annotations.Parameter;
 import org.apache.maven.project.MavenProject;
@@ -66,12 +64,19 @@ import org.jboss.forge.roaster.Roaster;
 import org.jboss.forge.roaster.model.JavaType;
 import org.jboss.forge.roaster.model.source.JavaClassSource;
 
+import static org.apache.camel.catalog.common.CatalogHelper.asRelativeFile;
+import static org.apache.camel.catalog.common.CatalogHelper.findJavaRouteBuilderClasses;
+import static org.apache.camel.catalog.common.CatalogHelper.findXmlRouters;
+import static org.apache.camel.catalog.common.CatalogHelper.matchRouteFile;
+import static org.apache.camel.catalog.common.CatalogHelper.stripRootPath;
+
 /**
  * Performs route coverage reports after running Camel unit tests with camel-test modules
  */
 @Mojo(name = "route-coverage", threadSafe = true)
 public class RouteCoverageMojo extends AbstractExecMojo {
 
+    public static final String DESTINATION_DIR = "/target/camel-route-coverage";
     /**
      * The maven project.
      */
@@ -139,73 +144,30 @@ public class RouteCoverageMojo extends AbstractExecMojo {
     @Parameter(property = "camel.generateJacocoXmlReport", defaultValue = "false")
     private boolean generateJacocoXmlReport;
 
-    // CHECKSTYLE:OFF
+    /**
+     * Whether to generate a coverage-report in HTML format.
+     */
+    @Parameter(property = "camel.generateHtmlReport", defaultValue = "false")
+    private boolean generateHtmlReport;
+
     @Override
-    public void execute() throws MojoExecutionException, MojoFailureException {
+    public void execute() throws MojoExecutionException {
 
         Set<File> javaFiles = new LinkedHashSet<>();
         Set<File> xmlFiles = new LinkedHashSet<>();
 
         // find all java route builder classes
-        List list = project.getCompileSourceRoots();
-        for (Object obj : list) {
-            String dir = (String) obj;
-            findJavaFiles(new File(dir), javaFiles);
-        }
+        findJavaRouteBuilderClasses(javaFiles, true, includeTest, project);
         // find all xml routes
-        list = project.getResources();
-        for (Object obj : list) {
-            Resource dir = (Resource) obj;
-            findXmlFiles(new File(dir.getDirectory()), xmlFiles);
-        }
-
-        if (includeTest) {
-            list = project.getTestCompileSourceRoots();
-            for (Object obj : list) {
-                String dir = (String) obj;
-                findJavaFiles(new File(dir), javaFiles);
-            }
-            list = project.getTestResources();
-            for (Object obj : list) {
-                Resource dir = (Resource) obj;
-                findXmlFiles(new File(dir.getDirectory()), xmlFiles);
-            }
-        }
+        findXmlRouters(xmlFiles, true, includeTest, project);
 
         List<CamelNodeDetails> routeTrees = new ArrayList<>();
 
         for (File file : javaFiles) {
-            if (matchFile(file)) {
-                try {
-                    // parse the java source code and find Camel RouteBuilder classes
-                    String fqn = file.getPath();
-                    String baseDir = ".";
-                    JavaType out = Roaster.parse(file);
-                    // we should only parse java classes (not interfaces and enums etc)
-                    if (out instanceof JavaClassSource) {
-                        JavaClassSource clazz = (JavaClassSource) out;
-                        List<CamelNodeDetails> result = RouteBuilderParser.parseRouteBuilderTree(clazz, baseDir, fqn, true);
-                        routeTrees.addAll(result);
-                    }
-                } catch (Exception e) {
-                    getLog().warn("Error parsing java file " + file + " code due " + e.getMessage(), e);
-                }
-            }
+            addJavaFiles(file, routeTrees);
         }
         for (File file : xmlFiles) {
-            if (matchFile(file)) {
-                try {
-                    // parse the xml files code and find Camel routes
-                    String fqn = file.getPath();
-                    String baseDir = ".";
-                    InputStream is = new FileInputStream(file);
-                    List<CamelNodeDetails> result = XmlRouteParser.parseXmlRouteTree(is, baseDir, fqn);
-                    routeTrees.addAll(result);
-                    is.close();
-                } catch (Exception e) {
-                    getLog().warn("Error parsing xml file " + file + " code due " + e.getMessage(), e);
-                }
-            }
+            addXmlFiles(file, routeTrees);
         }
 
         getLog().info("Discovered " + routeTrees.size() + " routes");
@@ -214,15 +176,16 @@ public class RouteCoverageMojo extends AbstractExecMojo {
 
         long anonymous = routeTrees.stream().filter(t -> t.getRouteId() == null).count();
         if (!anonymousRoutes && anonymous > 0) {
-            getLog().warn("Discovered " + anonymous + " anonymous routes. Add route ids to these routes for route coverage support");
+            getLog().warn(
+                    "Discovered " + anonymous + " anonymous routes. Add route ids to these routes for route coverage support");
         }
 
         final AtomicInteger notCovered = new AtomicInteger();
         final AtomicInteger coveredNodes = new AtomicInteger();
         int totalNumberOfNodes = 0;
 
-        List<CamelNodeDetails> routeIdTrees = routeTrees.stream().filter(t -> t.getRouteId() != null).collect(Collectors.toList());
-        List<CamelNodeDetails> anonymousRouteTrees = routeTrees.stream().filter(t -> t.getRouteId() == null).collect(Collectors.toList());
+        List<CamelNodeDetails> routeIdTrees = routeTrees.stream().filter(t -> t.getRouteId() != null).toList();
+        List<CamelNodeDetails> anonymousRouteTrees = routeTrees.stream().filter(t -> t.getRouteId() == null).toList();
         Document document = null;
         File file = null;
         Element report = null;
@@ -248,7 +211,7 @@ public class RouteCoverageMojo extends AbstractExecMojo {
         // favor strict matching on route ids
         for (CamelNodeDetails t : routeIdTrees) {
             String routeId = t.getRouteId();
-            String fileName = stripRootPath(asRelativeFile(t.getFileName()));
+            String fileName = stripRootPath(asRelativeFile(t.getFileName(), project), project);
             String sourceFileName = new File(fileName).getName();
             String packageName = new File(fileName).getParent();
             Element pack = null;
@@ -261,75 +224,21 @@ public class RouteCoverageMojo extends AbstractExecMojo {
             }
 
             // grab dump data for the route
-            try {
-                List<CoverageData> coverageData = RouteCoverageHelper.parseDumpRouteCoverageByRouteId(project.getBasedir() + "/target/camel-route-coverage", routeId);
-                if (coverageData.isEmpty()) {
-                    getLog().warn("No route coverage data found for route: " + routeId
-                        + ". Make sure to enable route coverage in your unit tests and assign unique route ids to your routes. Also remember to run unit tests first.");
-                } else {
-                    List<RouteCoverageNode> coverage = gatherRouteCoverageSummary(Collections.singletonList(t), coverageData);
-                    totalNumberOfNodes += coverage.size();
-                    String out = templateCoverageData(fileName, routeId, coverage, notCovered, coveredNodes);
-                    getLog().info("Route coverage summary:\n\n" + out);
-                    getLog().info("");
-
-                    if (generateJacocoXmlReport && report != null) {
-                        appendSourcefileNode(document, sourceFileName, pack, coverage);
-                    }
-                }
-
-            } catch (Exception e) {
-                throw new MojoExecutionException("Error during gathering route coverage data for route: " + routeId, e);
-            }
+            totalNumberOfNodes
+                    = grabDumpData(t, routeId, totalNumberOfNodes, fileName, notCovered, coveredNodes, report, document,
+                            sourceFileName, pack);
         }
 
         if (generateJacocoXmlReport && report != null) {
-            try {
-                getLog().info("Generating Jacoco XML report: " + file);
-                createJacocoXmlFile(document, file);
-            } catch (Exception e) {
-                getLog().warn("Error generating Jacoco XML report due " + e.getMessage());
-            }
+            doGenerateJacocoReport(file, document);
         }
 
         if (anonymousRoutes && !anonymousRouteTrees.isEmpty()) {
-            // grab dump data for the route
-            try {
-                Map<String, List<CoverageData>> datas = RouteCoverageHelper.parseDumpRouteCoverageByClassAndTestMethod(project.getBasedir() + "/target/camel-route-coverage");
-                if (datas.isEmpty()) {
-                    getLog().warn("No route coverage data found"
-                        + ". Make sure to enable route coverage in your unit tests. Also remember to run unit tests first.");
-                } else {
-                    Map<String, List<CamelNodeDetails>> routes = groupAnonymousRoutesByClassName(anonymousRouteTrees);
-                    // attempt to match anonymous routes via the unit test class
-                    for (Map.Entry<String, List<CamelNodeDetails>> t : routes.entrySet()) {
-                        List<RouteCoverageNode> coverage = new ArrayList<>();
-                        String className = t.getKey();
+            totalNumberOfNodes = handleAnonymousRoutes(anonymousRouteTrees, totalNumberOfNodes, notCovered, coveredNodes);
+        }
 
-                        // we may have multiple tests in the same test class that tests different parts of the same
-                        // routes so merge their coverage reports into a single coverage
-                        for (Map.Entry<String, List<CoverageData>> entry : datas.entrySet()) {
-                            String key = entry.getKey();
-                            String dataClassName = key.substring(0, key.indexOf('-'));
-                            if (dataClassName.equals(className)) {
-                                List<RouteCoverageNode> result = gatherRouteCoverageSummary(t.getValue(), entry.getValue());
-                                // merge them together
-                                mergeCoverageData(coverage, result);
-                            }
-                        }
-
-                        if (!coverage.isEmpty()) {
-                            totalNumberOfNodes += coverage.size();
-                            String fileName = stripRootPath(asRelativeFile(t.getValue().get(0).getFileName()));
-                            String out = templateCoverageData(fileName, null, coverage, notCovered, coveredNodes);
-                            getLog().info("Route coverage summary:\n\n" + out);
-                            getLog().info("");
-                        }
-                    }
-                }
-            } catch (Exception e) {
-                throw new MojoExecutionException("Error during gathering route coverage data", e);
-            }
+        if (generateHtmlReport) {
+            doGenerateHtmlReport();
         }
 
         // compute and log overall coverage across routes
@@ -345,11 +254,155 @@ public class RouteCoverageMojo extends AbstractExecMojo {
         }
     }
 
+    private int grabDumpData(
+            CamelNodeDetails t, String routeId, int totalNumberOfNodes, String fileName, AtomicInteger notCovered,
+            AtomicInteger coveredNodes, Element report, Document document, String sourceFileName, Element pack)
+            throws MojoExecutionException {
+        try {
+            List<CoverageData> coverageData = RouteCoverageHelper
+                    .parseDumpRouteCoverageByRouteId(project.getBasedir() + DESTINATION_DIR, routeId);
+            if (coverageData.isEmpty()) {
+                getLog().warn("No route coverage data found for route: " + routeId
+                              + ". Make sure to enable route coverage in your unit tests and assign unique route ids to your routes. Also remember to run unit tests first.");
+            } else {
+                List<RouteCoverageNode> coverage = gatherRouteCoverageSummary(List.of(t), coverageData);
+                totalNumberOfNodes += coverage.size();
+                String out = templateCoverageData(fileName, routeId, coverage, notCovered, coveredNodes);
+                getLog().info("Route coverage summary:\n\n" + out);
+                getLog().info("");
+
+                if (generateJacocoXmlReport && report != null) {
+                    appendSourcefileNode(document, sourceFileName, pack, coverage);
+                }
+            }
+
+        } catch (Exception e) {
+            throw new MojoExecutionException("Error during gathering route coverage data for route: " + routeId, e);
+        }
+        return totalNumberOfNodes;
+    }
+
+    private void doGenerateJacocoReport(File file, Document document) {
+        try {
+            getLog().info("Generating Jacoco XML report: " + file + "\n\n");
+            createJacocoXmlFile(document, file);
+        } catch (Exception e) {
+            getLog().warn("Error generating Jacoco XML report due " + e.getMessage());
+        }
+    }
+
+    private int handleAnonymousRoutes(
+            List<CamelNodeDetails> anonymousRouteTrees, int totalNumberOfNodes, AtomicInteger notCovered,
+            AtomicInteger coveredNodes)
+            throws MojoExecutionException {
+        // grab dump data for the route
+        try {
+            Map<String, List<CoverageData>> datas = RouteCoverageHelper
+                    .parseDumpRouteCoverageByClassAndTestMethod(project.getBasedir() + DESTINATION_DIR);
+            if (datas.isEmpty()) {
+                getLog().warn("No route coverage data found"
+                              + ". Make sure to enable route coverage in your unit tests. Also remember to run unit tests first.");
+            } else {
+                Map<String, List<CamelNodeDetails>> routes = groupAnonymousRoutesByClassName(anonymousRouteTrees);
+                // attempt to match anonymous routes via the unit test class
+                for (Map.Entry<String, List<CamelNodeDetails>> t : routes.entrySet()) {
+                    List<RouteCoverageNode> coverage = new ArrayList<>();
+                    String className = t.getKey();
+
+                    // we may have multiple tests in the same test class that tests different parts of the same
+                    // routes so merge their coverage reports into a single coverage
+                    for (Map.Entry<String, List<CoverageData>> entry : datas.entrySet()) {
+                        String key = entry.getKey();
+                        String dataClassName = key.substring(0, key.indexOf('-'));
+                        if (dataClassName.equals(className)) {
+                            List<RouteCoverageNode> result = gatherRouteCoverageSummary(t.getValue(), entry.getValue());
+                            // merge them together
+                            mergeCoverageData(coverage, result);
+                        }
+                    }
+
+                    if (!coverage.isEmpty()) {
+                        totalNumberOfNodes += coverage.size();
+                        String fileName
+                                = stripRootPath(asRelativeFile(t.getValue().get(0).getFileName(), project), project);
+                        String out = templateCoverageData(fileName, null, coverage, notCovered, coveredNodes);
+                        getLog().info("Route coverage summary:\n\n" + out);
+                        getLog().info("");
+                    }
+                }
+            }
+        } catch (Exception e) {
+            throw new MojoExecutionException("Error during gathering route coverage data ", e);
+        }
+        return totalNumberOfNodes;
+    }
+
+    private void doGenerateHtmlReport() {
+        try {
+            final String baseHtmlPath = "/target/site/route-coverage/html";
+            final File htmlPath = new File(project.getBasedir() + baseHtmlPath);
+            if (!htmlPath.exists()) {
+                htmlPath.mkdirs();
+            }
+            final File cssPath = new File(project.getBasedir() + baseHtmlPath + "/static/css");
+            if (!cssPath.exists()) {
+                cssPath.mkdirs();
+            }
+            final File jsPath = new File(project.getBasedir() + baseHtmlPath + "/static/js");
+            if (!jsPath.exists()) {
+                jsPath.mkdirs();
+            }
+            getLog().info("");
+            getLog().info("Generating HTML route coverage reports: " + htmlPath + "\n");
+            CoverageResultsProcessor processor = new CoverageResultsProcessor();
+            processor.writeCSS(cssPath);
+            processor.writeJS(jsPath);
+            File xmlPath = new File(project.getBasedir() + DESTINATION_DIR);
+            String out = processor.generateReport(project, xmlPath, htmlPath);
+            getLog().info(out);
+        } catch (Exception e) {
+            getLog().warn("Error generating HTML route coverage reports " + e.getMessage());
+        }
+    }
+
+    private void addXmlFiles(File file, List<CamelNodeDetails> routeTrees) {
+        if (matchFile(file)) {
+            try {
+                // parse the xml files code and find Camel routes
+                String fqn = file.getPath();
+                String baseDir = ".";
+                InputStream is = new FileInputStream(file);
+                List<CamelNodeDetails> result = XmlRouteParser.parseXmlRouteTree(is, baseDir, fqn);
+                routeTrees.addAll(result);
+                is.close();
+            } catch (Exception e) {
+                getLog().warn("Error parsing xml file " + file + " code due " + e.getMessage(), e);
+            }
+        }
+    }
+
+    private void addJavaFiles(File file, List<CamelNodeDetails> routeTrees) {
+        if (matchFile(file)) {
+            try {
+                // parse the java source code and find Camel RouteBuilder classes
+                String fqn = file.getPath();
+                JavaType<?> out = Roaster.parse(file);
+                // we should only parse java classes (not interfaces and enums etc)
+                if (out instanceof JavaClassSource clazz) {
+                    List<CamelNodeDetails> result = RouteBuilderParser.parseRouteBuilderTree(clazz, fqn, true);
+                    routeTrees.addAll(result);
+                }
+            } catch (Exception e) {
+                getLog().warn("Error parsing java file " + file + " code due " + e.getMessage(), e);
+            }
+        }
+    }
+
     private Map<String, List<CamelNodeDetails>> groupAnonymousRoutesByClassName(List<CamelNodeDetails> anonymousRouteTrees) {
         Map<String, List<CamelNodeDetails>> answer = new LinkedHashMap<>();
 
         for (CamelNodeDetails t : anonymousRouteTrees) {
-            String fileName = asRelativeFile(t.getFileName());
+            String fileName = asRelativeFile(t.getFileName(), project);
             String className = FileUtil.stripExt(FileUtil.stripPath(fileName));
             List<CamelNodeDetails> list = answer.computeIfAbsent(className, k -> new ArrayList<>());
             list.add(t);
@@ -380,7 +433,8 @@ public class RouteCoverageMojo extends AbstractExecMojo {
         }
     }
 
-    private ListIterator<RouteCoverageNode> positionToLineNumber(ListIterator<RouteCoverageNode> it, List<RouteCoverageNode> coverage, int lineNumber) {
+    private ListIterator<RouteCoverageNode> positionToLineNumber(
+            ListIterator<RouteCoverageNode> it, List<RouteCoverageNode> coverage, int lineNumber) {
         // restart
         if (it == null || !it.hasNext()) {
             it = coverage.listIterator();
@@ -396,13 +450,10 @@ public class RouteCoverageMojo extends AbstractExecMojo {
         return it;
     }
 
-    // CHECKSTYLE:ON
-
     @SuppressWarnings("unchecked")
     private String templateCoverageData(
             String fileName, String routeId, List<RouteCoverageNode> model, AtomicInteger notCovered,
-            AtomicInteger coveredNodes)
-            throws MojoExecutionException {
+            AtomicInteger coveredNodes) {
         ByteArrayOutputStream bos = new ByteArrayOutputStream();
         PrintStream sw = new PrintStream(bos);
 
@@ -415,8 +466,8 @@ public class RouteCoverageMojo extends AbstractExecMojo {
             sw.println("Route:\t" + routeId);
         }
         sw.println();
-        sw.println(String.format("%8s    %8s    %s", "Line #", "Count", "Route"));
-        sw.println(String.format("%8s    %8s    %s", "------", "-----", "-----"));
+        sw.printf("%8s    %8s    %s%n", "Line #", "Count", "Route");
+        sw.printf("%8s    %8s    %s%n", "------", "-----", "-----");
 
         int covered = 0;
         for (RouteCoverageNode node : model) {
@@ -424,7 +475,7 @@ public class RouteCoverageMojo extends AbstractExecMojo {
                 covered++;
             }
             String pad = padString(node.getLevel());
-            sw.println(String.format("%8s    %8s    %s", node.getLineNumber(), node.getCount(), pad + node.getName()));
+            sw.printf("%8s    %8s    %s%n", node.getLineNumber(), node.getCount(), pad + node.getName());
         }
 
         coveredNodes.addAndGet(covered);
@@ -440,7 +491,7 @@ public class RouteCoverageMojo extends AbstractExecMojo {
         }
 
         sw.println();
-        sw.println("Coverage: " + covered + " out of " + model.size() + " (" + String.format("%.1f", percentage)
+        sw.println("Coverage: " + covered + " out of " + model.size() + " (" + String.format(Locale.ROOT, "%.1f", percentage)
                    + "% / threshold " + coverageThreshold + ".0%)");
         sw.println("Status: " + (success ? "Success" : "Failed"));
         sw.println();
@@ -458,7 +509,8 @@ public class RouteCoverageMojo extends AbstractExecMojo {
 
         overallCoverageAboveThreshold.set(coveredNodes == totalNumberOfNodes || percentage >= overallCoverageThreshold);
 
-        sw.println("Coverage: " + coveredNodes + " out of " + totalNumberOfNodes + " (" + String.format("%.1f", percentage)
+        sw.println("Coverage: " + coveredNodes + " out of " + totalNumberOfNodes + " ("
+                   + String.format(Locale.ROOT, "%.1f", percentage)
                    + "% / threshold " + overallCoverageThreshold + ".0%)");
         sw.println("Status: " + (overallCoverageAboveThreshold.get() ? "Success" : "Failed"));
         sw.println();
@@ -490,9 +542,14 @@ public class RouteCoverageMojo extends AbstractExecMojo {
             return;
         }
 
+        // end block to make doTry .. doCatch .. doFinally aligned
+        if ("doCatch".equals(node.getName()) || "doFinally".equals(node.getName())) {
+            level.decrementAndGet();
+        }
+
         RouteCoverageNode data = new RouteCoverageNode();
         data.setName(node.getName());
-        data.setLineNumber(Integer.valueOf(node.getLineNumber()));
+        data.setLineNumber(Integer.parseInt(node.getLineNumber()));
         data.setLevel(level.get());
         data.setClassName(node.getClassName());
         data.setMethodName(node.getMethodName());
@@ -520,127 +577,11 @@ public class RouteCoverageMojo extends AbstractExecMojo {
     }
 
     private static String padString(int level) {
-        StringBuilder sb = new StringBuilder();
-        for (int i = 0; i < level; i++) {
-            sb.append("  ");
-        }
-        return sb.toString();
-    }
-
-    private void findJavaFiles(File dir, Set<File> javaFiles) {
-        File[] files = dir.isDirectory() ? dir.listFiles() : null;
-        if (files != null) {
-            for (File file : files) {
-                if (file.getName().endsWith(".java")) {
-                    javaFiles.add(file);
-                } else if (file.isDirectory()) {
-                    findJavaFiles(file, javaFiles);
-                }
-            }
-        }
-    }
-
-    private void findXmlFiles(File dir, Set<File> xmlFiles) {
-        File[] files = dir.isDirectory() ? dir.listFiles() : null;
-        if (files != null) {
-            for (File file : files) {
-                if (file.getName().endsWith(".xml")) {
-                    xmlFiles.add(file);
-                } else if (file.isDirectory()) {
-                    findXmlFiles(file, xmlFiles);
-                }
-            }
-        }
+        return "  ".repeat(level);
     }
 
     private boolean matchFile(File file) {
-        if (excludes == null && includes == null) {
-            return true;
-        }
-
-        // exclude take precedence
-        if (excludes != null) {
-            for (String exclude : excludes.split(",")) {
-                exclude = exclude.trim();
-                // try both with and without directory in the name
-                String fqn = stripRootPath(asRelativeFile(file.getAbsolutePath()));
-                boolean match = PatternHelper.matchPattern(fqn, exclude) || PatternHelper.matchPattern(file.getName(), exclude);
-                if (match) {
-                    return false;
-                }
-            }
-        }
-
-        // include
-        if (includes != null) {
-            for (String include : includes.split(",")) {
-                include = include.trim();
-                // try both with and without directory in the name
-                String fqn = stripRootPath(asRelativeFile(file.getAbsolutePath()));
-                boolean match = PatternHelper.matchPattern(fqn, include) || PatternHelper.matchPattern(file.getName(), include);
-                if (match) {
-                    return true;
-                }
-            }
-            // did not match any includes
-            return false;
-        }
-
-        // was not excluded nor failed include so its accepted
-        return true;
-    }
-
-    private String asRelativeFile(String name) {
-        String answer = name;
-
-        String base = project.getBasedir().getAbsolutePath();
-        if (name.startsWith(base)) {
-            answer = name.substring(base.length());
-            // skip leading slash for relative path
-            if (answer.startsWith(File.separator)) {
-                answer = answer.substring(1);
-            }
-        }
-        return answer;
-    }
-
-    private String stripRootPath(String name) {
-        // strip out any leading source / resource directory
-
-        List list = project.getCompileSourceRoots();
-        for (Object obj : list) {
-            String dir = (String) obj;
-            dir = asRelativeFile(dir);
-            if (name.startsWith(dir)) {
-                return name.substring(dir.length() + 1);
-            }
-        }
-        list = project.getTestCompileSourceRoots();
-        for (Object obj : list) {
-            String dir = (String) obj;
-            dir = asRelativeFile(dir);
-            if (name.startsWith(dir)) {
-                return name.substring(dir.length() + 1);
-            }
-        }
-        List resources = project.getResources();
-        for (Object obj : resources) {
-            Resource resource = (Resource) obj;
-            String dir = asRelativeFile(resource.getDirectory());
-            if (name.startsWith(dir)) {
-                return name.substring(dir.length() + 1);
-            }
-        }
-        resources = project.getTestResources();
-        for (Object obj : resources) {
-            Resource resource = (Resource) obj;
-            String dir = asRelativeFile(resource.getDirectory());
-            if (name.startsWith(dir)) {
-                return name.substring(dir.length() + 1);
-            }
-        }
-
-        return name;
+        return matchRouteFile(file, excludes, includes, project);
     }
 
     private void appendSourcefileNode(
@@ -695,19 +636,32 @@ public class RouteCoverageMojo extends AbstractExecMojo {
     }
 
     private static Document createDocument() throws ParserConfigurationException {
-        DocumentBuilderFactory documentFactory = DocumentBuilderFactory.newInstance();
-        documentFactory.setFeature("http://apache.org/xml/features/disallow-doctype-decl", true);
-        documentFactory.setFeature(javax.xml.XMLConstants.FEATURE_SECURE_PROCESSING, true);
+        DocumentBuilderFactory dbf = DocumentBuilderFactory.newInstance();
+        // turn off validator and loading external dtd
+        dbf.setValidating(false);
+        dbf.setNamespaceAware(true);
+        dbf.setFeature(XMLConstants.FEATURE_SECURE_PROCESSING, true);
+        dbf.setFeature("http://apache.org/xml/features/disallow-doctype-decl", true);
+        dbf.setFeature("http://xml.org/sax/features/namespaces", false);
+        dbf.setFeature("http://xml.org/sax/features/validation", false);
+        dbf.setFeature("http://apache.org/xml/features/nonvalidating/load-dtd-grammar", false);
+        dbf.setFeature("http://apache.org/xml/features/nonvalidating/load-external-dtd", false);
+        dbf.setFeature("http://xml.org/sax/features/external-parameter-entities", false);
+        dbf.setFeature("http://xml.org/sax/features/external-general-entities", false);
+        dbf.setXIncludeAware(false);
+        dbf.setExpandEntityReferences(false);
 
-        DocumentBuilder documentBuilder = documentFactory.newDocumentBuilder();
+        DocumentBuilder documentBuilder = dbf.newDocumentBuilder();
         return documentBuilder.newDocument();
     }
 
     private static void createJacocoXmlFile(Document document, File file) throws TransformerException {
         String xmlFilePath = file.toString() + "/xmlJacoco.xml";
-        TransformerFactory transformerFactory = TransformerFactory.newInstance();
-        transformerFactory.setFeature(javax.xml.XMLConstants.FEATURE_SECURE_PROCESSING, true);
-        Transformer transformer = transformerFactory.newTransformer();
+        TransformerFactory factory = TransformerFactory.newInstance();
+        factory.setFeature(javax.xml.XMLConstants.FEATURE_SECURE_PROCESSING, true);
+        factory.setAttribute(XMLConstants.ACCESS_EXTERNAL_DTD, "");
+        factory.setAttribute(XMLConstants.ACCESS_EXTERNAL_STYLESHEET, "");
+        Transformer transformer = factory.newTransformer();
         DOMSource domSource = new DOMSource(document);
         StreamResult streamResult = new StreamResult(new File(xmlFilePath));
 
