@@ -18,9 +18,10 @@ package org.apache.camel.component.digitalocean.producer;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.myjeeva.digitalocean.common.ResourceType;
+import com.myjeeva.digitalocean.exception.DigitalOceanException;
+import com.myjeeva.digitalocean.exception.RequestUnsuccessfulException;
 import com.myjeeva.digitalocean.pojo.Action;
 import com.myjeeva.digitalocean.pojo.Actions;
 import com.myjeeva.digitalocean.pojo.Backups;
@@ -55,7 +56,7 @@ public class DigitalOceanDropletsProducer extends DigitalOceanProducer {
     }
 
     @Override
-    public void process(Exchange exchange) throws Exception {
+    public void process(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
 
         DigitalOceanOperations op = determineOperation(exchange);
         if (op != DigitalOceanOperations.create && op != DigitalOceanOperations.list
@@ -157,72 +158,72 @@ public class DigitalOceanDropletsProducer extends DigitalOceanProducer {
         }
     }
 
-    private void getDroplet(Exchange exchange) throws Exception {
+    private void getDroplet(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         Droplet droplet = getEndpoint().getDigitalOceanClient().getDropletInfo(dropletId);
         LOG.trace("Droplet {}", droplet);
-        exchange.getOut().setBody(droplet);
+        exchange.getMessage().setBody(droplet);
     }
 
-    private void getDroplets(Exchange exchange) throws Exception {
+    private void getDroplets(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         Droplets droplets = getEndpoint().getDigitalOceanClient().getAvailableDroplets(configuration.getPage(),
                 configuration.getPerPage());
         LOG.trace("All Droplets : page {} / {} per page [{}] ", configuration.getPage(), configuration.getPerPage(),
                 droplets.getDroplets());
-        exchange.getOut().setBody(droplets.getDroplets());
+        exchange.getMessage().setBody(droplets.getDroplets());
     }
 
-    private void getDropletActions(Exchange exchange) throws Exception {
+    private void getDropletActions(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         Actions actions = getEndpoint().getDigitalOceanClient().getAvailableDropletActions(dropletId, configuration.getPage(),
                 configuration.getPerPage());
         LOG.trace("Actions for Droplet {} : page {} / {} per page [{}] ", dropletId, configuration.getPage(),
                 configuration.getPerPage(), actions.getActions());
-        exchange.getOut().setBody(actions.getActions());
+        exchange.getMessage().setBody(actions.getActions());
     }
 
-    private void getDropletKernels(Exchange exchange) throws Exception {
+    private void getDropletKernels(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         Kernels kernels = getEndpoint().getDigitalOceanClient().getDropletKernels(dropletId, configuration.getPage(),
                 configuration.getPerPage());
         LOG.trace("Kernels for Droplet {} : page {} / {} per page [{}] ", dropletId, configuration.getPage(),
                 configuration.getPerPage(), kernels.getKernels());
-        exchange.getOut().setBody(kernels.getKernels());
+        exchange.getMessage().setBody(kernels.getKernels());
     }
 
-    private void getDropletBackups(Exchange exchange) throws Exception {
+    private void getDropletBackups(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         Backups backups = getEndpoint().getDigitalOceanClient().getDropletBackups(dropletId, configuration.getPage(),
                 configuration.getPerPage());
         LOG.trace("Backups for Droplet {} : page {} / {} per page [{}] ", dropletId, configuration.getPage(),
                 configuration.getPerPage(), backups.getBackups());
-        exchange.getOut().setBody(backups.getBackups());
+        exchange.getMessage().setBody(backups.getBackups());
     }
 
-    private void getDropletSnapshots(Exchange exchange) throws Exception {
+    private void getDropletSnapshots(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         Snapshots snapshots = getEndpoint().getDigitalOceanClient().getDropletSnapshots(dropletId, configuration.getPage(),
                 configuration.getPerPage());
         LOG.trace("Snapshots for Droplet {} : page {} / {} per page [{}] ", dropletId, configuration.getPage(),
                 configuration.getPerPage(), snapshots.getSnapshots());
-        exchange.getOut().setBody(snapshots.getSnapshots());
+        exchange.getMessage().setBody(snapshots.getSnapshots());
     }
 
-    private void getDropletNeighbors(Exchange exchange) throws Exception {
+    private void getDropletNeighbors(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         Droplets droplets = getEndpoint().getDigitalOceanClient().getDropletNeighbors(dropletId, configuration.getPage());
         LOG.trace("Neighbors for Droplet {} : page {} [{}] ", dropletId, configuration.getPage(), droplets.getDroplets());
-        exchange.getOut().setBody(droplets.getDroplets());
+        exchange.getMessage().setBody(droplets.getDroplets());
     }
 
-    private void getAllDropletNeighbors(Exchange exchange) throws Exception {
+    private void getAllDropletNeighbors(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         Neighbors neighbors = getEndpoint().getDigitalOceanClient().getAllDropletNeighbors(configuration.getPage());
         LOG.trace("All Neighbors : page {} [{}] ", configuration.getPage(), neighbors.getNeighbors());
-        exchange.getOut().setBody(neighbors.getNeighbors());
+        exchange.getMessage().setBody(neighbors.getNeighbors());
     }
 
-    private void deleteDroplet(Exchange exchange) throws Exception {
+    private void deleteDroplet(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         Delete delete = getEndpoint().getDigitalOceanClient().deleteDroplet(dropletId);
         LOG.trace("Delete Droplet {}", delete);
-        exchange.getOut().setBody(delete);
+        exchange.getMessage().setBody(delete);
     }
 
     @SuppressWarnings("unchecked")
-    private void createDroplet(Exchange exchange) throws Exception {
+    private void createDroplet(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         Message in = exchange.getIn();
 
         Droplet droplet = new Droplet();
@@ -247,7 +248,7 @@ public class DigitalOceanDropletsProducer extends DigitalOceanProducer {
 
         if (ObjectHelper.isNotEmpty(exchange.getIn().getHeader(DigitalOceanHeaders.DROPLET_KEYS))) {
             List<String> keys = (List<String>) exchange.getIn().getHeader(DigitalOceanHeaders.DROPLET_KEYS);
-            droplet.setKeys(keys.stream().map(Key::new).collect(Collectors.toList()));
+            droplet.setKeys(keys.stream().map(Key::new).toList());
         }
 
         if (ObjectHelper.isNotEmpty(exchange.getIn().getHeader(DigitalOceanHeaders.DROPLET_ENABLE_BACKUPS))) {
@@ -279,12 +280,12 @@ public class DigitalOceanDropletsProducer extends DigitalOceanProducer {
             droplet.setNames((List<String>) in.getHeader(DigitalOceanHeaders.NAMES));
             Droplets droplets = getEndpoint().getDigitalOceanClient().createDroplets(droplet);
             LOG.trace("Droplets created {}", droplets);
-            exchange.getOut().setBody(droplets.getDroplets());
+            exchange.getMessage().setBody(droplets.getDroplets());
         } else if (ObjectHelper.isNotEmpty(exchange.getIn().getHeader(DigitalOceanHeaders.NAME))) {
             droplet.setName(in.getHeader(DigitalOceanHeaders.NAME, String.class));
             droplet = getEndpoint().getDigitalOceanClient().createDroplet(droplet);
             LOG.trace("Droplet created {}", droplet);
-            exchange.getOut().setBody(droplet);
+            exchange.getMessage().setBody(droplet);
         } else {
             throw new IllegalArgumentException(
                     DigitalOceanHeaders.NAMES + " or " + DigitalOceanHeaders.NAME + " must be specified");
@@ -292,7 +293,7 @@ public class DigitalOceanDropletsProducer extends DigitalOceanProducer {
 
     }
 
-    private void restoreDroplet(Exchange exchange) throws Exception {
+    private void restoreDroplet(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         if (ObjectHelper.isEmpty(exchange.getIn().getHeader(DigitalOceanHeaders.IMAGE_ID))) {
             throw new IllegalArgumentException(DigitalOceanHeaders.IMAGE_ID + " must be specified");
         }
@@ -300,11 +301,11 @@ public class DigitalOceanDropletsProducer extends DigitalOceanProducer {
         Action action = getEndpoint().getDigitalOceanClient().restoreDroplet(dropletId,
                 exchange.getIn().getHeader(DigitalOceanHeaders.IMAGE_ID, Integer.class));
         LOG.trace("DropletAction Restore [{}] ", action);
-        exchange.getOut().setBody(action);
+        exchange.getMessage().setBody(action);
 
     }
 
-    private void resizeDroplet(Exchange exchange) throws Exception {
+    private void resizeDroplet(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         if (ObjectHelper.isEmpty(exchange.getIn().getHeader(DigitalOceanHeaders.DROPLET_SIZE))) {
             throw new IllegalArgumentException(DigitalOceanHeaders.DROPLET_SIZE + " must be specified");
         }
@@ -312,10 +313,10 @@ public class DigitalOceanDropletsProducer extends DigitalOceanProducer {
         Action action = getEndpoint().getDigitalOceanClient().resizeDroplet(dropletId,
                 exchange.getIn().getHeader(DigitalOceanHeaders.DROPLET_SIZE, String.class));
         LOG.trace("DropletAction Resize [{}] ", action);
-        exchange.getOut().setBody(action);
+        exchange.getMessage().setBody(action);
     }
 
-    private void rebuildDroplet(Exchange exchange) throws Exception {
+    private void rebuildDroplet(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         if (ObjectHelper.isEmpty(exchange.getIn().getHeader(DigitalOceanHeaders.IMAGE_ID))) {
             throw new IllegalArgumentException(DigitalOceanHeaders.IMAGE_ID + " must be specified");
         }
@@ -323,10 +324,10 @@ public class DigitalOceanDropletsProducer extends DigitalOceanProducer {
         Action action = getEndpoint().getDigitalOceanClient().rebuildDroplet(dropletId,
                 exchange.getIn().getHeader(DigitalOceanHeaders.IMAGE_ID, Integer.class));
         LOG.trace("Rebuild Droplet {} : [{}] ", dropletId, action);
-        exchange.getOut().setBody(action);
+        exchange.getMessage().setBody(action);
     }
 
-    private void renameDroplet(Exchange exchange) throws Exception {
+    private void renameDroplet(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         if (ObjectHelper.isEmpty(exchange.getIn().getHeader(DigitalOceanHeaders.NAME))) {
             throw new IllegalArgumentException(DigitalOceanHeaders.NAME + " must be specified");
         }
@@ -334,10 +335,10 @@ public class DigitalOceanDropletsProducer extends DigitalOceanProducer {
         Action action = getEndpoint().getDigitalOceanClient().renameDroplet(dropletId,
                 exchange.getIn().getHeader(DigitalOceanHeaders.NAME, String.class));
         LOG.trace("Rename Droplet {} : [{}] ", dropletId, action);
-        exchange.getOut().setBody(action);
+        exchange.getMessage().setBody(action);
     }
 
-    private void changeDropletKernel(Exchange exchange) throws Exception {
+    private void changeDropletKernel(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         if (ObjectHelper.isEmpty(exchange.getIn().getHeader(DigitalOceanHeaders.KERNEL_ID))) {
             throw new IllegalArgumentException(DigitalOceanHeaders.KERNEL_ID + " must be specified");
         }
@@ -345,70 +346,70 @@ public class DigitalOceanDropletsProducer extends DigitalOceanProducer {
         Action action = getEndpoint().getDigitalOceanClient().changeDropletKernel(dropletId,
                 exchange.getIn().getHeader(DigitalOceanHeaders.KERNEL_ID, Integer.class));
         LOG.trace("Change Droplet {} : [{}] ", dropletId, action);
-        exchange.getOut().setBody(action);
+        exchange.getMessage().setBody(action);
     }
 
-    private void resetDropletPassword(Exchange exchange) throws Exception {
+    private void resetDropletPassword(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         Action action = getEndpoint().getDigitalOceanClient().resetDropletPassword(dropletId);
         LOG.trace("Reset password Droplet {} : [{}] ", dropletId, action);
-        exchange.getOut().setBody(action);
+        exchange.getMessage().setBody(action);
     }
 
-    private void powerOnDroplet(Exchange exchange) throws Exception {
+    private void powerOnDroplet(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         Action action = getEndpoint().getDigitalOceanClient().powerOnDroplet(dropletId);
         LOG.trace("Power on Droplet {} : [{}] ", dropletId, action);
-        exchange.getOut().setBody(action);
+        exchange.getMessage().setBody(action);
     }
 
-    private void powerOffDroplet(Exchange exchange) throws Exception {
+    private void powerOffDroplet(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         Action action = getEndpoint().getDigitalOceanClient().powerOffDroplet(dropletId);
         LOG.trace("Power off Droplet {} : [{}] ", dropletId, action);
-        exchange.getOut().setBody(action);
+        exchange.getMessage().setBody(action);
     }
 
-    private void shutdownDroplet(Exchange exchange) throws Exception {
+    private void shutdownDroplet(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         Action action = getEndpoint().getDigitalOceanClient().shutdownDroplet(dropletId);
         LOG.trace("Shutdown Droplet {} : [{}] ", dropletId, action);
-        exchange.getOut().setBody(action);
+        exchange.getMessage().setBody(action);
     }
 
-    private void powerCycleDroplet(Exchange exchange) throws Exception {
+    private void powerCycleDroplet(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         Action action = getEndpoint().getDigitalOceanClient().powerCycleDroplet(dropletId);
         LOG.trace("Power cycle Droplet {} : [{}] ", dropletId, action);
-        exchange.getOut().setBody(action);
+        exchange.getMessage().setBody(action);
     }
 
-    private void enableDropletBackups(Exchange exchange) throws Exception {
+    private void enableDropletBackups(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         Action action = getEndpoint().getDigitalOceanClient().enableDropletBackups(dropletId);
         LOG.trace("Enable backups Droplet {} : [{}] ", dropletId, action);
-        exchange.getOut().setBody(action);
+        exchange.getMessage().setBody(action);
     }
 
-    private void disableDropletBackups(Exchange exchange) throws Exception {
+    private void disableDropletBackups(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         Action action = getEndpoint().getDigitalOceanClient().disableDropletBackups(dropletId);
         LOG.trace("Disable backups for Droplet {} : [{}] ", dropletId, action);
-        exchange.getOut().setBody(action);
+        exchange.getMessage().setBody(action);
     }
 
-    private void enableDropletIpv6(Exchange exchange) throws Exception {
+    private void enableDropletIpv6(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         Action action = getEndpoint().getDigitalOceanClient().enableDropletIpv6(dropletId);
         LOG.trace("Enable IP v6 for Droplet {} : [{}] ", dropletId, action);
-        exchange.getOut().setBody(action);
+        exchange.getMessage().setBody(action);
     }
 
-    private void enableDropletPrivateNetworking(Exchange exchange) throws Exception {
+    private void enableDropletPrivateNetworking(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         Action action = getEndpoint().getDigitalOceanClient().enableDropletPrivateNetworking(dropletId);
         LOG.trace("Enable private networking for Droplet {} : [{}] ", dropletId, action);
-        exchange.getOut().setBody(action);
+        exchange.getMessage().setBody(action);
     }
 
-    private void rebootDroplet(Exchange exchange) throws Exception {
+    private void rebootDroplet(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         Action action = getEndpoint().getDigitalOceanClient().rebootDroplet(dropletId);
         LOG.trace("Reboot Droplet {} : [{}] ", dropletId, action);
-        exchange.getOut().setBody(action);
+        exchange.getMessage().setBody(action);
     }
 
-    private void takeDropletSnapshot(Exchange exchange) throws Exception {
+    private void takeDropletSnapshot(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         Action action;
 
         if (ObjectHelper.isNotEmpty(exchange.getIn().getHeader(DigitalOceanHeaders.NAME))) {
@@ -419,10 +420,10 @@ public class DigitalOceanDropletsProducer extends DigitalOceanProducer {
         }
 
         LOG.trace("Take Snapshot for Droplet {} : [{}] ", dropletId, action);
-        exchange.getOut().setBody(action);
+        exchange.getMessage().setBody(action);
     }
 
-    private void tagDroplet(Exchange exchange) throws Exception {
+    private void tagDroplet(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         if (ObjectHelper.isEmpty(exchange.getIn().getHeader(DigitalOceanHeaders.NAME))) {
             throw new IllegalArgumentException(DigitalOceanHeaders.NAME + " must be specified");
         }
@@ -431,10 +432,10 @@ public class DigitalOceanDropletsProducer extends DigitalOceanProducer {
         resources.add(new Resource(dropletId.toString(), ResourceType.DROPLET));
         Response response = getEndpoint().getDigitalOceanClient().tagResources(dropletId.toString(), resources);
         LOG.trace("Tag Droplet {} : [{}] ", dropletId, response);
-        exchange.getOut().setBody(response);
+        exchange.getMessage().setBody(response);
     }
 
-    private void untagDroplet(Exchange exchange) throws Exception {
+    private void untagDroplet(Exchange exchange) throws RequestUnsuccessfulException, DigitalOceanException {
         if (ObjectHelper.isEmpty(exchange.getIn().getHeader(DigitalOceanHeaders.NAME))) {
             throw new IllegalArgumentException(DigitalOceanHeaders.NAME + " must be specified");
         }
@@ -443,7 +444,7 @@ public class DigitalOceanDropletsProducer extends DigitalOceanProducer {
         resources.add(new Resource(dropletId.toString(), ResourceType.DROPLET));
         Response response = getEndpoint().getDigitalOceanClient().untagResources(dropletId.toString(), resources);
         LOG.trace("Untag Droplet {} : [{}] ", dropletId, response);
-        exchange.getOut().setBody(response);
+        exchange.getMessage().setBody(response);
     }
 
 }
