@@ -16,11 +16,11 @@
  */
 package org.apache.camel.component.jetty;
 
-import java.io.IOException;
+import java.io.File;
 import java.security.Principal;
-import java.util.Arrays;
+import java.util.List;
 
-import javax.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletRequest;
 
 import org.apache.camel.BindToRegistry;
 import org.apache.camel.Exchange;
@@ -28,12 +28,13 @@ import org.apache.camel.Processor;
 import org.apache.camel.RuntimeCamelException;
 import org.apache.camel.builder.RouteBuilder;
 import org.apache.camel.http.base.HttpOperationFailedException;
-import org.eclipse.jetty.security.ConstraintMapping;
-import org.eclipse.jetty.security.ConstraintSecurityHandler;
+import org.eclipse.jetty.ee10.servlet.security.ConstraintMapping;
+import org.eclipse.jetty.ee10.servlet.security.ConstraintSecurityHandler;
+import org.eclipse.jetty.security.Constraint;
 import org.eclipse.jetty.security.HashLoginService;
 import org.eclipse.jetty.security.SecurityHandler;
 import org.eclipse.jetty.security.authentication.BasicAuthenticator;
-import org.eclipse.jetty.util.security.Constraint;
+import org.eclipse.jetty.util.resource.URLResourceFactory;
 import org.junit.jupiter.api.Test;
 
 import static org.apache.camel.test.junit5.TestSupport.assertIsInstanceOf;
@@ -44,9 +45,11 @@ import static org.junit.jupiter.api.Assertions.fail;
 public class HttpBasicAuthTest extends BaseJettyTest {
 
     @BindToRegistry("myAuthHandler")
-    public SecurityHandler getSecurityHandler() throws IOException {
-        Constraint constraint = new Constraint(Constraint.__BASIC_AUTH, "user");
-        constraint.setAuthenticate(true);
+    public SecurityHandler getSecurityHandler() {
+        Constraint constraint = new Constraint.Builder()
+                .name("BASIC")
+                .roles("user")
+                .authorization(Constraint.Authorization.SPECIFIC_ROLE).build();
 
         ConstraintMapping cm = new ConstraintMapping();
         cm.setPathSpec("/*");
@@ -54,17 +57,20 @@ public class HttpBasicAuthTest extends BaseJettyTest {
 
         ConstraintSecurityHandler sh = new ConstraintSecurityHandler();
         sh.setAuthenticator(new BasicAuthenticator());
-        sh.setConstraintMappings(Arrays.asList(new ConstraintMapping[] { cm }));
+        sh.setConstraintMappings(List.of(cm));
 
-        HashLoginService loginService = new HashLoginService("MyRealm", "src/test/resources/myRealm.properties");
+        HashLoginService loginService = new HashLoginService(
+                "MyRealm",
+                new URLResourceFactory().newResource(
+                        new File("src/test/resources/myRealm.properties").toURI()));
         sh.setLoginService(loginService);
-        sh.setConstraintMappings(Arrays.asList(new ConstraintMapping[] { cm }));
+        sh.setConstraintMappings(List.of(cm));
 
         return sh;
     }
 
     @Test
-    public void testHttpBasicAuth() throws Exception {
+    public void testHttpBasicAuth() {
         String out
                 = template.requestBody("http://localhost:{{port}}/test?authMethod=Basic&authUsername=donald&authPassword=duck",
                         "Hello World", String.class);
@@ -72,7 +78,7 @@ public class HttpBasicAuthTest extends BaseJettyTest {
     }
 
     @Test
-    public void testHttpBasicAuthInvalidPassword() throws Exception {
+    public void testHttpBasicAuthInvalidPassword() {
         try {
             template.requestBody("http://localhost:{{port}}/test?authMethod=Basic&authUsername=donald&authPassword=sorry",
                     "Hello World", String.class);
@@ -84,12 +90,12 @@ public class HttpBasicAuthTest extends BaseJettyTest {
     }
 
     @Override
-    protected RouteBuilder createRouteBuilder() throws Exception {
+    protected RouteBuilder createRouteBuilder() {
         return new RouteBuilder() {
             @Override
-            public void configure() throws Exception {
+            public void configure() {
                 from("jetty://http://localhost:{{port}}/test?handlers=myAuthHandler").process(new Processor() {
-                    public void process(Exchange exchange) throws Exception {
+                    public void process(Exchange exchange) {
                         HttpServletRequest req = exchange.getIn().getBody(HttpServletRequest.class);
                         assertNotNull(req);
                         Principal user = req.getUserPrincipal();
