@@ -18,6 +18,7 @@ package org.apache.camel.component.kubernetes;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 import org.apache.camel.test.junit5.CamelTestSupport;
 import org.junit.jupiter.api.BeforeEach;
@@ -30,21 +31,25 @@ public class KubernetesTestSupport extends CamelTestSupport {
     protected String host;
     protected Logger log = LoggerFactory.getLogger(getClass());
 
-    // The Camel-Kubernetes tests are based on vagrant fabric8-image
-    // https://github.com/fabric8io/fabric8-installer/tree/master/vagrant/openshift
-    // by running the vagrant image you'll have an environment with
-    // Openshift/Kubernetes installed
+    /*
+     * NOTE: The Camel-Kubernetes tests were originally meant to be run along with the vagrant fabric8-image
+     * https://github.com/fabric8io/fabric8-installer/tree/master/vagrant/openshift which would provide an
+     * environment with Openshift/Kubernetes installed.
+     *
+     * However, since that image is deprecated, you can also run the tests with kind. See the README.md file
+     * on the root of the component directory for details.
+     */
 
     @Override
     @BeforeEach
     public void setUp() throws Exception {
         // INSERT credentials and host here
-        authToken = "";
-        host = "https://192.168.99.100:8443";
+        authToken = System.getProperty("kubernetes.test.auth");
+        host = System.getProperty("kubernetes.test.host");
         super.setUp();
     }
 
     public static String toUrlEncoded(String str) throws UnsupportedEncodingException {
-        return URLEncoder.encode(str, "UTF-8");
+        return URLEncoder.encode(str, StandardCharsets.UTF_8);
     }
 }
