@@ -16,47 +16,42 @@
  */
 package org.apache.camel.component.rest.openapi;
 
-import java.io.InputStream;
-import java.net.MalformedURLException;
+import java.io.File;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Optional;
+import java.util.Set;
 import java.util.function.Function;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import io.apicurio.datamodels.Library;
-import io.apicurio.datamodels.core.models.Document;
-import io.apicurio.datamodels.core.models.common.SecurityRequirement;
-import io.apicurio.datamodels.openapi.models.OasDocument;
-import io.apicurio.datamodels.openapi.models.OasOperation;
-import io.apicurio.datamodels.openapi.models.OasParameter;
-import io.apicurio.datamodels.openapi.models.OasPathItem;
-import io.apicurio.datamodels.openapi.models.OasPaths;
-import io.apicurio.datamodels.openapi.models.OasResponse;
-import io.apicurio.datamodels.openapi.v2.models.Oas20Document;
-import io.apicurio.datamodels.openapi.v2.models.Oas20Operation;
-import io.apicurio.datamodels.openapi.v2.models.Oas20Parameter;
-import io.apicurio.datamodels.openapi.v2.models.Oas20SecurityDefinitions;
-import io.apicurio.datamodels.openapi.v2.models.Oas20SecurityScheme;
-import io.apicurio.datamodels.openapi.v3.models.Oas30Document;
-import io.apicurio.datamodels.openapi.v3.models.Oas30Operation;
-import io.apicurio.datamodels.openapi.v3.models.Oas30Parameter;
-import io.apicurio.datamodels.openapi.v3.models.Oas30Response;
-import io.apicurio.datamodels.openapi.v3.models.Oas30SecurityScheme;
-import io.apicurio.datamodels.openapi.v3.models.Oas30Server;
+import com.atlassian.oai.validator.OpenApiInteractionValidator;
+import com.atlassian.oai.validator.report.LevelResolver;
+import com.atlassian.oai.validator.report.ValidationReport;
+import io.swagger.parser.OpenAPIParser;
+import io.swagger.v3.oas.models.OpenAPI;
+import io.swagger.v3.oas.models.Operation;
+import io.swagger.v3.oas.models.PathItem;
+import io.swagger.v3.oas.models.PathItem.HttpMethod;
+import io.swagger.v3.oas.models.Paths;
+import io.swagger.v3.oas.models.parameters.Parameter;
+import io.swagger.v3.oas.models.responses.ApiResponse;
+import io.swagger.v3.oas.models.security.SecurityRequirement;
+import io.swagger.v3.oas.models.security.SecurityScheme;
+import io.swagger.v3.oas.models.security.SecurityScheme.In;
+import io.swagger.v3.oas.models.servers.Server;
+import io.swagger.v3.parser.core.models.ParseOptions;
+import io.swagger.v3.parser.core.models.SwaggerParseResult;
 import org.apache.camel.CamelContext;
 import org.apache.camel.Category;
 import org.apache.camel.Consumer;
@@ -64,7 +59,12 @@ import org.apache.camel.Endpoint;
 import org.apache.camel.ExchangePattern;
 import org.apache.camel.Processor;
 import org.apache.camel.Producer;
+import org.apache.camel.component.rest.openapi.validator.DefaultRequestValidationCustomizer;
+import org.apache.camel.component.rest.openapi.validator.RequestValidationCustomizer;
+import org.apache.camel.component.rest.openapi.validator.RequestValidator;
+import org.apache.camel.component.rest.openapi.validator.RestOpenApiOperation;
 import org.apache.camel.spi.Metadata;
+import org.apache.camel.spi.Resource;
 import org.apache.camel.spi.RestConfiguration;
 import org.apache.camel.spi.UriEndpoint;
 import org.apache.camel.spi.UriParam;
@@ -75,6 +75,8 @@ import org.apache.camel.support.ResourceHelper;
 import org.apache.camel.util.ObjectHelper;
 import org.apache.camel.util.StringHelper;
 import org.apache.camel.util.UnsafeUriCharactersEncoder;
+import org.apache.commons.io.FileUtils;
+import org.slf4j.LoggerFactory;
 
 import static java.util.Optional.ofNullable;
 import static org.apache.camel.component.rest.openapi.RestOpenApiHelper.isHostParam;
@@ -90,14 +92,9 @@ import static org.apache.camel.util.StringHelper.notEmpty;
  * RestProducerFactory interface.
  */
 @UriEndpoint(firstVersion = "3.1.0", scheme = "rest-openapi", title = "REST OpenApi",
-             syntax = "rest-openapi:specificationUri#operationId", category = { Category.OPENAPI, Category.REST, Category.API },
+             syntax = "rest-openapi:specificationUri#operationId", category = { Category.REST, Category.API },
              producerOnly = true)
 public final class RestOpenApiEndpoint extends DefaultEndpoint {
-
-    /**
-     * Regex pattern used to extract path parts from OpenApi specification paths
-     */
-    private static final Pattern PATH_EXTRACTOR = Pattern.compile("/([^{}/]+)");
 
     /**
      * Remaining parameters specified in the Endpoint URI.
@@ -157,6 +154,21 @@ public final class RestOpenApiEndpoint extends DefaultEndpoint {
              defaultValueNote = "By default loads `openapi.json` file", label = "producer")
     private URI specificationUri = RestOpenApiComponent.DEFAULT_SPECIFICATION_URI;
 
+    @UriParam(description = "Enable validation of requests against the configured OpenAPI specification",
+              defaultValue = "false")
+    private boolean requestValidationEnabled;
+
+    @UriParam(description = "If request validation is enabled, this option provides the capability to customize"
+                            + " the creation of OpenApiInteractionValidator used to validate requests.",
+              defaultValue = "org.apache.camel.component.rest.openapi.validator.DefaultRequestValidationCustomizer")
+    private RequestValidationCustomizer requestValidationCustomizer;
+
+    @UriParam(description = "Levels for specific OpenAPI request validation options. Multiple options can be"
+                            + " specified as URI options prefixed by 'validation.'. For example, validation.request.body=ERROR"
+                            + "&validation.request.body.unexpected=IGNORED. Supported values are INFO, ERROR, WARN & IGNORE.",
+              prefix = "validation.", multiValue = true)
+    private Map<String, Object> requestValidationLevels = new HashMap<>();
+
     public RestOpenApiEndpoint() {
         // help tooling instantiate endpoint
     }
@@ -183,92 +195,45 @@ public final class RestOpenApiEndpoint extends DefaultEndpoint {
     @Override
     public Producer createProducer() throws Exception {
         final CamelContext camelContext = getCamelContext();
-        final Document openapiDoc = loadSpecificationFrom(camelContext, specificationUri);
+        final OpenAPI openapiDoc = loadSpecificationFrom(camelContext, specificationUri);
+        final Paths paths = openapiDoc.getPaths();
 
-        final OasPaths paths = ((OasDocument) openapiDoc).paths;
-
-        for (final OasPathItem path : paths.getItems()) {
-            final Optional<Entry<HttpMethod, OasOperation>> maybeOperationEntry = getOperationMap(path).entrySet()
-                    .stream().filter(operationEntry -> operationId.equals(operationEntry.getValue().operationId))
+        for (final Entry<String, PathItem> pathEntry : paths.entrySet()) {
+            final PathItem path = pathEntry.getValue();
+            Map<PathItem.HttpMethod, Operation> operationMap = path.readOperationsMap();
+            final Optional<Entry<PathItem.HttpMethod, Operation>> maybeOperationEntry = operationMap.entrySet()
+                    .stream().filter(operationEntry -> operationId.equals(operationEntry.getValue().getOperationId()))
                     .findAny();
 
             if (maybeOperationEntry.isPresent()) {
-                final Entry<HttpMethod, OasOperation> operationEntry = maybeOperationEntry.get();
+                final Entry<PathItem.HttpMethod, Operation> operationEntry = maybeOperationEntry.get();
 
-                final OasOperation operation = operationEntry.getValue();
-                Map<String, OasParameter> pathParameters;
+                final Operation operation = operationEntry.getValue();
+                Map<String, Parameter> pathParameters;
                 if (operation.getParameters() != null) {
                     pathParameters = operation.getParameters().stream()
-                            .filter(p -> "path".equals(p.in))
-                            .collect(Collectors.toMap(OasParameter::getName, Function.identity()));
+                            .filter(p -> "path".equals(p.getIn()))
+                            .collect(Collectors.toMap(Parameter::getName, Function.identity()));
                 } else {
                     pathParameters = new HashMap<>();
                 }
-                final String uriTemplate = resolveUri(path.getPath(), pathParameters);
+                final String uriTemplate = resolveUri(pathEntry.getKey(), pathParameters);
 
                 final HttpMethod httpMethod = operationEntry.getKey();
                 final String method = httpMethod.name();
 
                 return createProducerFor(openapiDoc, operation, method, uriTemplate);
             }
+
         }
 
-        String supportedOperations = paths.getItems().stream().flatMap(p -> getOperationMap(p).values().stream())
-                .map(p -> p.operationId).collect(Collectors.joining(", "));
+        final String supportedOperations = paths.values().stream().flatMap(p -> p.readOperations().stream())
+                .map(Operation::getOperationId).collect(Collectors.joining(", "));
+
         throw new IllegalArgumentException(
                 "The specified operation with ID: `" + operationId
                                            + "` cannot be found in the OpenApi specification loaded from `" + specificationUri
                                            + "`. Operations defined in the specification are: " + supportedOperations);
-    }
-
-    /**
-     * Generates an operationId from provided OpenApi specification path and operation
-     */
-    private void generateMissingOperationId(String path, OasOperation operation) {
-        if (null == operation.operationId) {
-            final StringBuilder idBuilder = new StringBuilder(operation.getMethod().toLowerCase());
-            final Matcher matcher = PATH_EXTRACTOR.matcher(path);
-            while (matcher.find()) {
-                idBuilder.append('-').append(matcher.group(1));
-            }
-            operation.operationId = idBuilder.toString();
-        }
-    }
-
-    private Map<HttpMethod, OasOperation> getOperationMap(OasPathItem path) {
-        Map<HttpMethod, OasOperation> result = new LinkedHashMap<>();
-        final String uriPath = path.getPath();
-
-        if (path.get != null) {
-            generateMissingOperationId(uriPath, path.get);
-            result.put(HttpMethod.GET, path.get);
-        }
-        if (path.put != null) {
-            generateMissingOperationId(uriPath, path.put);
-            result.put(HttpMethod.PUT, path.put);
-        }
-        if (path.post != null) {
-            generateMissingOperationId(uriPath, path.post);
-            result.put(HttpMethod.POST, path.post);
-        }
-        if (path.delete != null) {
-            generateMissingOperationId(uriPath, path.delete);
-            result.put(HttpMethod.DELETE, path.delete);
-        }
-        if (path.patch != null) {
-            generateMissingOperationId(uriPath, path.patch);
-            result.put(HttpMethod.PATCH, path.patch);
-        }
-        if (path.head != null) {
-            generateMissingOperationId(uriPath, path.head);
-            result.put(HttpMethod.HEAD, path.head);
-        }
-        if (path.options != null) {
-            generateMissingOperationId(uriPath, path.options);
-            result.put(HttpMethod.OPTIONS, path.options);
-        }
-
-        return result;
     }
 
     public String getBasePath() {
@@ -332,32 +297,67 @@ public final class RestOpenApiEndpoint extends DefaultEndpoint {
         this.specificationUri = notNull(specificationUri, "specificationUri");
     }
 
+    public void setRequestValidationCustomizer(
+            RequestValidationCustomizer requestValidationCustomizer) {
+        this.requestValidationCustomizer = requestValidationCustomizer;
+    }
+
+    public RequestValidationCustomizer getRequestValidationCustomizer() {
+        return requestValidationCustomizer;
+    }
+
+    public void setRequestValidationEnabled(boolean requestValidationEnabled) {
+        this.requestValidationEnabled = requestValidationEnabled;
+    }
+
+    public boolean isRequestValidationEnabled() {
+        return requestValidationEnabled;
+    }
+
+    public void setRequestValidationLevels(Map<String, Object> requestValidationLevels) {
+        this.requestValidationLevels = requestValidationLevels;
+    }
+
+    public Map<String, Object> getRequestValidationLevels() {
+        return requestValidationLevels;
+    }
+
     RestOpenApiComponent component() {
         return (RestOpenApiComponent) getComponent();
     }
 
     Producer createProducerFor(
-            final Document openapi, final OasOperation operation, final String method,
+            final OpenAPI openapi, final Operation operation, final String method,
             final String uriTemplate)
             throws Exception {
-        final String basePath = determineBasePath(openapi);
-        final String componentEndpointUri = "rest:" + method + ":" + basePath + ":" + uriTemplate;
 
-        final CamelContext camelContext = getCamelContext();
-
-        final Endpoint endpoint = camelContext.getEndpoint(componentEndpointUri);
+        CamelContext camelContext = getCamelContext();
 
         Map<String, Object> params = determineEndpointParameters(openapi, operation);
         boolean hasHost = params.containsKey("host");
+
+        String basePath = determineBasePath(openapi);
+        String componentEndpointUri = "rest:" + method + ":" + basePath + ":" + uriTemplate;
+        if (hasHost) {
+            componentEndpointUri += "?host=" + params.get("host");
+        }
+
+        Endpoint endpoint = camelContext.getEndpoint(componentEndpointUri);
         // let the rest endpoint configure itself
         endpoint.configureProperties(params);
 
+        RestOpenApiComponent component = component();
+        RequestValidator requestValidator = null;
+        if (component.isRequestValidationEnabled() || requestValidationEnabled) {
+            requestValidator = configureRequestValidator(openapi, operation, method, uriTemplate);
+        }
+
         // if there is a host then we should use this hardcoded host instead of any Header that may have an existing
         // Host header from some other HTTP input, and if so then lets remove it
-        return new RestOpenApiProducer(endpoint.createAsyncProducer(), hasHost);
+        return new RestOpenApiProducer(endpoint.createProducer(), hasHost, requestValidator);
     }
 
-    String determineBasePath(final Document openapi) {
+    String determineBasePath(final OpenAPI openapi) {
         if (isNotEmpty(basePath)) {
             return basePath;
         }
@@ -367,7 +367,7 @@ public final class RestOpenApiEndpoint extends DefaultEndpoint {
             return componentBasePath;
         }
 
-        final String specificationBasePath = getBasePathFromOasDocument((OasDocument) openapi);
+        final String specificationBasePath = getBasePathFromOpenApi(openapi);
 
         if (isNotEmpty(specificationBasePath)) {
             return specificationBasePath;
@@ -385,22 +385,15 @@ public final class RestOpenApiEndpoint extends DefaultEndpoint {
         return RestOpenApiComponent.DEFAULT_BASE_PATH;
     }
 
-    public static String getBasePathFromOasDocument(final OasDocument openapi) {
+    public static String getBasePathFromOpenApi(final OpenAPI openApi) {
         String basePath = null;
-        if (openapi instanceof Oas20Document) {
-            basePath = ((Oas20Document) openapi).basePath;
-        } else if (openapi instanceof Oas30Document) {
-            if (((Oas30Document) openapi).getServers() != null
-                    && ((Oas30Document) openapi).getServers().get(0) != null) {
-                try {
-                    Oas30Server server = (Oas30Server) ((Oas30Document) openapi).getServers().get(0);
-                    if (server.variables != null && server.variables.get("basePath") != null) {
-                        basePath = server.variables.get("basePath").default_;
-                    }
-                    if (basePath == null) {
-                        // parse server url as fallback
-                        URL serverUrl = new URL(parseVariables(((Oas30Document) openapi).getServers().get(0).url, server));
+        if (openApi.getServers() != null) {
+            for (Server server : openApi.getServers()) {
+                if (server.getUrl() != null) {
+                    try {
+                        URI serverUrl = new URI(parseVariables(server.getUrl(), server));
                         basePath = serverUrl.getPath();
+                        // Is this really necessary?
                         if (basePath.indexOf("//") == 0) {
                             // strip off the first "/" if double "/" exists
                             basePath = basePath.substring(1);
@@ -408,28 +401,25 @@ public final class RestOpenApiEndpoint extends DefaultEndpoint {
                         if ("/".equals(basePath)) {
                             basePath = "";
                         }
+                    } catch (URISyntaxException e) {
+                        //not a valid whole url, just the basePath
+                        basePath = server.getUrl();
                     }
-
-                } catch (MalformedURLException e) {
-                    //not a valid whole url, just the basePath
-                    basePath = ((Oas30Document) openapi).getServers().get(0).url;
                 }
             }
-
         }
         return basePath;
-
     }
 
-    public static String parseVariables(String url, Oas30Server server) {
+    public static String parseVariables(String url, Server server) {
         Pattern p = Pattern.compile("\\{(.*?)\\}");
         Matcher m = p.matcher(url);
         while (m.find()) {
 
-            String var = m.group(1);
-            if (server != null && server.variables != null && server.variables.get(var) != null) {
-                String varValue = server.variables.get(var).default_;
-                url = url.replace("{" + var + "}", varValue);
+            String variable = m.group(1);
+            if (server != null && server.getVariables() != null && server.getVariables().get(variable) != null) {
+                String varValue = server.getVariables().get(variable).getDefault();
+                url = url.replace("{" + variable + "}", varValue);
             }
         }
         return url;
@@ -439,7 +429,7 @@ public final class RestOpenApiEndpoint extends DefaultEndpoint {
         return Optional.ofNullable(componentName).orElse(component().getComponentName());
     }
 
-    Map<String, Object> determineEndpointParameters(final Document openapi, final OasOperation operation) {
+    Map<String, Object> determineEndpointParameters(final OpenAPI openapi, final Operation operation) {
         final Map<String, Object> parameters = new HashMap<>();
 
         final String componentName = determineComponentName();
@@ -447,7 +437,7 @@ public final class RestOpenApiEndpoint extends DefaultEndpoint {
             parameters.put("producerComponentName", componentName);
         }
 
-        final String host = determineHost(openapi);
+        final String host = determineHost(openapi, operation);
         if (host != null) {
             parameters.put("host", host);
         }
@@ -457,20 +447,15 @@ public final class RestOpenApiEndpoint extends DefaultEndpoint {
         // what we consume is what the API defined by OpenApi specification
         // produces
         List<String> specificationLevelConsumers = new ArrayList<>();
-        if (openapi instanceof Oas20Document) {
-            specificationLevelConsumers = ((Oas20Document) openapi).produces;
-        }
-        List<String> operationLevelConsumers = new ArrayList<>();
-        if (operation instanceof Oas20Operation) {
-            operationLevelConsumers = ((Oas20Operation) operation).produces;
-        } else if (operation instanceof Oas30Operation) {
-            Oas30Operation oas30Operation = (Oas30Operation) operation;
-            if (oas30Operation.responses != null) {
-                for (OasResponse response : oas30Operation.responses.getResponses()) {
-                    operationLevelConsumers.addAll(((Oas30Response) response).content.keySet());
+        Set<String> operationLevelConsumers = new java.util.HashSet<>();
+        if (operation.getResponses() != null) {
+            for (ApiResponse response : operation.getResponses().values()) {
+                if (response.getContent() != null) {
+                    operationLevelConsumers.addAll(response.getContent().keySet());
                 }
             }
         }
+
         final String determinedConsumes = determineOption(specificationLevelConsumers, operationLevelConsumers,
                 component.getConsumes(), consumes);
 
@@ -478,22 +463,11 @@ public final class RestOpenApiEndpoint extends DefaultEndpoint {
             parameters.put("consumes", determinedConsumes);
         }
 
-        // what we produce is what the API defined by OpenApi specification
-        // consumes
-
+        // what we produce is what the API defined by OpenApi specification consumes
         List<String> specificationLevelProducers = new ArrayList<>();
-        if (openapi instanceof Oas20Document) {
-            specificationLevelProducers = ((Oas20Document) openapi).consumes;
-        }
-        List<String> operationLevelProducers = new ArrayList<>();
-        if (operation instanceof Oas20Operation) {
-            operationLevelProducers = ((Oas20Operation) operation).consumes;
-        } else if (operation instanceof Oas30Operation) {
-            Oas30Operation oas30Operation = (Oas30Operation) operation;
-            if (oas30Operation.requestBody != null && oas30Operation.requestBody.content != null) {
-                operationLevelProducers.addAll(oas30Operation.requestBody.content.keySet());
-            }
-
+        Set<String> operationLevelProducers = new java.util.HashSet<>();
+        if (operation.getRequestBody() != null && operation.getRequestBody().getContent() != null) {
+            operationLevelProducers.addAll(operation.getRequestBody().getContent().keySet());
         }
 
         final String determinedProducers = determineOption(specificationLevelProducers, operationLevelProducers,
@@ -522,10 +496,30 @@ public final class RestOpenApiEndpoint extends DefaultEndpoint {
             componentParameters.put("sslContextParameters", component.getSslContextParameters());
         }
 
+        final Map<Object, Object> nestedParameters = new HashMap<>();
         if (!componentParameters.isEmpty()) {
-            final Map<Object, Object> nestedParameters = new HashMap<>();
             nestedParameters.put("component", componentParameters);
+        }
 
+        // Add rest endpoint parameters
+        if (this.parameters != null) {
+            if (operation.getParameters() != null) {
+                for (Map.Entry<String, Object> entry : this.parameters.entrySet()) {
+                    for (Parameter param : operation.getParameters()) {
+                        // skip parameters that are part of the operation as path as otherwise
+                        // it will be duplicated as query parameter as well
+                        boolean clash = "path".equals(param.getIn()) && entry.getKey().equals(param.getName());
+                        if (!clash) {
+                            nestedParameters.put(entry.getKey(), entry.getValue());
+                        }
+                    }
+                }
+            } else {
+                nestedParameters.putAll(this.parameters);
+            }
+        }
+
+        if (!nestedParameters.isEmpty()) {
             // we're trying to set RestEndpoint.parameters['component']
             parameters.put("parameters", nestedParameters);
         }
@@ -533,7 +527,7 @@ public final class RestOpenApiEndpoint extends DefaultEndpoint {
         return parameters;
     }
 
-    String determineHost(final Document openapi) {
+    String determineHost(final OpenAPI openApi, Operation operation) {
         if (isNotEmpty(host)) {
             return host;
         }
@@ -543,34 +537,36 @@ public final class RestOpenApiEndpoint extends DefaultEndpoint {
             return componentHost;
         }
 
-        if (openapi instanceof Oas20Document) {
-            final String openapiScheme = pickBestScheme(specificationUri.getScheme(), ((Oas20Document) openapi).schemes);
-            final String openapiHost = ((Oas20Document) openapi).host;
-
-            if (isNotEmpty(openapiScheme) && isNotEmpty(openapiHost)) {
-                return openapiScheme + "://" + openapiHost;
-            }
-        } else if (openapi instanceof Oas30Document) {
-            //In OpenApi 3.0, scheme/host are in servers url section
-            //But there could be many servers url(like one for production and one for test)
-            //Use first one here
-            Oas30Document oas30Document = (Oas30Document) openapi;
-            if (oas30Document.getServers() != null
-                    && oas30Document.getServers().get(0) != null) {
-                try {
-
-                    URL serverUrl = new URL(
-                            parseVariables(oas30Document.getServers().get(0).url,
-                                    (Oas30Server) oas30Document.getServers().get(0)));
-                    final String openapiScheme = serverUrl.getProtocol();
-                    final String openapiHost = serverUrl.getHost();
-                    if (isNotEmpty(openapiScheme) && isNotEmpty(openapiHost)) {
-                        return openapiScheme + "://" + openapiHost;
-                    }
-                } catch (MalformedURLException e) {
-                    throw new IllegalStateException(e);
+        URI absoluteURI = null;
+        URI relativeURI = null;
+        Set<URI> operationURIs = getURIs(operation.getServers());
+        // Check if at least one of them is absolute:
+        Optional<URI> opURI = operationURIs.stream().filter(uri -> uri.isAbsolute()).findFirst();
+        if (opURI.isEmpty()) {
+            // look for absolute at api level + possible relative URI for the operation
+            Set<URI> apiURIs = getURIs(openApi.getServers());
+            for (URI uri : apiURIs) {
+                if (uri.isAbsolute()) {
+                    absoluteURI = uri;
+                } else {
+                    relativeURI = uri;
                 }
             }
+            for (URI uri : operationURIs) {
+                if (absoluteURI != null) {
+                    absoluteURI = absoluteURI.resolve(uri);
+                } else if (relativeURI != null && !relativeURI.equals(uri)) {
+                    // concatenate the relativeURIs
+                    relativeURI = relativeURI.resolve(uri);
+                } else {
+                    relativeURI = uri;
+                }
+            }
+        } else {
+            absoluteURI = opURI.get();
+        }
+        if (absoluteURI != null) {
+            return absoluteURI.toString();
         }
 
         final CamelContext camelContext = getCamelContext();
@@ -604,16 +600,30 @@ public final class RestOpenApiEndpoint extends DefaultEndpoint {
                                         + " and there is no global RestConfiguration with those properties");
     }
 
-    String literalPathParameterValue(final OasParameter parameter) {
+    private Set<URI> getURIs(List<Server> servers) {
+        Set<URI> uris = new java.util.HashSet<>();
+        if (servers != null) {
+            for (Server server : servers) {
+                try {
+                    uris.add(new URI(parseVariables(server.getUrl(), server)));
+                } catch (URISyntaxException e) {
+                    // TODO Auto-generated catch block
+                    e.printStackTrace();
+                }
+            }
+        }
+        return uris;
+    }
+
+    String literalPathParameterValue(final Parameter parameter) {
         final String name = parameter.getName();
 
         final String valueStr = String.valueOf(parameters.get(name));
-        final String encoded = UnsafeUriCharactersEncoder.encode(valueStr);
 
-        return encoded;
+        return UnsafeUriCharactersEncoder.encode(valueStr);
     }
 
-    String literalQueryParameterValue(final OasParameter parameter) {
+    String literalQueryParameterValue(final Parameter parameter) {
         final String name = parameter.getName();
 
         final String valueStr = String.valueOf(parameters.get(name));
@@ -622,7 +632,7 @@ public final class RestOpenApiEndpoint extends DefaultEndpoint {
         return name + "=" + encoded;
     }
 
-    String queryParameter(final OasParameter parameter) {
+    String queryParameter(final Parameter parameter) {
         final String name = parameter.getName();
         if (ObjectHelper.isEmpty(name)) {
             return "";
@@ -635,7 +645,7 @@ public final class RestOpenApiEndpoint extends DefaultEndpoint {
         return queryParameterExpression(parameter);
     }
 
-    String resolveUri(final String uriTemplate, final Map<String, OasParameter> pathParameters) {
+    String resolveUri(final String uriTemplate, final Map<String, Parameter> pathParameters) {
         if (pathParameters.isEmpty()) {
             return uriTemplate;
         }
@@ -656,7 +666,7 @@ public final class RestOpenApiEndpoint extends DefaultEndpoint {
             final String name = uriTemplate.substring(start + 1, end);
 
             if (parameters.containsKey(name)) {
-                final OasParameter parameter = pathParameters.get(name);
+                final Parameter parameter = pathParameters.get(name);
                 final Object value = literalPathParameterValue(parameter);
                 resolved.append(value);
             } else {
@@ -674,8 +684,41 @@ public final class RestOpenApiEndpoint extends DefaultEndpoint {
         return resolved.toString();
     }
 
+    RequestValidator configureRequestValidator(OpenAPI openapi, Operation operation, String method, String uriTemplate) {
+        RestOpenApiComponent component = component();
+        RequestValidationCustomizer validationCustomizer = requestValidationCustomizer;
+        if (validationCustomizer == null) {
+            validationCustomizer = component.getRequestValidationCustomizer();
+        }
+
+        if (validationCustomizer == null) {
+            validationCustomizer = new DefaultRequestValidationCustomizer();
+        }
+
+        RestOpenApiOperation restOpenApiOperation = new RestOpenApiOperation(operation, method, uriTemplate);
+        OpenApiInteractionValidator.Builder builder = OpenApiInteractionValidator.createFor(openapi);
+
+        LevelResolver.Builder levelResolverBuilder = LevelResolver.create();
+        levelResolverBuilder.withDefaultLevel(ValidationReport.Level.IGNORE)
+                .withLevel("validation.request.body", ValidationReport.Level.ERROR)
+                .withLevel("validation.request.contentType.notAllowed", ValidationReport.Level.ERROR)
+                .withLevel("validation.request.path.missing", ValidationReport.Level.ERROR)
+                .withLevel("validation.request.parameter.header.missing", ValidationReport.Level.ERROR)
+                .withLevel("validation.request.parameter.query.missing", ValidationReport.Level.ERROR);
+
+        requestValidationLevels.forEach((key, level) -> {
+            levelResolverBuilder.withLevel("validation." + key,
+                    ValidationReport.Level.valueOf(level.toString().toUpperCase()));
+        });
+        builder.withLevelResolver(levelResolverBuilder.build());
+
+        validationCustomizer.customizeOpenApiInteractionValidator(builder);
+
+        return new RequestValidator(builder.build(), restOpenApiOperation, validationCustomizer);
+    }
+
     static String determineOption(
-            final List<String> specificationLevel, final List<String> operationLevel,
+            final List<String> specificationLevel, final Set<String> operationLevel,
             final String componentLevel, final String endpointLevel) {
         if (isNotEmpty(endpointLevel)) {
             return endpointLevel;
@@ -696,55 +739,30 @@ public final class RestOpenApiEndpoint extends DefaultEndpoint {
         return null;
     }
 
-    static Stream<OasParameter> determineQueryParameters(final Document openapi, final OasOperation operation) {
-        final List<SecurityRequirement> securityRequirements = operation.security;
-        final List<OasParameter> apiKeyQueryParameters = new ArrayList<>();
+    static Stream<Parameter> determineQueryParameters(final OpenAPI openApi, final Operation operation) {
+        final List<SecurityRequirement> securityRequirements = operation.getSecurity();
+        final List<Parameter> securityQueryParameters = new ArrayList<>();
         if (securityRequirements != null) {
-            if (openapi instanceof Oas20Document) {
-                Oas20Document oas20Document = (Oas20Document) openapi;
-                Oas20SecurityDefinitions securityDefinitions = oas20Document.securityDefinitions;
+            final Map<String, SecurityScheme> securityDefinitions = openApi.getComponents().getSecuritySchemes();
 
-                for (final SecurityRequirement securityRequirement : securityRequirements) {
-                    for (final String securityRequirementName : securityRequirement.getSecurityRequirementNames()) {
-                        final Oas20SecurityScheme securitySchemeDefinition = securityDefinitions
-                                .getSecurityScheme(securityRequirementName);
-                        if (securitySchemeDefinition.in != null
-                                && securitySchemeDefinition.in.equals("query")) {
-                            Oas20Parameter securityParameter = new Oas20Parameter(securitySchemeDefinition.name);
-                            securityParameter.required = true;
-                            securityParameter.type = "string";
-                            securityParameter.description = securitySchemeDefinition.description;
-                            apiKeyQueryParameters.add(securityParameter);
-                        }
-
+            for (final Map<String, List<String>> securityRequirement : securityRequirements) {
+                for (final String securityRequirementName : securityRequirement.keySet()) {
+                    final SecurityScheme securitySchemeDefinition = securityDefinitions
+                            .get(securityRequirementName);
+                    if (In.QUERY.equals(securitySchemeDefinition.getIn())) {
+                        securityQueryParameters.add(new Parameter().name(securitySchemeDefinition.getName())
+                                .required(true).description(securitySchemeDefinition.getDescription()));
+                        // Not needed to set schema or style?
                     }
                 }
-            } else if (openapi instanceof Oas30Document) {
-                Oas30Document oas30Document = (Oas30Document) openapi;
-                for (final SecurityRequirement securityRequirement : securityRequirements) {
-                    for (final String securityRequirementName : securityRequirement.getSecurityRequirementNames()) {
-                        final Oas30SecurityScheme securitySchemeDefinition = oas30Document.components
-                                .getSecurityScheme(securityRequirementName);
-                        if (securitySchemeDefinition.in != null && securitySchemeDefinition.in.equals("query")) {
-                            Oas30Parameter securityParameter = new Oas30Parameter(securitySchemeDefinition.name);
-                            securityParameter.required = true;
-                            securityParameter.description = securitySchemeDefinition.description;
-                            apiKeyQueryParameters.add(securityParameter);
-                        }
-
-                    }
-                }
-            } else {
-                throw new IllegalStateException("We only support OpenApi 2.0 or 3.0 document here");
             }
-
         }
 
         if (operation.getParameters() != null) {
-            return Stream.concat(apiKeyQueryParameters.stream(),
-                    operation.getParameters().stream().filter(p -> "query".equals(p.in)));
+            return Stream.concat(securityQueryParameters.stream(),
+                    operation.getParameters().stream().filter(p -> "query".equals(p.getIn())));
         } else {
-            return apiKeyQueryParameters.stream();
+            return securityQueryParameters.stream();
         }
     }
 
@@ -771,31 +789,63 @@ public final class RestOpenApiEndpoint extends DefaultEndpoint {
     }
 
     /**
-     * Loads the OpenApi definition model from the given path. Tries to resolve the resource using Camel's resource
-     * loading support, if it fails uses OpenApi's resource loading support instead.
+     * Loads the OpenApi definition model from the given path. This delegates directly to the OpenAPI parser. If the
+     * specification can't be read there is no OpenAPI object in the result.
      *
      * @param  uri          URI of the specification
      * @param  camelContext context to use
      * @return              the specification
      */
-    static Document loadSpecificationFrom(final CamelContext camelContext, final URI uri) {
-        final ObjectMapper mapper = new ObjectMapper();
-
+    static OpenAPI loadSpecificationFrom(final CamelContext camelContext, final URI uri) {
         final String uriAsString = uri.toString();
+        final OpenAPIParser openApiParser = new OpenAPIParser();
+        final ParseOptions options = new ParseOptions();
+        options.setResolveFully(true);
 
-        try (InputStream stream = ResourceHelper.resolveMandatoryResourceAsInputStream(camelContext, uriAsString)) {
-            final JsonNode node = mapper.readTree(stream);
+        File tmpFileToDelete = null;
+        try {
+            Resource resource = ResourceHelper.resolveMandatoryResource(camelContext, uriAsString);
+            //if location can not be used in Swagger API (e.g. in case of "bean;")
+            // the content of the resource has to be copied into a tmp file for swagger API.
+            String locationToSearch;
+            if ("bean:".equals(ResourceHelper.getScheme(uriAsString))) {
+                Path tmpFile = Files.createTempFile(null, null);
+                tmpFileToDelete = tmpFile.toFile();
+                tmpFileToDelete.deleteOnExit();
+                FileUtils.copyInputStreamToFile(resource.getInputStream(), tmpFileToDelete);
+                locationToSearch = tmpFile.toUri().toString();
+            } else {
+                locationToSearch = resource.getURI().toString();
+            }
 
-            return Library.readDocument(node);
-        } catch (final Exception e) {
+            final SwaggerParseResult openApi = openApiParser.readLocation(locationToSearch, null, options);
 
+            if (openApi != null && openApi.getOpenAPI() != null) {
+                checkV2specification(openApi.getOpenAPI(), uri);
+                return openApi.getOpenAPI();
+            }
+        } catch (Exception e) {
             throw new IllegalArgumentException(
-                    "The given OpenApi specification could not be loaded from `" + uri
-                                               + "`. Tried loading using Camel's resource resolution and using OpenApi's own resource resolution."
-                                               + " OpenApi tends to swallow exceptions while parsing, try specifying Java system property `debugParser`"
-                                               + " (e.g. `-DdebugParser=true`), the exception that occurred when loading using Camel's resource"
-                                               + " loader follows",
-                    e);
+                    "The given OpenApi specification could not be loaded from `" + uri + "`.", e);
+        } finally {
+            if (tmpFileToDelete != null) {
+                tmpFileToDelete.delete();
+            }
+        }
+
+        // In theory there should be a message in the parse result but it has disappeared...
+        throw new IllegalArgumentException(
+                "The given OpenApi specification could not be loaded from `" + uri + "`.");
+    }
+
+    private static void checkV2specification(OpenAPI openAPI, final URI uri) {
+        if (openAPI.getExtensions() != null) {
+            Object swaggerVersion = openAPI.getExtensions().get("x-original-swagger-version");
+            if (swaggerVersion != null) {
+                LoggerFactory.getLogger(RestOpenApiEndpoint.class).info(
+                        "The specification {} was upgraded from {} to OpenAPI {}",
+                        uri, swaggerVersion, openAPI.getSpecVersion());
+            }
         }
     }
 
@@ -813,26 +863,15 @@ public final class RestOpenApiEndpoint extends DefaultEndpoint {
         // there is no support for WebSocket (Scheme.WS, Scheme.WSS)
     }
 
-    static String queryParameterExpression(final OasParameter parameter) {
+    static String queryParameterExpression(final Parameter parameter) {
         final String name = parameter.getName();
 
         final StringBuilder expression = new StringBuilder(name).append("={").append(name);
-        if (parameter.required == null || !parameter.required) {
+        if (parameter.getRequired() == null || !parameter.getRequired()) {
             expression.append('?');
         }
         expression.append('}');
 
         return expression.toString();
     }
-
-    enum HttpMethod {
-        POST,
-        GET,
-        PUT,
-        PATCH,
-        DELETE,
-        HEAD,
-        OPTIONS
-    }
-
 }
