@@ -17,7 +17,6 @@
 package org.apache.camel.spring.health;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.apache.camel.CamelContext;
 import org.apache.camel.health.HealthCheck;
@@ -36,10 +35,10 @@ public class HealthCheckRegistryTest {
     public void testHealthCheckRoutes() throws Exception {
         CamelContext context = createContext("org/apache/camel/spring/health/HealthCheckRegistryTest.xml");
 
-        HealthCheckRegistry hc = context.getExtension(HealthCheckRegistry.class);
+        HealthCheckRegistry hc = context.getCamelContextExtension().getContextPlugin(HealthCheckRegistry.class);
         assertNotNull(hc);
 
-        List<HealthCheck> checks = hc.stream().collect(Collectors.toList());
+        List<HealthCheck> checks = hc.stream().toList();
         assertEquals(2, checks.size());
 
         for (HealthCheck check : checks) {
