@@ -18,6 +18,7 @@ package org.apache.camel.dataformat.thrift;
 
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.nio.charset.StandardCharsets;
 
 import org.apache.camel.CamelContext;
 import org.apache.camel.CamelContextAware;
@@ -100,7 +101,7 @@ public class ThriftDataFormat extends ServiceSupport
         }
     }
 
-    public void setInstanceClass(String className) throws Exception {
+    public void setInstanceClass(String className) {
         ObjectHelper.notNull(className, "ThriftDataFormat instaceClass");
         instanceClassName = className;
     }
@@ -136,11 +137,11 @@ public class ThriftDataFormat extends ServiceSupport
 
         if (contentTypeFormat.equals(CONTENT_TYPE_FORMAT_JSON)) {
             serializer = new TSerializer(new TJSONProtocol.Factory());
-            IOUtils.write(serializer.toString((TBase) graph, "UTF-8"), outputStream, "UTF-8");
+            IOUtils.write(serializer.toString((TBase) graph), outputStream, StandardCharsets.UTF_8);
             contentTypeHeader = CONTENT_TYPE_HEADER_JSON;
         } else if (contentTypeFormat.equals(CONTENT_TYPE_FORMAT_SIMPLE_JSON)) {
             serializer = new TSerializer(new TSimpleJSONProtocol.Factory());
-            IOUtils.write(serializer.toString((TBase) graph, "UTF-8"), outputStream, "UTF-8");
+            IOUtils.write(serializer.toString((TBase) graph), outputStream, StandardCharsets.UTF_8);
             contentTypeHeader = CONTENT_TYPE_HEADER_JSON;
         } else if (contentTypeFormat.equals(CONTENT_TYPE_FORMAT_BINARY)) {
             serializer = new TSerializer(new TBinaryProtocol.Factory());
@@ -185,14 +186,14 @@ public class ThriftDataFormat extends ServiceSupport
         Class<?> instanceClass = context.getClassResolver().resolveMandatoryClass(className);
         if (TBase.class.isAssignableFrom(instanceClass)) {
             try {
-                return (TBase) instanceClass.newInstance();
+                return (TBase) instanceClass.getDeclaredConstructor().newInstance();
             } catch (final Exception ex) {
                 throw new CamelException(
-                        "Can't set the defaultInstance of ThriftDataFormat with " + className + ", caused by " + ex);
+                        "Cannot set the defaultInstance of ThriftDataFormat with " + className + ", caused by " + ex);
             }
         } else {
             throw new CamelException(
-                    "Can't set the defaultInstance of ThriftDataFormat with " + className
+                    "Cannot set the defaultInstance of ThriftDataFormat with " + className
                                      + ", as the class is not a subClass of org.apache.thrift.TBase");
         }
     }
