@@ -22,6 +22,7 @@ import org.apache.camel.Processor;
 import org.apache.camel.Producer;
 import org.apache.camel.component.twitter.AbstractTwitterEndpoint;
 import org.apache.camel.component.twitter.TwitterConfiguration;
+import org.apache.camel.component.twitter.TwitterConstants;
 import org.apache.camel.component.twitter.TwitterHelper;
 import org.apache.camel.component.twitter.consumer.AbstractTwitterConsumerHandler;
 import org.apache.camel.component.twitter.data.TimelineType;
@@ -30,14 +31,15 @@ import org.apache.camel.spi.UriEndpoint;
 import org.apache.camel.spi.UriParam;
 import org.apache.camel.spi.UriPath;
 
+import static org.apache.camel.component.twitter.TwitterConstants.SCHEME_TIMELINE;
 import static org.apache.camel.component.twitter.data.TimelineType.USER;
 
 /**
  * Send tweets and receive tweets from user's timeline.
  */
-@UriEndpoint(firstVersion = "2.10.0", scheme = "twitter-timeline", title = "Twitter Timeline",
+@UriEndpoint(firstVersion = "2.10.0", scheme = SCHEME_TIMELINE, title = "Twitter Timeline",
              syntax = "twitter-timeline:timelineType",
-             category = { Category.API, Category.CLOUD, Category.SOCIAL })
+             category = { Category.SAAS, Category.SOCIAL }, headersClass = TwitterConstants.class)
 public class TwitterTimelineEndpoint extends AbstractTwitterEndpoint {
 
     @UriPath(description = "The timeline type to produce/consume.")
@@ -45,8 +47,10 @@ public class TwitterTimelineEndpoint extends AbstractTwitterEndpoint {
     private TimelineType timelineType;
     @UriParam(description = "The username when using timelineType=user")
     private String user;
+    @UriParam(description = "The list name when using timelineType=list")
+    private String list;
 
-    public TwitterTimelineEndpoint(String uri, String remaining, String user, TwitterTimelineComponent component,
+    public TwitterTimelineEndpoint(String uri, String remaining, String user, String list, TwitterTimelineComponent component,
                                    TwitterConfiguration properties) {
         super(uri, component, properties);
         if (remaining == null) {
@@ -54,6 +58,7 @@ public class TwitterTimelineEndpoint extends AbstractTwitterEndpoint {
         }
         this.timelineType = component.getCamelContext().getTypeConverter().convertTo(TimelineType.class, remaining);
         this.user = user;
+        this.list = list;
     }
 
     public String getUser() {
@@ -62,6 +67,14 @@ public class TwitterTimelineEndpoint extends AbstractTwitterEndpoint {
 
     public void setUser(String user) {
         this.user = user;
+    }
+
+    public String getList() {
+        return list;
+    }
+
+    public void setList(String list) {
+        this.list = list;
     }
 
     @Override
@@ -85,11 +98,11 @@ public class TwitterTimelineEndpoint extends AbstractTwitterEndpoint {
             case MENTIONS:
                 handler = new MentionsConsumerHandler(this);
                 break;
-            case RETWEETSOFME:
-                handler = new RetweetsConsumerHandler(this);
+            case LIST:
+                handler = new UserListConsumerHandler(this, user, list);
                 break;
             case USER:
-                if (user == null || user.trim().isEmpty()) {
+                if (user == null || user.isBlank()) {
                     throw new IllegalArgumentException("Fetch type set to USER TIMELINE but no user was set.");
                 } else {
                     handler = new UserConsumerHandler(this, user);
