@@ -18,7 +18,6 @@ package org.apache.camel.health;
 
 import java.util.Collection;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.camel.CamelContext;
@@ -33,9 +32,14 @@ import org.apache.camel.util.ObjectHelper;
 public interface HealthCheckRegistry extends CamelContextAware, StaticService, IdAware {
 
     /**
+     * Service factory name.
+     */
+    String NAME = "default-registry";
+
+    /**
      * Service factory key.
      */
-    String FACTORY = "health-check-registry";
+    String FACTORY = "health-check/" + NAME;
 
     /**
      * Whether Health Check is enabled globally
@@ -75,7 +79,7 @@ public interface HealthCheckRegistry extends CamelContextAware, StaticService, I
     default Collection<String> getCheckIDs() {
         return stream()
                 .map(HealthCheck::getId)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -84,7 +88,8 @@ public interface HealthCheckRegistry extends CamelContextAware, StaticService, I
     default Optional<HealthCheck> getCheck(String id) {
         return stream()
                 .filter(r -> ObjectHelper.equal(r.getId(), id)
-                        || ObjectHelper.equal(r.getId().replace("-health-check", ""), id))
+                        || ObjectHelper.equal(r.getId().replace("-health-check", ""), id)
+                        || ObjectHelper.equal(r.getId().replace("route:", ""), id))
                 .findFirst();
     }
 
@@ -94,20 +99,82 @@ public interface HealthCheckRegistry extends CamelContextAware, StaticService, I
     Optional<HealthCheckRepository> getRepository(String id);
 
     /**
-     * Returns an optional {@link HealthCheckRegistry}, by default no registry is present and it must be explicit
+     * Returns an optional {@link HealthCheckRegistry}, by default no registry is present, and it must be explicit
      * activated. Components can register/unregister health checks in response to life-cycle events (i.e. start/stop).
      *
-     * This registry is not used by the camel context but it is up to the impl to properly use it, i.e.
-     *
-     * - a RouteController could use the registry to decide to restart a route with failing health checks - spring boot
+     * This registry is not used by the camel context, but it is up to the implementation to properly use it, such as: -
+     * a RouteController could use the registry to decide to restart a route with failing health checks - spring boot
      * could integrate such checks within its health endpoint or make it available only as separate endpoint.
      */
     static HealthCheckRegistry get(CamelContext context) {
-        return context.getExtension(HealthCheckRegistry.class);
+        return context != null ? context.getCamelContextExtension().getContextPlugin(HealthCheckRegistry.class) : null;
     }
 
     /**
      * Returns a sequential {@code Stream} with the known {@link HealthCheck} as its source.
      */
     Stream<HealthCheck> stream();
+
+    /**
+     * Loads custom health checks by scanning classpath.
+     */
+    void loadHealthChecks();
+
+    /**
+     * Pattern to exclude health checks from being invoked by Camel when checking healths. Multiple patterns can be
+     * separated by comma.
+     */
+    String getExcludePattern();
+
+    /**
+     * Pattern to exclude health checks from being invoked by Camel when checking healths. Multiple patterns can be
+     * separated by comma.
+     */
+    void setExcludePattern(String excludePattern);
+
+    /**
+     * Whether the given health check has been excluded
+     */
+    boolean isExcluded(HealthCheck healthCheck);
+
+    /**
+     * Sets the level of details to exposure as result of invoking health checks. There are the following levels: full,
+     * default, oneline
+     *
+     * The full level will include all details and status from all the invoked health checks.
+     *
+     * The default level will report UP if everything is okay, and only include detailed information for health checks
+     * that was DOWN.
+     *
+     * The oneline level will only report either UP or DOWN.
+     */
+    void setExposureLevel(String exposureLevel);
+
+    /**
+     * The exposure level
+     */
+    String getExposureLevel();
+
+    /**
+     * The initial state of health-checks (readiness). There are the following states: UP, DOWN, UNKNOWN.
+     *
+     * By default, the state is DOWN, is regarded as being pessimistic/careful. This means that the overall health
+     * checks may report as DOWN during startup and then only if everything is up and running flip to being UP.
+     *
+     * Setting the initial state to UP, is regarded as being optimistic. This means that the overall health checks may
+     * report as UP during startup and then if a consumer or other service is in fact un-healthy, then the health-checks
+     * can flip being DOWN.
+     *
+     * Setting the state to UNKNOWN means that some health-check would be reported in unknown state, especially during
+     * early bootstrap where a consumer may not be fully initialized or validated a connection to a remote system.
+     *
+     * This option allows to pre-configure the state for different modes.
+     */
+    void setInitialState(HealthCheck.State initialState);
+
+    /**
+     * The initial state of health-checks.
+     */
+    HealthCheck.State getInitialState();
+
 }
