@@ -21,13 +21,13 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
+import org.apache.camel.Exchange;
 import org.apache.camel.cloud.ServiceDefinition;
 import org.apache.camel.cloud.ServiceFilter;
 
 public class BlacklistServiceFilter implements ServiceFilter {
-    private List<ServiceDefinition> services;
+    private final List<ServiceDefinition> services;
 
     public BlacklistServiceFilter() {
         this.services = new ArrayList<>();
@@ -67,7 +67,7 @@ public class BlacklistServiceFilter implements ServiceFilter {
 
     /**
      * Add a server to the known list of servers to blacklist.
-     * 
+     *
      * @param serverString servers separated by comma in the format:
      *                     [service@]host:port,[service@]host2:port,[service@]host3:port and so on.
      */
@@ -83,10 +83,9 @@ public class BlacklistServiceFilter implements ServiceFilter {
     }
 
     @Override
-    public List<ServiceDefinition> apply(List<ServiceDefinition> services) {
+    public List<ServiceDefinition> apply(Exchange exchange, List<ServiceDefinition> services) {
         return services.stream().filter(
-                s -> this.services.stream().noneMatch(b -> b.matches(s))).collect(
-                        Collectors.toList());
+                s -> this.services.stream().noneMatch(b -> b.matches(s))).toList();
     }
 
     List<ServiceDefinition> getBlacklistedServices() {
