@@ -18,22 +18,20 @@ package org.apache.camel.model;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import javax.xml.bind.annotation.XmlAccessType;
-import javax.xml.bind.annotation.XmlAccessorType;
-import javax.xml.bind.annotation.XmlAttribute;
-import javax.xml.bind.annotation.XmlElement;
-import javax.xml.bind.annotation.XmlElementRef;
-import javax.xml.bind.annotation.XmlRootElement;
-import javax.xml.bind.annotation.XmlTransient;
+import jakarta.xml.bind.annotation.XmlAccessType;
+import jakarta.xml.bind.annotation.XmlAccessorType;
+import jakarta.xml.bind.annotation.XmlAttribute;
+import jakarta.xml.bind.annotation.XmlElement;
+import jakarta.xml.bind.annotation.XmlElementRef;
+import jakarta.xml.bind.annotation.XmlRootElement;
+import jakarta.xml.bind.annotation.XmlTransient;
 
 import org.apache.camel.Expression;
 import org.apache.camel.LoggingLevel;
 import org.apache.camel.Predicate;
 import org.apache.camel.Processor;
 import org.apache.camel.builder.ExpressionBuilder;
-import org.apache.camel.processor.errorhandler.RedeliveryPolicy;
 import org.apache.camel.spi.AsPredicate;
 import org.apache.camel.spi.Metadata;
 import org.apache.camel.support.ExpressionToPredicateAdapter;
@@ -46,34 +44,7 @@ import org.apache.camel.util.ObjectHelper;
 @XmlRootElement(name = "onException")
 @XmlAccessorType(XmlAccessType.FIELD)
 public class OnExceptionDefinition extends OutputDefinition<OnExceptionDefinition> {
-    @XmlElement(name = "exception", required = true)
-    private List<String> exceptions = new ArrayList<>();
-    @XmlElement(name = "onWhen")
-    @AsPredicate
-    private WhenDefinition onWhen;
-    @XmlElement(name = "retryWhile")
-    @AsPredicate
-    private ExpressionSubElementDefinition retryWhile;
-    @XmlElement(name = "redeliveryPolicy")
-    private RedeliveryPolicyDefinition redeliveryPolicyType;
-    @XmlAttribute(name = "redeliveryPolicyRef")
-    private String redeliveryPolicyRef;
-    @XmlElement(name = "handled")
-    @AsPredicate
-    private ExpressionSubElementDefinition handled;
-    @XmlElement(name = "continued")
-    @AsPredicate
-    private ExpressionSubElementDefinition continued;
-    @XmlAttribute(name = "onRedeliveryRef")
-    private String onRedeliveryRef;
-    @XmlAttribute(name = "onExceptionOccurredRef")
-    private String onExceptionOccurredRef;
-    @XmlAttribute(name = "useOriginalMessage")
-    @Metadata(javaType = "java.lang.Boolean")
-    private String useOriginalMessage;
-    @XmlAttribute(name = "useOriginalBody")
-    @Metadata(javaType = "java.lang.Boolean")
-    private String useOriginalBody;
+
     @XmlTransient
     private Predicate handledPolicy;
     @XmlTransient
@@ -87,11 +58,45 @@ public class OnExceptionDefinition extends OutputDefinition<OnExceptionDefinitio
     @XmlTransient
     private boolean routeScoped = true;
 
+    @XmlElement(name = "exception", required = true)
+    private List<String> exceptions = new ArrayList<>();
+    @XmlElement(name = "onWhen")
+    @AsPredicate
+    private WhenDefinition onWhen;
+    @XmlElement(name = "retryWhile")
+    @AsPredicate
+    @Metadata(label = "advanced")
+    private ExpressionSubElementDefinition retryWhile;
+    @XmlElement(name = "redeliveryPolicy")
+    private RedeliveryPolicyDefinition redeliveryPolicyType;
+    @XmlAttribute(name = "redeliveryPolicyRef")
+    @Metadata(label = "advanced")
+    private String redeliveryPolicyRef;
+    @XmlElement(name = "handled")
+    @AsPredicate
+    private ExpressionSubElementDefinition handled;
+    @XmlElement(name = "continued")
+    @AsPredicate
+    @Metadata(label = "advanced")
+    private ExpressionSubElementDefinition continued;
+    @XmlAttribute(name = "onRedeliveryRef")
+    @Metadata(label = "advanced")
+    private String onRedeliveryRef;
+    @XmlAttribute(name = "onExceptionOccurredRef")
+    @Metadata(label = "advanced")
+    private String onExceptionOccurredRef;
+    @XmlAttribute(name = "useOriginalMessage")
+    @Metadata(label = "advanced", javaType = "java.lang.Boolean")
+    private String useOriginalMessage;
+    @XmlAttribute(name = "useOriginalBody")
+    @Metadata(label = "advanced", javaType = "java.lang.Boolean")
+    private String useOriginalBody;
+
     public OnExceptionDefinition() {
     }
 
     public OnExceptionDefinition(List<Class<? extends Throwable>> exceptionClasses) {
-        this.exceptions.addAll(exceptionClasses.stream().map(Class::getName).collect(Collectors.toList()));
+        this.exceptions.addAll(exceptionClasses.stream().map(Class::getName).toList());
     }
 
     public OnExceptionDefinition(Class<? extends Throwable> exceptionType) {
@@ -365,9 +370,8 @@ public class OnExceptionDefinition extends OutputDefinition<OnExceptionDefinitio
     }
 
     /**
-     * Allow synchronous delayed redelivery.
+     * Allow asynchronous delayed redelivery.
      *
-     * @see    RedeliveryPolicy#setAsyncDelayedRedelivery(boolean)
      * @return the builder
      */
     public OnExceptionDefinition asyncDelayedRedelivery() {
@@ -376,7 +380,7 @@ public class OnExceptionDefinition extends OutputDefinition<OnExceptionDefinitio
     }
 
     /**
-     * Sets the logging level to use when retries has exhausted
+     * Sets the logging level to use when retries have been exhausted
      *
      * @param  retriesExhaustedLogLevel the logging level
      * @return                          the builder
@@ -624,7 +628,7 @@ public class OnExceptionDefinition extends OutputDefinition<OnExceptionDefinitio
     }
 
     /**
-     * Sets a reference to a {@link RedeliveryPolicy} to lookup in the {@link org.apache.camel.spi.Registry} to be used.
+     * Sets a reference to a redelivery policy to lookup in the {@link org.apache.camel.spi.Registry} to be used.
      *
      * @param  redeliveryPolicyRef reference to use for lookup
      * @return                     the builder
@@ -663,12 +667,20 @@ public class OnExceptionDefinition extends OutputDefinition<OnExceptionDefinitio
      * with custom headers and include the original message body. The former wont let you do this, as its using the
      * original message body and headers as they are. You cannot enable both useOriginalMessage and useOriginalBody.
      * <p/>
+     * The original input message is defensively copied, and the copied message body is converted to
+     * {@link org.apache.camel.StreamCache} if possible (stream caching is enabled, can be disabled globally or on the
+     * original route), to ensure the body can be read when the original message is being used later. If the body is
+     * converted to {@link org.apache.camel.StreamCache} then the message body on the current
+     * {@link org.apache.camel.Exchange} is replaced with the {@link org.apache.camel.StreamCache} body. If the body is
+     * not converted to {@link org.apache.camel.StreamCache} then the body will not be able to re-read when accessed
+     * later.
+     * <p/>
      * <b>Important:</b> The original input means the input message that are bounded by the current
      * {@link org.apache.camel.spi.UnitOfWork}. An unit of work typically spans one route, or multiple routes if they
      * are connected using internal endpoints such as direct or seda. When messages is passed via external endpoints
      * such as JMS or HTTP then the consumer will create a new unit of work, with the message it received as input as
      * the original input. Also some EIP patterns such as splitter, multicast, will create a new unit of work boundary
-     * for the messages in their sub-route (eg the splitted message); however these EIPs have an option named
+     * for the messages in their sub-route (eg the split message); however these EIPs have an option named
      * <tt>shareUnitOfWork</tt> which allows to combine with the parent unit of work in regard to error handling and
      * therefore use the parent original message.
      * <p/>
@@ -700,12 +712,20 @@ public class OnExceptionDefinition extends OutputDefinition<OnExceptionDefinitio
      * with custom headers and include the original message body. The former wont let you do this, as its using the
      * original message body and headers as they are. You cannot enable both useOriginalMessage and useOriginalBody.
      * <p/>
+     * The original input message is defensively copied, and the copied message body is converted to
+     * {@link org.apache.camel.StreamCache} if possible (stream caching is enabled, can be disabled globally or on the
+     * original route), to ensure the body can be read when the original message is being used later. If the body is
+     * converted to {@link org.apache.camel.StreamCache} then the message body on the current
+     * {@link org.apache.camel.Exchange} is replaced with the {@link org.apache.camel.StreamCache} body. If the body is
+     * not converted to {@link org.apache.camel.StreamCache} then the body will not be able to re-read when accessed
+     * later.
+     * <p/>
      * <b>Important:</b> The original input means the input message that are bounded by the current
      * {@link org.apache.camel.spi.UnitOfWork}. An unit of work typically spans one route, or multiple routes if they
      * are connected using internal endpoints such as direct or seda. When messages is passed via external endpoints
      * such as JMS or HTTP then the consumer will create a new unit of work, with the message it received as input as
      * the original input. Also some EIP patterns such as splitter, multicast, will create a new unit of work boundary
-     * for the messages in their sub-route (eg the splitted message); however these EIPs have an option named
+     * for the messages in their sub-route (eg the split message); however these EIPs have an option named
      * <tt>shareUnitOfWork</tt> which allows to combine with the parent unit of work in regard to error handling and
      * therefore use the parent original message.
      * <p/>
