@@ -67,7 +67,7 @@ public class SagaPropagationTest extends ContextTestSupport {
         context.createFluentProducerTemplate().to("direct:supports").request();
 
         assertListSize(sagaIds, 2);
-        assertNonNullSagaIds(2);
+        assertNonNullSagaIds(1);
     }
 
     @Test
@@ -164,7 +164,7 @@ public class SagaPropagationTest extends ContextTestSupport {
     }
 
     private void assertNonNullSagaIds(int num) {
-        List<String> nonNull = this.sagaIds.stream().filter(Objects::nonNull).collect(Collectors.toList());
+        List<String> nonNull = this.sagaIds.stream().filter(Objects::nonNull).toList();
         if (nonNull.size() != num) {
             fail("Expeced size " + num + ", actual " + nonNull.size());
         }
