@@ -18,13 +18,11 @@ package org.apache.camel.management.mbean;
 
 import java.util.Collection;
 import java.util.Collections;
-import java.util.stream.Collectors;
 
 import org.apache.camel.CamelContext;
 import org.apache.camel.Route;
 import org.apache.camel.api.management.ManagedResource;
 import org.apache.camel.api.management.mbean.ManagedRouteControllerMBean;
-import org.apache.camel.spi.ManagementStrategy;
 import org.apache.camel.spi.RouteController;
 
 @ManagedResource(description = "Managed RouteController")
@@ -41,8 +39,14 @@ public class ManagedRouteController extends ManagedService implements ManagedRou
         return controller;
     }
 
-    public void init(ManagementStrategy strategy) {
-        // do nothing
+    @Override
+    public boolean isStartingRoutes() {
+        return controller.isStartingRoutes();
+    }
+
+    @Override
+    public boolean isHasUnhealthyRoutes() {
+        return controller.hasUnhealthyRoutes();
     }
 
     @Override
@@ -50,7 +54,7 @@ public class ManagedRouteController extends ManagedService implements ManagedRou
         if (controller != null) {
             return controller.getControlledRoutes().stream()
                     .map(Route::getId)
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         return Collections.emptyList();
