@@ -17,44 +17,34 @@
 package org.apache.camel.maven.packaging;
 
 import java.io.File;
-import java.io.IOError;
+import java.io.FileFilter;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.LineNumberReader;
-import java.io.StringReader;
-import java.lang.reflect.Array;
-import java.lang.reflect.Field;
-import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashMap;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
-import java.util.TreeSet;
-import java.util.function.Supplier;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
-import javax.annotation.Generated;
+import javax.annotation.processing.Generated;
 
-import org.apache.camel.maven.packaging.generics.GenericsUtil;
-import org.apache.camel.spi.UriEndpoint;
-import org.apache.camel.spi.UriParam;
-import org.apache.camel.spi.UriParams;
-import org.apache.camel.spi.UriPath;
+import org.apache.camel.maven.packaging.dsl.DslHelper;
+import org.apache.camel.maven.packaging.generics.JavadocUtil;
+import org.apache.camel.tooling.model.BaseModel;
+import org.apache.camel.tooling.model.BaseOptionModel;
 import org.apache.camel.tooling.model.ComponentModel;
 import org.apache.camel.tooling.model.ComponentModel.EndpointOptionModel;
 import org.apache.camel.tooling.model.JsonMapper;
 import org.apache.camel.tooling.util.JavadocHelper;
-import org.apache.camel.tooling.util.PackageHelper;
 import org.apache.camel.tooling.util.Strings;
+import org.apache.camel.tooling.util.srcgen.Field;
 import org.apache.camel.tooling.util.srcgen.GenericType;
-import org.apache.camel.tooling.util.srcgen.GenericType.BoundType;
 import org.apache.camel.tooling.util.srcgen.JavaClass;
 import org.apache.camel.tooling.util.srcgen.Method;
+import org.apache.commons.text.CaseUtils;
 import org.apache.maven.plugin.MojoExecutionException;
 import org.apache.maven.plugin.MojoFailureException;
 import org.apache.maven.plugins.annotations.LifecyclePhase;
@@ -63,14 +53,16 @@ import org.apache.maven.plugins.annotations.Parameter;
 import org.apache.maven.plugins.annotations.ResolutionScope;
 import org.apache.maven.project.MavenProject;
 import org.apache.maven.project.MavenProjectHelper;
+import org.codehaus.plexus.build.BuildContext;
 import org.jboss.forge.roaster.Roaster;
-import org.jboss.forge.roaster._shade.org.eclipse.jdt.core.dom.ASTNode;
 import org.jboss.forge.roaster.model.Type;
 import org.jboss.forge.roaster.model.source.JavaClassSource;
 import org.jboss.forge.roaster.model.source.MethodSource;
 import org.jboss.forge.roaster.model.source.ParameterSource;
-import org.sonatype.plexus.build.incremental.BuildContext;
 
+import static org.apache.camel.maven.packaging.generics.JavadocUtil.getMainDescription;
+import static org.apache.camel.maven.packaging.generics.JavadocUtil.pathParameterJavaDoc;
+import static org.apache.camel.maven.packaging.generics.PackagePluginUtils.joinHeaderAndSource;
 import static org.apache.camel.tooling.util.PackageHelper.findCamelDirectory;
 import static org.apache.camel.tooling.util.PackageHelper.loadText;
 
@@ -80,21 +72,7 @@ import static org.apache.camel.tooling.util.PackageHelper.loadText;
 @Mojo(name = "generate-endpoint-dsl", threadSafe = true, requiresDependencyResolution = ResolutionScope.COMPILE_PLUS_RUNTIME,
       defaultPhase = LifecyclePhase.PROCESS_CLASSES)
 public class EndpointDslMojo extends AbstractGeneratorMojo {
-
-    private static final Map<String, Class<?>> PRIMITIVEMAP;
-
-    static {
-        PRIMITIVEMAP = new HashMap<>();
-        PRIMITIVEMAP.put("boolean", java.lang.Boolean.class);
-        PRIMITIVEMAP.put("char", java.lang.Character.class);
-        PRIMITIVEMAP.put("long", java.lang.Long.class);
-        PRIMITIVEMAP.put("int", java.lang.Integer.class);
-        PRIMITIVEMAP.put("integer", java.lang.Integer.class);
-        PRIMITIVEMAP.put("byte", java.lang.Byte.class);
-        PRIMITIVEMAP.put("short", java.lang.Short.class);
-        PRIMITIVEMAP.put("double", java.lang.Double.class);
-        PRIMITIVEMAP.put("float", java.lang.Float.class);
-    }
+    private static final Pattern COMMA_PRESERVER_PATTERN = Pattern.compile(",(\\S)");
 
     /**
      * The project build directory
@@ -121,21 +99,6 @@ public class EndpointDslMojo extends AbstractGeneratorMojo {
     protected String componentsFactoriesPackageName;
 
     /**
-     * Generate or not the EndpointBuilderFactory interface.
-     */
-    @Parameter(defaultValue = "true")
-    protected boolean generateEndpointBuilderFactory;
-
-    /**
-     * Generate or not the EndpointBuilders interface.
-     */
-    @Parameter(defaultValue = "true")
-    protected boolean generateEndpointBuilders;
-
-    @Parameter(defaultValue = "true")
-    protected boolean generateEndpointDsl;
-
-    /**
      * The output directory
      */
     @Parameter
@@ -153,6 +116,14 @@ public class EndpointDslMojo extends AbstractGeneratorMojo {
     @Parameter
     protected File outputResourcesDir;
 
+    /**
+     * The catalog directory where the component json files are
+     */
+    @Parameter(defaultValue = "${project.basedir}/../../catalog/camel-catalog/src/generated/resources/org/apache/camel/catalog/components")
+    protected File jsonDir;
+
+    private transient String licenseHeader;
+
     @Override
     public void execute(MavenProject project, MavenProjectHelper projectHelper, BuildContext buildContext)
             throws MojoFailureException, MojoExecutionException {
@@ -160,16 +131,14 @@ public class EndpointDslMojo extends AbstractGeneratorMojo {
         baseDir = project.getBasedir();
         endpointFactoriesPackageName = "org.apache.camel.builder.endpoint";
         componentsFactoriesPackageName = "org.apache.camel.builder.endpoint.dsl";
-        generateEndpointBuilderFactory = true;
-        generateEndpointBuilders = true;
         super.execute(project, projectHelper, buildContext);
     }
 
     @Override
     public void execute() throws MojoExecutionException, MojoFailureException {
-        File camelDir = findCamelDirectory(baseDir, "core/camel-endpointdsl");
+        File camelDir = findCamelDirectory(baseDir, "dsl/camel-endpointdsl");
         if (camelDir == null) {
-            getLog().debug("No core/camel-endpointdsl folder found, skipping execution");
+            getLog().debug("No dsl/camel-endpointdsl folder found, skipping execution");
             return;
         }
         Path root = camelDir.toPath();
@@ -183,75 +152,61 @@ public class EndpointDslMojo extends AbstractGeneratorMojo {
             componentsMetadata = outputResourcesDir.toPath().resolve("metadata.json").toFile();
         }
 
-        Map<File, Supplier<String>> files;
+        List<ComponentModel> models = new ArrayList<>();
 
-        try {
-            files = Files
-                    .find(buildDir.toPath(), Integer.MAX_VALUE,
-                            (p, a) -> a.isRegularFile() && p.toFile().getName().endsWith(PackageHelper.JSON_SUFIX))
-                    .collect(Collectors.toMap(Path::toFile, s -> cache(() -> loadJson(s.toFile()))));
-        } catch (IOException e) {
-            throw new RuntimeException(e.getMessage(), e);
+        for (File file : jsonDir.listFiles()) {
+            BaseModel<?> model = JsonMapper.generateModel(file.toPath());
+            models.add((ComponentModel) model);
         }
 
         // generate component endpoint DSL files and write them
-        executeComponent(files);
+        executeComponent(models);
     }
 
-    private static String loadJson(File file) {
-        try {
-            return loadText(file);
-        } catch (IOException e) {
-            throw new IOError(e);
-        }
-    }
-
-    private void executeComponent(Map<File, Supplier<String>> jsonFiles) throws MojoFailureException {
-        // find the component names
-        Set<String> componentNames = new TreeSet<>();
-        findComponentNames(buildDir, componentNames);
-
-        // create auto configuration for the components
-        if (!componentNames.isEmpty()) {
-            getLog().debug("Found " + componentNames.size() + " components");
-
-            List<ComponentModel> allModels = new LinkedList<>();
-            for (String componentName : componentNames) {
-                String json = loadComponentJson(jsonFiles, componentName);
-                if (json != null) {
-                    ComponentModel model = JsonMapper.generateComponentModel(json);
-                    allModels.add(model);
-                }
+    private void executeComponent(List<ComponentModel> allModels) throws MojoFailureException {
+        if (!allModels.isEmpty()) {
+            if (getLog().isDebugEnabled()) {
+                getLog().debug("Found " + allModels.size() + " components");
             }
 
             // Group the models by implementing classes
             Map<String, List<ComponentModel>> grModels
                     = allModels.stream().collect(Collectors.groupingBy(ComponentModel::getJavaType));
-            for (String componentClass : grModels.keySet()) {
-                List<ComponentModel> compModels = grModels.get(componentClass);
-                ComponentModel model = compModels.get(0); // They should be
-                                                         // equivalent
-                List<String> aliases = compModels.stream().map(ComponentModel::getScheme).sorted().collect(Collectors.toList());
 
-                String overrideComponentName = null;
-                if (aliases.size() > 1) {
-                    // determine component name when there are multiple ones
-                    overrideComponentName = model.getArtifactId().replace("camel-", "");
+            // load license header
+            try (InputStream is = getClass().getClassLoader().getResourceAsStream("license-header-java.txt")) {
+                this.licenseHeader = loadText(is);
+            } catch (Exception e) {
+                throw new MojoFailureException("Error loading license-header-java.txt file", e);
+            }
+
+            for (List<ComponentModel> compModels : grModels.values()) {
+                // if there are alias then we need to sort scheme according to the alternative schemes position
+                if (compModels.size() > 1) {
+                    compModels.sort((o1, o2) -> {
+                        String s1 = o1.getScheme();
+                        String s2 = o2.getScheme();
+                        String as = o1.getAlternativeSchemes();
+                        int i1 = as.indexOf(s1);
+                        int i2 = as.indexOf(s2);
+                        return Integer.compare(i1, i2);
+                    });
                 }
 
-                createEndpointDsl(model, compModels, overrideComponentName);
+                ComponentModel model = compModels.get(0); // master component
+                createEndpointDsl(model, compModels);
             }
         }
     }
 
-    private void createEndpointDsl(ComponentModel model, List<ComponentModel> aliases, String overrideComponentName)
+    private void createEndpointDsl(ComponentModel model, List<ComponentModel> aliases)
             throws MojoFailureException {
         List<Method> staticBuilders = new ArrayList<>();
         boolean updated = doCreateEndpointDsl(model, aliases, staticBuilders);
 
         // Update components metadata
         getLog().debug("Load components EndpointFactories");
-        List<File> endpointFactories = loadAllComponentsDslEndpointFactoriesAsFile();
+        final List<File> endpointFactories = loadAllComponentsDslEndpointFactoriesAsFile();
 
         getLog().debug("Regenerate EndpointBuilderFactory");
         // make sure EndpointBuilderFactory is synced
@@ -270,39 +225,21 @@ public class EndpointDslMojo extends AbstractGeneratorMojo {
         }
     }
 
-    @SuppressWarnings({ "checkstyle:executablestatementcount", "checkstyle:methodlength" })
     private boolean doCreateEndpointDsl(ComponentModel model, List<ComponentModel> aliases, List<Method> staticBuilders)
             throws MojoFailureException {
         String componentClassName = model.getJavaType();
         String builderName = getEndpointName(componentClassName);
-        Class<?> realComponentClass = loadClass(componentClassName);
-        Class<?> realEndpointClass = loadClass(findEndpointClassName(componentClassName));
 
-        final JavaClass javaClass = new JavaClass(getProjectClassLoader());
-        javaClass.setPackage(componentsFactoriesPackageName);
-        javaClass.setName(builderName + "Factory");
-        javaClass.setClass(false);
-        javaClass.addImport("org.apache.camel.builder.EndpointConsumerBuilder");
-        javaClass.addImport("org.apache.camel.builder.EndpointProducerBuilder");
-        javaClass.addImport("org.apache.camel.builder.endpoint.AbstractEndpointBuilder");
+        final JavaClass javaClass = createJavaClass(builderName);
 
-        Map<String, JavaClass> enumClasses = new HashMap<>();
-
-        boolean hasAdvanced = false;
-        for (EndpointOptionModel option : model.getEndpointOptions()) {
-            if (option.getLabel() != null && option.getLabel().contains("advanced")) {
-                hasAdvanced = true;
-                break;
-            }
-        }
+        boolean hasAdvanced = hasAdvancedCheck(model);
 
         JavaClass consumerClass = null;
         JavaClass advancedConsumerClass = null;
         JavaClass producerClass = null;
         JavaClass advancedProducerClass = null;
 
-        if (!realEndpointClass.getAnnotation(UriEndpoint.class).producerOnly()
-                && !realEndpointClass.getAnnotation(UriEndpoint.class).consumerOnly()) {
+        if (!model.isProducerOnly() && !model.isConsumerOnly()) {
             String consumerName = builderName.replace("Endpoint", "EndpointConsumer");
             consumerClass = javaClass.addNestedType().setPublic().setClass(false);
             consumerClass.setName(consumerName);
@@ -316,9 +253,11 @@ public class EndpointDslMojo extends AbstractGeneratorMojo {
                 generateDummyClass(advancedConsumerClass.getCanonicalName());
                 advancedConsumerClass.getJavaDoc()
                         .setText("Advanced builder for endpoint consumers for the " + model.getTitle() + " component.");
+
                 consumerClass.addMethod().setName("advanced").setReturnType(loadClass(advancedConsumerClass.getCanonicalName()))
                         .setDefault()
                         .setBody("return (Advanced" + consumerName + ") this;");
+
                 advancedConsumerClass.addMethod().setName("basic").setReturnType(loadClass(consumerClass.getCanonicalName()))
                         .setDefault()
                         .setBody("return (" + consumerName + ") this;");
@@ -351,9 +290,9 @@ public class EndpointDslMojo extends AbstractGeneratorMojo {
         JavaClass advancedBuilderClass = null;
         builderClass = javaClass.addNestedType().setPublic().setClass(false);
         builderClass.setName(builderName);
-        if (realEndpointClass.getAnnotation(UriEndpoint.class).producerOnly()) {
+        if (model.isProducerOnly()) {
             builderClass.implementInterface("EndpointProducerBuilder");
-        } else if (realEndpointClass.getAnnotation(UriEndpoint.class).consumerOnly()) {
+        } else if (model.isConsumerOnly()) {
             builderClass.implementInterface("EndpointConsumerBuilder");
         } else {
             builderClass.implementInterface(consumerClass.getName());
@@ -365,9 +304,9 @@ public class EndpointDslMojo extends AbstractGeneratorMojo {
         if (hasAdvanced) {
             advancedBuilderClass = javaClass.addNestedType().setPublic().setClass(false);
             advancedBuilderClass.setName("Advanced" + builderName);
-            if (realEndpointClass.getAnnotation(UriEndpoint.class).producerOnly()) {
+            if (model.isProducerOnly()) {
                 advancedBuilderClass.implementInterface("EndpointProducerBuilder");
-            } else if (realEndpointClass.getAnnotation(UriEndpoint.class).consumerOnly()) {
+            } else if (model.isConsumerOnly()) {
                 advancedBuilderClass.implementInterface("EndpointConsumerBuilder");
             } else {
                 advancedBuilderClass.implementInterface(advancedConsumerClass.getName());
@@ -394,171 +333,8 @@ public class EndpointDslMojo extends AbstractGeneratorMojo {
 
         javaClass.addAnnotation(Generated.class).setStringValue("value", EndpointDslMojo.class.getName());
 
-        for (EndpointOptionModel option : model.getEndpointOptions()) {
-
-            // skip all @UriPath parameters as the endpoint DSL is for query
-            // parameters
-            if ("path".equals(option.getKind())) {
-                continue;
-            }
-
-            List<JavaClass> targets = new ArrayList<>();
-            String label = option.getLabel() != null ? option.getLabel() : "";
-            if (label != null) {
-                if (label.contains("producer")) {
-                    if (label.contains("advanced")) {
-                        targets.add(advancedProducerClass != null ? advancedProducerClass : advancedBuilderClass);
-                    } else {
-                        targets.add(producerClass != null ? producerClass : builderClass);
-                    }
-                } else if (label.contains("consumer")) {
-                    if (label.contains("advanced")) {
-                        targets.add(advancedConsumerClass != null ? advancedConsumerClass : advancedBuilderClass);
-                    } else {
-                        targets.add(consumerClass != null ? consumerClass : builderClass);
-                    }
-                } else {
-                    if (label.contains("advanced")) {
-                        targets.add(advancedConsumerClass);
-                        targets.add(advancedProducerClass);
-                        targets.add(advancedBuilderClass);
-                    } else {
-                        targets.add(consumerClass);
-                        targets.add(producerClass);
-                        targets.add(builderClass);
-                    }
-                }
-            }
-
-            GenericType ogtype;
-            GenericType gtype;
-            try {
-                Field field = findField(realComponentClass, realEndpointClass, option);
-                ogtype = new GenericType(GenericsUtil.resolveType(realEndpointClass, field));
-                gtype = getType(javaClass, enumClasses, option.getEnums(), ogtype.toString());
-            } catch (Exception e) {
-                throw new RuntimeException(e);
-            }
-
-            for (JavaClass target : targets) {
-                if (target == null) {
-                    continue;
-                }
-
-                // basic description
-                String baseDesc = option.getDescription();
-                if (!Strings.isEmpty(baseDesc)) {
-                    // must xml encode description as in some rare cases it contains & chars which is invalid javadoc
-                    baseDesc = JavadocHelper.xmlEncode(baseDesc);
-
-                    if (!baseDesc.endsWith(".")) {
-                        baseDesc += ".";
-                    }
-                    baseDesc += "\n";
-                    baseDesc += "@@REPLACE_ME@@";
-                    if (option.isMultiValue()) {
-                        baseDesc += "\nThe option is multivalued, and you can use the " + option.getName()
-                                    + "(String, Object) method to add a value (call the method multiple times to set more values).";
-                    }
-                    baseDesc += "\n";
-                    // the Endpoint DSL currently requires to provide the entire
-                    // context-path and not as individual options
-                    // so lets only mark query parameters that are required as
-                    // required
-                    if ("parameter".equals(option.getKind()) && option.isRequired()) {
-                        baseDesc += "\nRequired: true";
-                    }
-                    // include default value (if any)
-                    if (option.getDefaultValue() != null) {
-                        // must xml encode default value so its valid as javadoc
-                        String value = JavadocHelper.xmlEncode(option.getDefaultValue().toString());
-                        baseDesc += "\nDefault: " + value;
-                    }
-                    baseDesc += "\nGroup: " + option.getGroup();
-                }
-
-                boolean multiValued = option.isMultiValue();
-                if (multiValued) {
-                    // multi value option that takes one value
-                    String desc = baseDesc.replace("@@REPLACE_ME@@",
-                            "\nThe option is a: <code>" + ogtype.toString().replace("<", "&lt;").replace(">", "&gt;")
-                                                                     + "</code> type.");
-                    desc = JavadocHelper.xmlEncode(desc);
-
-                    Method fluent = target.addMethod().setDefault().setName(option.getName())
-                            .setReturnType(new GenericType(loadClass(target.getCanonicalName())))
-                            .addParameter(new GenericType(String.class), "key")
-                            .addParameter(new GenericType(Object.class), "value")
-                            .setBody("doSetMultiValueProperty(\"" + option.getName() + "\", \"" + option.getPrefix()
-                                     + "\" + key, value);",
-                                    "return this;\n");
-                    if (option.isDeprecated()) {
-                        fluent.addAnnotation(Deprecated.class);
-                    }
-
-                    String text = desc;
-                    text += "\n\n@param key the option key";
-                    text += "\n@param value the option value";
-                    text += "\n@return the dsl builder\n";
-                    fluent.getJavaDoc().setText(text);
-                    // add multi value method that takes a Map
-                    fluent = target.addMethod().setDefault().setName(option.getName())
-                            .setReturnType(new GenericType(loadClass(target.getCanonicalName())))
-                            .addParameter(new GenericType(Map.class), "values")
-                            .setBody("doSetMultiValueProperties(\"" + option.getName() + "\", \"" + option.getPrefix()
-                                     + "\", values);",
-                                    "return this;\n");
-                    if (option.isDeprecated()) {
-                        fluent.addAnnotation(Deprecated.class);
-                    }
-                    text = desc;
-                    text += "\n\n@param values the values";
-                    text += "\n@return the dsl builder\n";
-                    fluent.getJavaDoc().setText(text);
-                } else {
-                    // regular option
-                    String desc = baseDesc.replace("@@REPLACE_ME@@",
-                            "\nThe option is a: <code>" + ogtype.toString().replace("<", "&lt;").replace(">", "&gt;")
-                                                                     + "</code> type.");
-                    desc = JavadocHelper.xmlEncode(desc);
-
-                    Method fluent = target.addMethod().setDefault().setName(option.getName())
-                            .setReturnType(new GenericType(loadClass(target.getCanonicalName())))
-                            .addParameter(isPrimitive(ogtype.toString()) ? ogtype : gtype, option.getName())
-                            .setBody("doSetProperty(\"" + option.getName() + "\", " + option.getName() + ");",
-                                    "return this;\n");
-                    if (option.isDeprecated()) {
-                        fluent.addAnnotation(Deprecated.class);
-                    }
-                    String text = desc;
-                    text += "\n\n@param " + option.getName() + " the value to set";
-                    text += "\n@return the dsl builder\n";
-                    fluent.getJavaDoc().setText(text);
-
-                    if (ogtype.getRawClass() != String.class) {
-                        // regular option by String parameter variant
-                        desc = baseDesc.replace("@@REPLACE_ME@@",
-                                "\nThe option will be converted to a <code>"
-                                                                  + ogtype.toString().replace("<", "&lt;").replace(">", "&gt;")
-                                                                  + "</code> type.");
-                        desc = JavadocHelper.xmlEncode(desc);
-
-                        fluent = target.addMethod().setDefault().setName(option.getName())
-                                .setReturnType(new GenericType(loadClass(target.getCanonicalName())))
-                                .addParameter(new GenericType(String.class), option.getName())
-                                .setBody("doSetProperty(\"" + option.getName() + "\", " + option.getName() + ");",
-                                        "return this;\n");
-                        if (option.isDeprecated()) {
-                            fluent.addAnnotation(Deprecated.class);
-                        }
-                        text = desc;
-                        text += "\n\n@param " + option.getName() + " the value to set";
-                        text += "\n@return the dsl builder\n";
-                        fluent.getJavaDoc().setText(text);
-                    }
-                }
-            }
-        }
+        processEndpoints(model, consumerClass, advancedConsumerClass, producerClass, advancedProducerClass, builderClass,
+                advancedBuilderClass);
 
         javaClass.removeImport("T");
 
@@ -579,20 +355,117 @@ public class EndpointDslMojo extends AbstractGeneratorMojo {
             method.addAnnotation(Deprecated.class);
         }
 
+        final JavaClass headerNameBuilderClass = addHeaderNameBuilderClass(javaClass, model);
+        if (headerNameBuilderClass != null) {
+            addHeaderNameBuilderMethod(dslClass, headerNameBuilderClass, model);
+        }
+
         if (aliases.size() == 1) {
-            String desc = getMainDescription(model);
-            String methodName = camelCaseLower(model.getScheme());
-            method = dslClass.addMethod().setStatic().setName(methodName)
-                    .addParameter(String.class, "path")
-                    .setReturnType(new GenericType(loadClass(builderClass.getCanonicalName())))
-                    .setDefault()
-                    .setBodyF("return %s.%s(%s);", javaClass.getName(), "endpointBuilder",
-                            "\"" + model.getScheme() + "\", path");
+            processAliases(model, staticBuilders, javaClass, builderClass, dslClass);
+        } else {
+            processMasterScheme(aliases, staticBuilders, javaClass, builderClass, dslClass);
+        }
+
+        return writeSourceIfChanged(javaClass, componentsFactoriesPackageName.replace('.', '/'), builderName + "Factory.java",
+                false);
+    }
+
+    /**
+     * Adds the static inner class allowing to have access to all the headers of the given component.
+     *
+     * @param  javaClass the main class into which the static inner class is added.
+     * @param  model     the model from which the information of the component are extracted.
+     * @return           the static inner class that has been added if any, {@code null} otherwise.
+     */
+    private JavaClass addHeaderNameBuilderClass(JavaClass javaClass, ComponentModel model) {
+        final List<ComponentModel.EndpointHeaderModel> endpointHeaders = model.getEndpointHeaders();
+        if (endpointHeaders.isEmpty()) {
+            return null;
+        }
+        final JavaClass builderClass = javaClass.addNestedType();
+        builderClass.setName(getComponentNameFromType(model.getJavaType()) + "HeaderNameBuilder")
+                .setPublic()
+                .setStatic(true);
+        builderClass.getJavaDoc().setText("The builder of headers' name for the " + model.getTitle() + " component.");
+        generateDummyClass(builderClass.getCanonicalName());
+        final Field singleton = builderClass.addField();
+        singleton.setPrivate().setStatic(true).setFinal(true).setName("INSTANCE")
+                .setType(loadClass(builderClass.getCanonicalName()))
+                .setLiteralInitializer(String.format("new %s()", builderClass.getName()));
+        singleton.getJavaDoc().setText(
+                "The internal instance of the builder used to access to all the methods representing the name of headers.");
+
+        for (ComponentModel.EndpointHeaderModel header : endpointHeaders) {
+            addHeaderNameMethod(builderClass, header);
+        }
+        return builderClass;
+    }
+
+    /**
+     * Adds the method allowing to retrieve the header name of the given header.
+     *
+     * @param builderClass the static inner class to which the method is added.
+     * @param header       the header whose name is returned by the method
+     */
+    private void addHeaderNameMethod(JavaClass builderClass, ComponentModel.EndpointHeaderModel header) {
+        String headerName = header.getName();
+        final String camelPrefix = "camel";
+        if (headerName.toLowerCase().startsWith(camelPrefix)) {
+            headerName = headerName.substring(camelPrefix.length());
+        }
+        final String name;
+        if (headerName.chars().anyMatch(c -> c == ':' || c == '-' || c == '.' || c == '_')) {
+            name = CaseUtils.toCamelCase(headerName, false, ':', '-', '.', '_');
+        } else {
+            name = headerName.substring(0, 1).toLowerCase() + headerName.substring(1);
+        }
+        final Method method = builderClass.addMethod().setPublic().setReturnType(String.class)
+                .setName(name);
+        String javaDoc = createBaseDescription(header, "header", true).replace("@@REPLACE_ME@@",
+                "\nThe option is a: {@code " + header.getJavaType() + "} type.");
+        javaDoc += String.format("%n%n@return the name of the header {@code %s}.%n", headerName);
+        method.getJavaDoc().setText(javaDoc);
+        method.setBodyF("return \"%s\";", header.getName());
+        if (header.isDeprecated()) {
+            method.addAnnotation(Deprecated.class);
+        }
+    }
+
+    /**
+     * Adds the method to the DSL class allowing to have access to all the headers of the component.
+     *
+     * @param dslClass     the DSL class into which the method should be added.
+     * @param builderClass the builder class that gives access to all the headers of the component.
+     * @param model        the model from which the information of the component are extracted.
+     */
+    private void addHeaderNameBuilderMethod(JavaClass dslClass, JavaClass builderClass, ComponentModel model) {
+        final Method method = dslClass.addMethod();
+        method.setDefault().setReturnType(loadClass(builderClass.getCanonicalName()))
+                .setName(camelCaseLower(model.getScheme()))
+                .setBodyF("return %s.INSTANCE;", builderClass.getName());
+        String javaDoc = getMainDescription(model, false);
+        javaDoc += "\n\n@return the dsl builder for the headers' name.\n";
+        method.getJavaDoc().setText(javaDoc);
+    }
+
+    private void processMasterScheme(
+            List<ComponentModel> aliases, List<Method> staticBuilders, JavaClass javaClass, JavaClass builderClass,
+            JavaClass dslClass) {
+
+        // we only want the first alias (master scheme) as static builders
+        boolean firstAlias = true;
+
+        for (ComponentModel componentModel : aliases) {
+            final String desc = getMainDescription(componentModel);
+            final String methodName = camelCaseLower(componentModel.getScheme());
+            Method method = doAddMethod(javaClass, builderClass, dslClass, componentModel, methodName);
             String javaDoc = desc;
-            javaDoc += "\n\n@param path " + pathParameterJavaDoc(model);
+
+            javaDoc += "\n\n@param path " + pathParameterJavaDoc(componentModel);
             javaDoc += "\n@return the dsl builder\n";
+
             method.getJavaDoc().setText(javaDoc);
-            if (model.isDeprecated()) {
+            if (componentModel.isDeprecated()) {
                 method.addAnnotation(Deprecated.class);
             }
 
@@ -601,106 +474,339 @@ public class EndpointDslMojo extends AbstractGeneratorMojo {
             method.setPublic().setStatic();
             method.setReturnType(builderClass.getCanonicalName().replace('$', '.'));
             method.setBodyF("return %s.%s(%s);", javaClass.getCanonicalName(), "endpointBuilder",
-                    "\"" + model.getScheme() + "\", path");
+                    "\"" + componentModel.getScheme() + "\", path");
             staticBuilders.add(method);
 
-            method = dslClass.addMethod().setStatic().setName(methodName)
-                    .addParameter(String.class, "componentName")
-                    .addParameter(String.class, "path")
-                    .setReturnType(new GenericType(loadClass(builderClass.getCanonicalName())))
-                    .setDefault()
-                    .setBodyF("return %s.%s(%s);", javaClass.getName(), "endpointBuilder", "componentName, path");
-            javaDoc = desc;
-            javaDoc += "\n\n@param componentName to use a custom component name for the endpoint instead of the default name";
-            javaDoc += "\n@param path " + pathParameterJavaDoc(model);
-            javaDoc += "\n@return the dsl builder\n";
-            method.getJavaDoc().setText(javaDoc);
-            if (model.isDeprecated()) {
-                method.addAnnotation(Deprecated.class);
+            // we only want first alias for variation with custom component name
+            if (firstAlias) {
+                method = dslClass.addMethod().setStatic().setName(methodName)
+                        .addParameter(String.class, "componentName")
+                        .addParameter(String.class, "path")
+                        .setReturnType(new GenericType(loadClass(builderClass.getCanonicalName())))
+                        .setDefault()
+                        .setBodyF("return %s.%s(%s);", javaClass.getName(), "endpointBuilder", "componentName, path");
+
+                javaDoc = desc;
+                javaDoc += "\n\n@param componentName to use a custom component name for the endpoint instead of the default name";
+                javaDoc += "\n@param path " + pathParameterJavaDoc(componentModel);
+                javaDoc += "\n@return the dsl builder\n";
+                method.getJavaDoc().setText(javaDoc);
+                if (componentModel.isDeprecated()) {
+                    method.addAnnotation(Deprecated.class);
+                }
+                firstAlias = false;
             }
 
             // copy method for the static builders (which allows to use the endpoint-dsl from outside EndpointRouteBuilder)
             method = method.copy();
             method.setPublic().setStatic();
             method.setReturnType(builderClass.getCanonicalName().replace('$', '.'));
-            method.setBodyF("return %s.%s(%s);", javaClass.getCanonicalName(), "endpointBuilder", "componentName, path");
+            method.setBodyF("return %s.%s(%s);", javaClass.getCanonicalName(), "endpointBuilder",
+                    "componentName, path");
             staticBuilders.add(method);
+        }
+    }
+
+    private Method doAddMethod(
+            JavaClass javaClass, JavaClass builderClass, JavaClass dslClass, ComponentModel componentModel, String methodName) {
+        return dslClass.addMethod().setStatic().setName(methodName)
+                .addParameter(String.class, "path")
+                .setReturnType(new GenericType(loadClass(builderClass.getCanonicalName())))
+                .setDefault()
+                .setBodyF("return %s.%s(%s);", javaClass.getName(), "endpointBuilder",
+                        "\"" + componentModel.getScheme() + "\", path");
+    }
+
+    private void processAliases(
+            ComponentModel model, List<Method> staticBuilders, JavaClass javaClass, JavaClass builderClass,
+            JavaClass dslClass) {
+        Method method;
+        String desc = getMainDescription(model);
+        String methodName = camelCaseLower(model.getScheme());
+        method = doAddMethod(javaClass, builderClass, dslClass, model, methodName);
+        String javaDoc = desc;
+        javaDoc += "\n\n@param path " + pathParameterJavaDoc(model);
+        javaDoc += "\n@return the dsl builder\n";
+        method.getJavaDoc().setText(javaDoc);
+        if (model.isDeprecated()) {
+            method.addAnnotation(Deprecated.class);
+        }
+
+        // copy method for the static builders (which allows to use the endpoint-dsl from outside EndpointRouteBuilder)
+        method = method.copy();
+        method.setPublic().setStatic();
+        method.setReturnType(builderClass.getCanonicalName().replace('$', '.'));
+        method.setBodyF("return %s.%s(%s);", javaClass.getCanonicalName(), "endpointBuilder",
+                "\"" + model.getScheme() + "\", path");
+        staticBuilders.add(method);
+
+        method = dslClass.addMethod().setStatic().setName(methodName)
+                .addParameter(String.class, "componentName")
+                .addParameter(String.class, "path")
+                .setReturnType(new GenericType(loadClass(builderClass.getCanonicalName())))
+                .setDefault()
+                .setBodyF("return %s.%s(%s);", javaClass.getName(), "endpointBuilder", "componentName, path");
+        javaDoc = desc;
+        javaDoc += "\n\n@param componentName to use a custom component name for the endpoint instead of the default name";
+        javaDoc += "\n@param path " + pathParameterJavaDoc(model);
+        javaDoc += "\n@return the dsl builder\n";
+        method.getJavaDoc().setText(javaDoc);
+        if (model.isDeprecated()) {
+            method.addAnnotation(Deprecated.class);
+        }
+
+        // copy method for the static builders (which allows to use the endpoint-dsl from outside EndpointRouteBuilder)
+        method = method.copy();
+        method.setPublic().setStatic();
+        method.setReturnType(builderClass.getCanonicalName().replace('$', '.'));
+        method.setBodyF("return %s.%s(%s);", javaClass.getCanonicalName(), "endpointBuilder", "componentName, path");
+        staticBuilders.add(method);
+    }
+
+    private void processEndpoints(
+            ComponentModel model, JavaClass consumerClass, JavaClass advancedConsumerClass, JavaClass producerClass,
+            JavaClass advancedProducerClass, JavaClass builderClass, JavaClass advancedBuilderClass) {
+        for (EndpointOptionModel option : model.getEndpointOptions()) {
+
+            // skip all @UriPath parameters as the endpoint DSL is for query
+            // parameters
+            if ("path".equals(option.getKind())) {
+                continue;
+            }
+
+            List<JavaClass> targets = evalTargetsToProcess(consumerClass, advancedConsumerClass, producerClass,
+                    advancedProducerClass, builderClass, advancedBuilderClass, option);
+
+            for (JavaClass target : targets) {
+                processTarget(option, target);
+            }
+        }
+    }
+
+    private void processTarget(EndpointOptionModel option, JavaClass target) {
+        if (target == null) {
+            return;
+        }
+
+        // basic description
+        final String baseDesc = createBaseDescription(option);
+
+        boolean multiValued = option.isMultiValue();
+        if (multiValued) {
+            createMultivaluedDesc(option, target, baseDesc);
         } else {
-            // we only want the first alias (master scheme) as static builders
-            boolean firstAlias = true;
+            // regular option
+            createRegularDesc(option, target, baseDesc);
+        }
+    }
 
-            for (ComponentModel componentModel : aliases) {
-                String desc = getMainDescription(componentModel);
-                String methodName = camelCaseLower(componentModel.getScheme());
-                method = dslClass.addMethod().setStatic().setName(methodName)
-                        .addParameter(String.class, "path")
-                        .setReturnType(new GenericType(loadClass(builderClass.getCanonicalName())))
-                        .setDefault()
-                        .setBodyF("return %s.%s(%s);", javaClass.getName(), "endpointBuilder",
-                                "\"" + componentModel.getScheme() + "\", path");
-                String javaDoc = desc;
-                javaDoc += "\n\n@param path " + pathParameterJavaDoc(componentModel);
-                javaDoc += "\n@return the dsl builder\n";
-                method.getJavaDoc().setText(javaDoc);
-                if (componentModel.isDeprecated()) {
-                    method.addAnnotation(Deprecated.class);
+    private void createRegularDesc(EndpointOptionModel option, JavaClass target, String baseDesc) {
+        String desc = baseDesc.replace("@@REPLACE_ME@@",
+                "\nThe option is a: <code>" + option.getJavaType().replace("<", "&lt;").replace(">", "&gt;")
+                                                         + "</code> type.");
+        desc = JavadocHelper.xmlEncode(desc);
+
+        Method fluent = target.addMethod().setDefault().setName(option.getName())
+                .setReturnType(new GenericType(loadClass(target.getCanonicalName())))
+                .addParameter(optionJavaType(option), option.getName())
+                .setBody("doSetProperty(\"" + option.getName() + "\", " + option.getName() + ");",
+                        "return this;\n");
+        if (option.isDeprecated()) {
+            fluent.addAnnotation(Deprecated.class);
+        }
+
+        final StringBuilder textBuilder = new StringBuilder(desc);
+        textBuilder.append("\n\n@param ").append(option.getName()).append(" the value to set");
+        textBuilder.append("\n@return the dsl builder\n");
+        fluent.getJavaDoc().setText(textBuilder.toString());
+
+        if (!"String".equals(optionJavaType(option))) {
+            // regular option by String parameter variant
+            desc = baseDesc.replace("@@REPLACE_ME@@",
+                    "\nThe option will be converted to a <code>"
+                                                      + option.getJavaType().replace("<", "&lt;").replace(">",
+                                                              "&gt;")
+                                                      + "</code> type.");
+            desc = JavadocHelper.xmlEncode(desc);
+
+            fluent = target.addMethod().setDefault().setName(option.getName())
+                    .setReturnType(new GenericType(loadClass(target.getCanonicalName())))
+                    .addParameter(new GenericType(String.class), option.getName())
+                    .setBody("doSetProperty(\"" + option.getName() + "\", " + option.getName() + ");",
+                            "return this;\n");
+            if (option.isDeprecated()) {
+                fluent.addAnnotation(Deprecated.class);
+            }
+
+            final StringBuilder optionTextSb = new StringBuilder(desc);
+            optionTextSb.append("\n\n@param ").append(option.getName()).append(" the value to set");
+            optionTextSb.append("\n@return the dsl builder\n");
+            fluent.getJavaDoc().setText(optionTextSb.toString());
+        }
+    }
+
+    private void createMultivaluedDesc(EndpointOptionModel option, JavaClass target, String baseDesc) {
+        // multi value option that takes one value
+        String desc = baseDesc.replace("@@REPLACE_ME@@",
+                "\nThe option is a: <code>" + option.getJavaType().replace("<", "&lt;").replace(">", "&gt;")
+                                                         + "</code> type.");
+        desc = JavadocHelper.xmlEncode(desc);
+
+        Method fluent = target.addMethod().setDefault().setName(option.getName())
+                .setReturnType(new GenericType(loadClass(target.getCanonicalName())))
+                .addParameter(new GenericType(String.class), "key")
+                .addParameter(new GenericType(Object.class), "value")
+                .setBody("doSetMultiValueProperty(\"" + option.getName() + "\", \"" + option.getPrefix()
+                         + "\" + key, value);",
+                        "return this;\n");
+        if (option.isDeprecated()) {
+            fluent.addAnnotation(Deprecated.class);
+        }
+
+        final StringBuilder textBuilder = new StringBuilder(desc);
+        textBuilder.append("\n\n@param key the option key");
+        textBuilder.append("\n@param value the option value");
+        textBuilder.append("\n@return the dsl builder\n");
+        fluent.getJavaDoc().setText(textBuilder.toString());
+        // add multi value method that takes a Map
+        fluent = target.addMethod().setDefault().setName(option.getName())
+                .setReturnType(new GenericType(loadClass(target.getCanonicalName())))
+                .addParameter(new GenericType(Map.class), "values")
+                .setBody("doSetMultiValueProperties(\"" + option.getName() + "\", \"" + option.getPrefix()
+                         + "\", values);",
+                        "return this;\n");
+        if (option.isDeprecated()) {
+            fluent.addAnnotation(Deprecated.class);
+        }
+
+        final StringBuilder sb = new StringBuilder(desc);
+
+        sb.append("\n\n@param values the values");
+        sb.append("\n@return the dsl builder\n");
+        fluent.getJavaDoc().setText(sb.toString());
+    }
+
+    private String createBaseDescription(BaseOptionModel option) {
+        return createBaseDescription(option, "parameter", false);
+    }
+
+    private String createBaseDescription(BaseOptionModel option, String kind, boolean ignoreMultiValue) {
+        String baseDesc = option.getDescription();
+        if (Strings.isEmpty(baseDesc)) {
+            return baseDesc;
+
+        }
+
+        // must xml encode description as in some rare cases it contains & chars which is invalid javadoc
+        baseDesc = JavadocHelper.xmlEncode(baseDesc);
+
+        StringBuilder baseDescBuilder = new StringBuilder(baseDesc);
+        if (!baseDesc.endsWith(".")) {
+            baseDescBuilder.append(".");
+        }
+        if (option.isSupportFileReference()) {
+            baseDescBuilder.append("\n");
+            baseDescBuilder.append(
+                    "\nThis option can also be loaded from an existing file, by prefixing with file: or classpath: followed by the location of the file.");
+        }
+        baseDescBuilder.append("\n@@REPLACE_ME@@");
+        if (option.isMultiValue()) {
+            baseDescBuilder.append("\nThe option is multivalued, and you can use the ")
+                    .append(option.getName())
+                    .append("(String, Object) method to add a value (call the method multiple times to set more values).");
+        }
+        baseDescBuilder.append("\n");
+        // the Endpoint DSL currently requires to provide the entire
+        // context-path and not as individual options
+        // so lets only mark query parameters that are required as
+        // required
+        if (kind.equals(option.getKind()) && option.isRequired()) {
+            baseDescBuilder.append("\nRequired: true");
+        }
+        // include default value (if any)
+        if (option.getDefaultValue() != null) {
+            // must xml encode default value so its valid as javadoc
+            String value = JavadocHelper.xmlEncode(option.getDefaultValue().toString());
+            baseDescBuilder.append("\nDefault: ").append(value);
+        }
+        baseDescBuilder.append("\nGroup: ").append(option.getGroup());
+
+        return baseDescBuilder.toString();
+    }
+
+    private List<JavaClass> evalTargetsToProcess(
+            JavaClass consumerClass, JavaClass advancedConsumerClass, JavaClass producerClass, JavaClass advancedProducerClass,
+            JavaClass builderClass, JavaClass advancedBuilderClass, EndpointOptionModel option) {
+        List<JavaClass> targets = new ArrayList<>();
+        String label = option.getLabel() != null ? option.getLabel() : "";
+        if (label != null) {
+            if (label.contains("producer")) {
+                if (label.contains("advanced")) {
+                    targets.add(advancedProducerClass != null ? advancedProducerClass : advancedBuilderClass);
+                } else {
+                    targets.add(producerClass != null ? producerClass : builderClass);
                 }
-
-                // we only want the first alias (master scheme) as static builders
-                if (firstAlias) {
-                    // copy method for the static builders (which allows to use the endpoint-dsl from outside EndpointRouteBuilder)
-                    method = method.copy();
-                    method.setPublic().setStatic();
-                    method.setReturnType(builderClass.getCanonicalName().replace('$', '.'));
-                    method.setBodyF("return %s.%s(%s);", javaClass.getCanonicalName(), "endpointBuilder",
-                            "\"" + componentModel.getScheme() + "\", path");
-                    staticBuilders.add(method);
+            } else if (label.contains("consumer")) {
+                if (label.contains("advanced")) {
+                    targets.add(advancedConsumerClass != null ? advancedConsumerClass : advancedBuilderClass);
+                } else {
+                    targets.add(consumerClass != null ? consumerClass : builderClass);
                 }
-
-                // we only want first alias for variation with custom component name
-                if (firstAlias) {
-                    method = dslClass.addMethod().setStatic().setName(methodName)
-                            .addParameter(String.class, "componentName")
-                            .addParameter(String.class, "path")
-                            .setReturnType(new GenericType(loadClass(builderClass.getCanonicalName())))
-                            .setDefault()
-                            .setBodyF("return %s.%s(%s);", javaClass.getName(), "endpointBuilder", "componentName, path");
-                    javaDoc = desc;
-                    javaDoc += "\n\n@param componentName to use a custom component name for the endpoint instead of the default name";
-                    javaDoc += "\n@param path " + pathParameterJavaDoc(componentModel);
-                    javaDoc += "\n@return the dsl builder\n";
-                    method.getJavaDoc().setText(javaDoc);
-                    if (componentModel.isDeprecated()) {
-                        method.addAnnotation(Deprecated.class);
-                    }
+            } else {
+                if (label.contains("advanced")) {
+                    targets.add(advancedConsumerClass);
+                    targets.add(advancedProducerClass);
+                    targets.add(advancedBuilderClass);
+                } else {
+                    targets.add(consumerClass);
+                    targets.add(producerClass);
+                    targets.add(builderClass);
                 }
+            }
+        }
+        return targets;
+    }
 
-                // we only want the first alias (master scheme) as static builders
-                if (firstAlias) {
-                    // copy method for the static builders (which allows to use the endpoint-dsl from outside EndpointRouteBuilder)
-                    method = method.copy();
-                    method.setPublic().setStatic();
-                    method.setReturnType(builderClass.getCanonicalName().replace('$', '.'));
-                    method.setBodyF("return %s.%s(%s);", javaClass.getCanonicalName(), "endpointBuilder",
-                            "componentName, path");
-                    staticBuilders.add(method);
-                }
-
-                firstAlias = false;
+    private boolean hasAdvancedCheck(ComponentModel model) {
+        for (EndpointOptionModel option : model.getEndpointOptions()) {
+            if (option.getLabel() != null && option.getLabel().contains("advanced")) {
+                return true;
             }
         }
 
-        return writeSourceIfChanged(javaClass, componentsFactoriesPackageName.replace('.', '/'), builderName + "Factory.java",
-                false);
+        return false;
     }
 
-    private static String pathParameterJavaDoc(ComponentModel model) {
-        int pos = model.getSyntax().indexOf(':');
-        if (pos != -1) {
-            return model.getSyntax().substring(pos + 1);
-        } else {
-            return model.getSyntax();
+    private JavaClass createJavaClass(String builderName) {
+        final JavaClass javaClass = new JavaClass(getProjectClassLoader());
+        javaClass.setPackage(componentsFactoriesPackageName);
+        javaClass.setName(builderName + "Factory");
+        javaClass.setClass(false);
+        javaClass.addImport("java.util.*");
+        javaClass.addImport("java.util.concurrent.*");
+        javaClass.addImport("java.util.function.*");
+        javaClass.addImport("java.util.stream.*");
+        javaClass.addImport("org.apache.camel.builder.EndpointConsumerBuilder");
+        javaClass.addImport("org.apache.camel.builder.EndpointProducerBuilder");
+        javaClass.addImport("org.apache.camel.builder.endpoint.AbstractEndpointBuilder");
+        return javaClass;
+    }
+
+    private static String optionJavaType(EndpointOptionModel option) {
+        String answer = option.getJavaType();
+        if (answer.startsWith("java.lang.")) {
+            return answer.substring(10);
+        } else if (answer.startsWith("java.util.concurrent.")) {
+            return answer.substring(21);
+        } else if (answer.startsWith("java.util.function.")) {
+            return answer.substring(19);
+        } else if (answer.startsWith("java.util.stream.")) {
+            return answer.substring(17);
+        } else if (answer.startsWith("java.util.")) {
+            return answer.substring(10);
         }
+
+        return answer;
     }
 
     private boolean synchronizeEndpointBuilderFactoryInterface(List<File> factories) throws MojoFailureException {
@@ -717,12 +823,22 @@ public class EndpointDslMojo extends AbstractGeneratorMojo {
         javaClass.addMethod().setDefault().setReturnType("org.apache.camel.Expression").setName("endpoints")
                 .addParameter("org.apache.camel.builder.EndpointProducerBuilder", "endpoints", true)
                 .setBody("return new org.apache.camel.support.ExpressionAdapter() {",
-                        "    List<org.apache.camel.Expression> expressions = Stream.of(endpoints)",
-                        "        .map(org.apache.camel.builder.EndpointProducerBuilder::expr)",
-                        "        .collect(Collectors.toList());", "", "    @Override",
+                        "",
+                        "    private List<org.apache.camel.Expression> expressions = null;",
+                        "",
+                        "    @Override",
                         "    public Object evaluate(org.apache.camel.Exchange exchange) {",
                         "        return expressions.stream().map(e -> e.evaluate(exchange, Object.class)).collect(Collectors.toList());",
-                        "    }", "};");
+                        "    }",
+                        "",
+                        "    @Override",
+                        "    public void init(org.apache.camel.CamelContext context) {",
+                        "        super.init(context);",
+                        "        expressions = Stream.of(endpoints)",
+                        "                .map(epb -> epb.expr(context))",
+                        "                .collect(Collectors.toList());",
+                        "    }",
+                        "};");
 
         for (File factory : factories) {
             String factoryName = Strings.before(factory.getName(), ".");
@@ -730,7 +846,7 @@ public class EndpointDslMojo extends AbstractGeneratorMojo {
             javaClass.implementInterface(componentsFactoriesPackageName + "." + factoryName + "." + endpointsName);
         }
 
-        return writeSourceIfChanged("//CHECKSTYLE:OFF\n" + javaClass.printClass() + "\n//CHECKSTYLE:ON",
+        return writeSourceIfChanged(javaClass.printClass(),
                 endpointFactoriesPackageName.replace('.', '/'), "EndpointBuilderFactory.java");
     }
 
@@ -747,7 +863,7 @@ public class EndpointDslMojo extends AbstractGeneratorMojo {
             javaClass.implementInterface(componentsFactoriesPackageName + "." + Strings.before(factory.getName(), "."));
         }
 
-        return writeSourceIfChanged("//CHECKSTYLE:OFF\n" + javaClass.printClass() + "\n//CHECKSTYLE:ON",
+        return writeSourceIfChanged(javaClass.printClass(),
                 endpointFactoriesPackageName.replace(".", "/"), "EndpointBuilders.java");
     }
 
@@ -762,29 +878,28 @@ public class EndpointDslMojo extends AbstractGeneratorMojo {
                 String sourceCode = loadText(file);
                 JavaClassSource source = (JavaClassSource) Roaster.parse(sourceCode);
                 // add existing methods
-                for (MethodSource ms : source.getMethods()) {
+                for (MethodSource<?> ms : source.getMethods()) {
                     boolean exist = methods.stream().anyMatch(
                             m -> m.getName().equals(ms.getName()) && m.getParameters().size() == ms.getParameters().size());
                     if (!exist) {
-                        // the existing file has a method we dont have so create a method and add
+                        // the existing file has a method we don't have, so create a method and add
                         Method method = new Method();
                         if (ms.isStatic()) {
                             method.setStatic();
                         }
                         method.setPublic();
                         method.setName(ms.getName());
-                        // roaster dont preserve the message body with nicely formatted space after comma
+                        // roaster don't preserve the message body with nicely formatted space after comma
                         String body = ms.getBody();
-                        body = body.replaceAll(",(\\S)", ", $1");
+                        body = COMMA_PRESERVER_PATTERN.matcher(body).replaceAll(", $1");
                         method.setBody(body);
                         method.setReturnType(getQualifiedType(ms.getReturnType()));
                         for (Object o : ms.getParameters()) {
-                            if (o instanceof ParameterSource) {
-                                ParameterSource ps = (ParameterSource) o;
+                            if (o instanceof ParameterSource<?> ps) {
                                 method.addParameter(getQualifiedType(ps.getType()), ps.getName());
                             }
                         }
-                        String doc = extractJavaDoc(sourceCode, ms);
+                        String doc = JavadocUtil.extractJavaDoc(sourceCode, ms);
                         method.getJavaDoc().setFullText(doc);
                         if (ms.getAnnotation(Deprecated.class) != null) {
                             method.addAnnotation(Deprecated.class);
@@ -807,7 +922,7 @@ public class EndpointDslMojo extends AbstractGeneratorMojo {
         javaClass.addAnnotation(Generated.class).setStringValue("value", EndpointDslMojo.class.getName());
 
         // sort methods
-        Collections.sort(methods, (m1, m2) -> m1.getName().compareToIgnoreCase(m2.getName()));
+        methods.sort((m1, m2) -> m1.getName().compareToIgnoreCase(m2.getName()));
         // create method
         for (Method method : methods) {
             javaClass.addMethod(method);
@@ -815,11 +930,11 @@ public class EndpointDslMojo extends AbstractGeneratorMojo {
 
         String printClass = javaClass.printClass();
 
-        return writeSourceIfChanged("//CHECKSTYLE:OFF\n" + printClass + "\n//CHECKSTYLE:ON",
+        return writeSourceIfChanged(printClass,
                 endpointFactoriesPackageName.replace(".", "/"), "StaticEndpointBuilders.java");
     }
 
-    private static String getQualifiedType(Type type) {
+    private static String getQualifiedType(Type<?> type) {
         String val = type.getQualifiedName();
         if (val.startsWith("java.lang.")) {
             val = val.substring(10);
@@ -827,115 +942,42 @@ public class EndpointDslMojo extends AbstractGeneratorMojo {
         return val;
     }
 
-    protected static String extractJavaDoc(String sourceCode, MethodSource ms) throws IOException {
-        // the javadoc is mangled by roaster (sadly it does not preserve newlines and original formatting)
-        // so we need to load it from the original source file
-        Object internal = ms.getJavaDoc().getInternal();
-        if (internal instanceof ASTNode) {
-            int pos = ((ASTNode) internal).getStartPosition();
-            int len = ((ASTNode) internal).getLength();
-            if (pos > 0 && len > 0) {
-                String doc = sourceCode.substring(pos, pos + len);
-                LineNumberReader ln = new LineNumberReader(new StringReader(doc));
-                String line;
-                StringBuilder sb = new StringBuilder();
-                while ((line = ln.readLine()) != null) {
-                    line = line.trim();
-                    if (line.startsWith("/**") || line.startsWith("*/")) {
-                        continue;
-                    }
-                    if (line.startsWith("*")) {
-                        line = line.substring(1).trim();
-                    }
-                    sb.append(line);
-                    sb.append("\n");
-                }
-                doc = sb.toString();
-                return doc;
-            }
-        }
-        return null;
+    @Deprecated
+    protected static String extractJavaDoc(String sourceCode, MethodSource<?> ms) throws IOException {
+        return JavadocUtil.extractJavaDoc(sourceCode, ms);
     }
 
     private List<File> loadAllComponentsDslEndpointFactoriesAsFile() {
         final File allComponentsDslEndpointFactory
                 = new File(sourcesOutputDir, componentsFactoriesPackageName.replace('.', '/'));
-        final File[] files = allComponentsDslEndpointFactory.listFiles();
+        FileFilter fileFilter = file -> file.isFile() && file.getName().endsWith(".java");
+        final File[] files = allComponentsDslEndpointFactory.listFiles(fileFilter);
 
         if (files == null) {
             return Collections.emptyList();
         }
 
         // load components
-        return Arrays.stream(files).filter(file -> file.isFile() && file.getName().endsWith(".java") && file.exists()).sorted()
-                .collect(Collectors.toList());
+        return Arrays.stream(files).sorted().toList();
     }
 
     private static String camelCaseLower(String s) {
         int i;
         while (s != null && (i = s.indexOf('-')) > 0) {
-            s = s.substring(0, i) + s.substring(i + 1, i + 2).toUpperCase() + s.substring(i + 2);
+            s = camelCaseAtIndex(s, i);
         }
         while (s != null && (i = s.indexOf('+')) > 0) {
-            s = s.substring(0, i) + s.substring(i + 1, i + 2).toUpperCase() + s.substring(i + 2);
+            s = camelCaseAtIndex(s, i);
         }
         if (s != null) {
             s = s.substring(0, 1).toLowerCase() + s.substring(1);
-            switch (s) {
-                case "class":
-                    s = "clas";
-                    break;
-                case "package":
-                    s = "packag";
-                    break;
-                case "rest":
-                    s = "restEndpoint";
-                    break;
-                default:
-                    break;
-            }
+            s = DslHelper.sanitizeText(s);
         }
         return s;
     }
 
-    private String getMainDescription(ComponentModel model) {
-        String desc = model.getTitle() + " (" + model.getArtifactId() + ")";
-        desc += "\n" + model.getDescription();
-        desc += "\n";
-        desc += "\nCategory: " + model.getLabel();
-        desc += "\nSince: " + model.getFirstVersionShort();
-        desc += "\nMaven coordinates: " + project.getGroupId() + ":" + project.getArtifactId();
-
-        // include javadoc for all path parameters and mark which are required
-        desc += "\n";
-        desc += "\nSyntax: <code>" + model.getSyntax() + "</code>";
-        for (EndpointOptionModel option : model.getEndpointOptions()) {
-            if ("path".equals(option.getKind())) {
-                desc += "\n";
-                desc += "\nPath parameter: " + option.getName();
-                if (option.isRequired()) {
-                    desc += " (required)";
-                }
-                if (option.isDeprecated()) {
-                    desc += " <strong>deprecated</strong>";
-                }
-                desc += "\n" + option.getDescription();
-                if (option.getDefaultValue() != null) {
-                    desc += "\nDefault value: " + option.getDefaultValue();
-                }
-                // TODO: default value note ?
-                if (option.getEnums() != null && !option.getEnums().isEmpty()) {
-                    desc += "\nThere are " + option.getEnums().size() + " enums and the value can be one of: "
-                            + wrapEnumValues(option.getEnums());
-                }
-            }
-        }
-        return desc;
-    }
-
-    private String wrapEnumValues(List<String> enumValues) {
-        // comma to space so we can wrap words (which uses space)
-        return String.join(", ", enumValues);
+    private static String camelCaseAtIndex(String s, int i) {
+        return s.substring(0, i) + Strings.capitalize(s.substring(i + 1));
     }
 
     private String getComponentNameFromType(String type) {
@@ -949,6 +991,8 @@ public class EndpointDslMojo extends AbstractGeneratorMojo {
                 return "ZooKeeperMaster";
             case "org.apache.camel.component.jetty9.JettyHttpComponent9":
                 return "JettyHttp";
+            case "org.apache.camel.component.elasticsearch.ElasticsearchComponent":
+                return "ElasticsearchRest";
             default:
                 return name;
         }
@@ -958,208 +1002,8 @@ public class EndpointDslMojo extends AbstractGeneratorMojo {
         return getComponentNameFromType(type) + "EndpointBuilder";
     }
 
-    private String findEndpointClassName(String type) {
-        String endpointName = type.replaceFirst("Component", "Endpoint");
-        //
-        // HACKS
-        //
-        switch (type) {
-            case "org.apache.camel.component.disruptor.vm.DisruptorVmComponent":
-                return "org.apache.camel.component.disruptor.DisruptorEndpoint";
-            case "org.apache.camel.component.etcd.EtcdComponent":
-                return "org.apache.camel.component.etcd.AbstractEtcdPollingEndpoint";
-            case "org.apache.camel.websocket.jsr356.JSR356WebSocketComponent":
-                return "org.apache.camel.websocket.jsr356.JSR356Endpoint";
-            default:
-                return endpointName;
-        }
-    }
-
-    private Field findField(Class<?> realComponentClass, Class<?> realEndpointClass, EndpointOptionModel option)
-            throws NoSuchFieldException {
-        Field field = null;
-        List<Class<?>> classes = new ArrayList<>();
-        classes.add(realComponentClass);
-        classes.add(realEndpointClass);
-        while (!classes.isEmpty()) {
-            Class cl = classes.remove(0);
-            for (Field f : cl.getDeclaredFields()) {
-                String n = f.getName();
-                UriPath path = f.getAnnotation(UriPath.class);
-                if (path != null && !Strings.isEmpty(path.name())) {
-                    n = path.name();
-                }
-                UriParam param = f.getAnnotation(UriParam.class);
-                if (param != null && !Strings.isEmpty(param.name())) {
-                    n = param.name();
-                }
-                if (n.equals(option.getName())) {
-                    field = f;
-                    break;
-                }
-                if (f.getType().isAnnotationPresent(UriParams.class)) {
-                    classes.add(f.getType());
-                }
-            }
-            if (field != null) {
-                break;
-            }
-            cl = cl.getSuperclass();
-            if (cl != null) {
-                classes.add(cl);
-            }
-        }
-        if (field == null) {
-            throw new NoSuchFieldException("Could not find field for option " + option.getName());
-        }
-        return field;
-    }
-
-    private static boolean isPrimitive(String type) {
-        return PRIMITIVEMAP.containsKey(type);
-    }
-
-    private GenericType getType(JavaClass javaClass, Map<String, JavaClass> enumClasses, List<String> enums, String type) {
-        type = type.trim();
-        // Check if this is an array
-        if (type.endsWith("[]")) {
-            GenericType t = getType(javaClass, enumClasses, enums, type.substring(0, type.length() - 2));
-            return new GenericType(Array.newInstance(t.getRawClass(), 0).getClass(), t);
-        }
-        // Check if this is a generic
-        int genericIndex = type.indexOf('<');
-        if (genericIndex > 0) {
-            if (!type.endsWith(">")) {
-                throw new IllegalArgumentException("Can not load type: " + type);
-            }
-            GenericType base = getType(javaClass, enumClasses, enums, type.substring(0, genericIndex));
-            if (base.getRawClass() == Object.class) {
-                return base;
-            }
-            String[] params = splitParams(type.substring(genericIndex + 1, type.length() - 1));
-            GenericType[] types = new GenericType[params.length];
-            for (int i = 0; i < params.length; i++) {
-                types[i] = getType(javaClass, enumClasses, enums, params[i]);
-            }
-            return new GenericType(base.getRawClass(), types);
-        }
-        // Primitive
-        if (isPrimitive(type)) {
-            return new GenericType(PRIMITIVEMAP.get(type));
-        }
-        // Extends
-        if (type.startsWith("? extends ")) {
-            String raw = type.substring("? extends ".length());
-            return new GenericType(loadClass(raw), BoundType.Extends);
-        }
-        // Super
-        if (type.startsWith("? super ")) {
-            String raw = type.substring("? extends ".length());
-            return new GenericType(loadClass(raw), BoundType.Super);
-        }
-        // Wildcard
-        if (type.equals("?")) {
-            return new GenericType(Object.class, BoundType.Extends);
-        }
-        if (loadClass(type).isEnum() && !isCamelCoreType(type)) {
-            String enumClassName = type.substring(type.lastIndexOf('.') + 1);
-            if (enumClassName.contains("$")) {
-                enumClassName = enumClassName.substring(enumClassName.indexOf('$') + 1);
-            }
-            JavaClass enumClass = enumClasses.get(enumClassName);
-            if (enumClass == null) {
-                enumClass = javaClass.addNestedType().setPackagePrivate().setName(enumClassName).setEnum(true);
-                enumClass.getJavaDoc().setText("Proxy enum for <code>" + type + "</code> enum.");
-                enumClasses.put(enumClassName, enumClass);
-                for (Object value : loadClass(type).getEnumConstants()) {
-                    enumClass.addValue((((Enum<?>) value).name()).replace('.', '_').replace('-', '_'));
-                }
-            }
-            type = javaClass.getPackage() + "." + javaClass.getName() + "$" + enumClassName;
-            return new GenericType(generateDummyClass(type));
-        }
-        if (!isCamelCoreType(type)) {
-            getLog().debug("Substituting java.lang.Object to " + type);
-            return new GenericType(Object.class);
-        }
-        return new GenericType(loadClass(type));
-    }
-
-    private String[] splitParams(String string) {
-        List<String> params = new ArrayList<>();
-        int cur = 0;
-        int start = 0;
-        int opened = 0;
-        while (true) {
-            int nextComma = string.indexOf(',', cur);
-            int nextOpen = string.indexOf('<', cur);
-            int nextClose = string.indexOf('>', cur);
-            if (nextComma < 0) {
-                params.add(string.substring(start));
-                return params.toArray(new String[0]);
-            } else if ((nextOpen < 0 || nextComma < nextOpen) && (nextClose < 0 || nextComma < nextClose) && opened == 0) {
-                params.add(string.substring(start, nextComma));
-                start = cur = nextComma + 1;
-            } else if (nextOpen < 0) {
-                if (--opened < 0) {
-                    throw new IllegalStateException();
-                }
-                cur = nextClose + 1;
-            } else if (nextClose < 0 || nextOpen < nextClose) {
-                ++opened;
-                cur = nextOpen + 1;
-            } else {
-                if (--opened < 0) {
-                    throw new IllegalStateException();
-                }
-                cur = nextClose + 1;
-            }
-        }
-    }
-
-    private boolean isCamelCoreType(String type) {
-        return type.startsWith("java.") || type.matches("org\\.apache\\.camel\\.(spi\\.)?([A-Za-z]+)");
-    }
-
-    private Class generateDummyClass(String clazzName) {
+    private Class<?> generateDummyClass(String clazzName) {
         return getProjectClassLoader().generateDummyClass(clazzName);
-    }
-
-    private static String loadComponentJson(Map<File, Supplier<String>> jsonFiles, String componentName) {
-        return loadJsonOfType(jsonFiles, componentName, "component");
-    }
-
-    private static String loadJsonOfType(Map<File, Supplier<String>> jsonFiles, String modelName, String type) {
-        for (Map.Entry<File, Supplier<String>> entry : jsonFiles.entrySet()) {
-            if (entry.getKey().getName().equals(modelName + PackageHelper.JSON_SUFIX)) {
-                String json = entry.getValue().get();
-                if (type.equals(PackageHelper.getSchemaKind(json))) {
-                    return json;
-                }
-            }
-        }
-        return null;
-    }
-
-    private void findComponentNames(File dir, Set<String> componentNames) {
-        File f = new File(dir, "classes/META-INF/services/org/apache/camel/component");
-
-        if (f.exists() && f.isDirectory()) {
-            File[] files = f.listFiles();
-            if (files != null) {
-                for (File file : files) {
-                    // skip directories as there may be a sub .resolver
-                    // directory
-                    if (file.isDirectory()) {
-                        continue;
-                    }
-                    String name = file.getName();
-                    if (name.charAt(0) != '.') {
-                        componentNames.add(name);
-                    }
-                }
-            }
-        }
     }
 
     private boolean writeSourceIfChanged(JavaClass source, String filePath, String fileName, boolean innerClassesLast)
@@ -1169,12 +1013,11 @@ public class EndpointDslMojo extends AbstractGeneratorMojo {
 
     private boolean writeSourceIfChanged(String source, String filePath, String fileName) throws MojoFailureException {
         try {
-            String header;
-            try (InputStream is = getClass().getClassLoader().getResourceAsStream("license-header-java.txt")) {
-                header = loadText(is);
+            final String code = joinHeaderAndSource(licenseHeader, source);
+
+            if (getLog().isDebugEnabled()) {
+                getLog().debug("Source code generated:\n" + code);
             }
-            String code = header + source;
-            getLog().debug("Source code generated:\n" + code);
 
             return updateResource(sourcesOutputDir.toPath(), filePath + "/" + fileName, code);
         } catch (Exception e) {
