@@ -50,6 +50,7 @@ import java.util.stream.Stream;
 import org.apache.camel.Category;
 import org.apache.camel.maven.packaging.generics.ClassUtil;
 import org.apache.camel.maven.packaging.generics.GenericsUtil;
+import org.apache.camel.maven.packaging.generics.PackagePluginUtils;
 import org.apache.camel.spi.ApiMethod;
 import org.apache.camel.spi.ApiParam;
 import org.apache.camel.spi.ApiParams;
@@ -64,6 +65,7 @@ import org.apache.camel.tooling.model.ApiModel;
 import org.apache.camel.tooling.model.BaseOptionModel;
 import org.apache.camel.tooling.model.ComponentModel;
 import org.apache.camel.tooling.model.ComponentModel.ComponentOptionModel;
+import org.apache.camel.tooling.model.ComponentModel.EndpointHeaderModel;
 import org.apache.camel.tooling.model.ComponentModel.EndpointOptionModel;
 import org.apache.camel.tooling.model.JsonMapper;
 import org.apache.camel.tooling.model.SupportLevel;
@@ -83,16 +85,19 @@ import org.jboss.forge.roaster._shade.org.eclipse.jdt.core.dom.ASTNode;
 import org.jboss.forge.roaster._shade.org.eclipse.jdt.core.dom.Javadoc;
 import org.jboss.forge.roaster.model.JavaDoc;
 import org.jboss.forge.roaster.model.JavaDocCapable;
+import org.jboss.forge.roaster.model.source.FieldHolderSource;
 import org.jboss.forge.roaster.model.source.FieldSource;
 import org.jboss.forge.roaster.model.source.JavaClassSource;
+import org.jboss.forge.roaster.model.source.JavaEnumSource;
+import org.jboss.forge.roaster.model.source.JavaSource;
 import org.jboss.forge.roaster.model.source.MethodSource;
 import org.jboss.jandex.AnnotationInstance;
 import org.jboss.jandex.AnnotationTarget;
 import org.jboss.jandex.DotName;
-import org.jboss.jandex.IndexReader;
 import org.jboss.jandex.IndexView;
 
-import static org.apache.camel.tooling.model.ComponentModel.*;
+import static java.lang.reflect.Modifier.isStatic;
+import static org.apache.camel.tooling.model.ComponentModel.ApiOptionModel;
 
 @Mojo(name = "generate-endpoint-schema", threadSafe = true, requiresDependencyResolution = ResolutionScope.COMPILE_PLUS_RUNTIME,
       defaultPhase = LifecyclePhase.PROCESS_CLASSES)
@@ -116,7 +121,7 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
     protected Map<String, String> resources = new HashMap<>();
     protected List<Path> sourceRoots;
     protected Map<String, String> sources = new HashMap<>();
-    protected Map<String, JavaClassSource> parsed = new HashMap<>();
+    protected Map<String, JavaSource<?>> parsed = new HashMap<>();
 
     @Override
     public void execute() throws MojoExecutionException, MojoFailureException {
@@ -136,7 +141,7 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
         executeUriEndpoint();
     }
 
-    private void executeUriEndpoint() throws MojoExecutionException, MojoFailureException {
+    private void executeUriEndpoint() {
         List<Class<?>> classes = new ArrayList<>();
         for (AnnotationInstance ai : getIndex().getAnnotations(URI_ENDPOINT)) {
             Class<?> classElement = loadClass(ai.target().asClass().name().toString());
@@ -149,29 +154,20 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
             }
         }
         // make sure we sort the classes in case one inherit from the other
-        classes.sort((c1, c2) -> {
-            if (c1.isAssignableFrom(c2)) {
-                return -1;
-            } else if (c2.isAssignableFrom(c1)) {
-                return +1;
-            } else {
-                return c1.getName().compareTo(c2.getName());
-            }
-        });
-        Map<Class, ComponentModel> models = new HashMap<>();
+        classes.sort(this::compareClasses);
+
+        Map<Class<?>, ComponentModel> models = new HashMap<>();
         for (Class<?> classElement : classes) {
             UriEndpoint uriEndpoint = classElement.getAnnotation(UriEndpoint.class);
             String scheme = uriEndpoint.scheme();
             String extendsScheme = uriEndpoint.extendsScheme();
             String title = uriEndpoint.title();
             Category[] categories = uriEndpoint.category();
-            String label;
+            String label = null;
             if (categories.length > 0) {
                 label = Arrays.stream(categories)
                         .map(Category::getValue)
                         .collect(Collectors.joining(","));
-            } else {
-                label = uriEndpoint.label();
             }
             validateSchemaName(scheme, classElement);
             // support multiple schemes separated by comma, which maps to
@@ -181,39 +177,64 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
             String[] schemes = scheme.split(",");
             String[] titles = title.split(",");
             String[] extendsSchemes = extendsScheme.split(",");
-            for (int i = 0; i < schemes.length; i++) {
-                final String alias = schemes[i];
-                final String extendsAlias = i < extendsSchemes.length ? extendsSchemes[i] : extendsSchemes[0];
-                String aTitle = i < titles.length ? titles[i] : titles[0];
 
-                // some components offer a secure alternative which we need
-                // to amend the title accordingly
-                if (secureAlias(schemes[0], alias)) {
-                    aTitle += " (Secure)";
-                }
-                final String aliasTitle = aTitle;
+            processSchemas(models, classElement, uriEndpoint, label, schemes, titles, extendsSchemes);
+        }
+    }
 
-                ComponentModel parentData = null;
-                Class<?> superclass = classElement.getSuperclass();
-                if (superclass != null) {
-                    parentData = models.get(superclass);
-                    if (parentData == null) {
-                        UriEndpoint parentUriEndpoint = superclass.getAnnotation(UriEndpoint.class);
-                        if (parentUriEndpoint != null) {
-                            String parentScheme = parentUriEndpoint.scheme().split(",")[0];
-                            String superClassName = superclass.getName();
-                            String packageName = superClassName.substring(0, superClassName.lastIndexOf('.'));
-                            String fileName = packageName.replace('.', '/') + "/" + parentScheme + ".json";
-                            String json = loadResource(fileName);
-                            parentData = JsonMapper.generateComponentModel(json);
-                        }
-                    }
-                }
+    private void processSchemas(
+            Map<Class<?>, ComponentModel> models, Class<?> classElement, UriEndpoint uriEndpoint, String label,
+            String[] schemes,
+            String[] titles, String[] extendsSchemes) {
+        for (int i = 0; i < schemes.length; i++) {
+            final String alias = schemes[i];
+            final String extendsAlias = i < extendsSchemes.length ? extendsSchemes[i] : extendsSchemes[0];
+            String aTitle = i < titles.length ? titles[i] : titles[0];
 
-                ComponentModel model = writeJSonSchemeAndPropertyConfigurer(classElement, uriEndpoint, aliasTitle, alias,
-                        extendsAlias, label, schemes, parentData);
-                models.put(classElement, model);
+            // some components offer a secure alternative which we need
+            // to amend the title accordingly
+            if (secureAlias(schemes[0], alias)) {
+                aTitle += " (Secure)";
             }
+            final String aliasTitle = aTitle;
+
+            ComponentModel parentData = collectParentData(models, classElement);
+
+            ComponentModel model = writeJSonSchemeAndPropertyConfigurer(classElement, uriEndpoint, aliasTitle, alias,
+                    extendsAlias, label, schemes, parentData);
+            models.put(classElement, model);
+        }
+    }
+
+    private ComponentModel collectParentData(Map<Class<?>, ComponentModel> models, Class<?> classElement) {
+        ComponentModel parentData = null;
+        final Class<?> superclass = classElement.getSuperclass();
+
+        if (superclass != null) {
+            parentData = models.get(superclass);
+            if (parentData == null) {
+                UriEndpoint parentUriEndpoint = superclass.getAnnotation(UriEndpoint.class);
+                if (parentUriEndpoint != null) {
+                    String parentScheme = parentUriEndpoint.scheme().split(",")[0];
+                    String superClassName = superclass.getName();
+                    String packageName = superClassName.substring(0, superClassName.lastIndexOf('.'));
+                    String fileName = packageName.replace('.', '/') + "/" + parentScheme + ".json";
+                    String json = loadResource(fileName);
+                    parentData = JsonMapper.generateComponentModel(json);
+                }
+            }
+        }
+
+        return parentData;
+    }
+
+    private int compareClasses(Class<?> c1, Class<?> c2) {
+        if (c1.isAssignableFrom(c2)) {
+            return -1;
+        } else if (c2.isAssignableFrom(c1)) {
+            return +1;
+        } else {
+            return c1.getName().compareTo(c2.getName());
         }
     }
 
@@ -248,14 +269,13 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
             }
         }
 
+        // component headers
+        addEndpointHeaders(componentModel, uriEndpoint, scheme);
+
         // endpoint options
         findClassProperties(componentModel, classElement, new HashSet<>(), "", null, null, false);
 
-        String excludedEndpointProperties = "";
-        Metadata endpointMetadata = classElement.getAnnotation(Metadata.class);
-        if (endpointMetadata != null) {
-            excludedEndpointProperties = endpointMetadata.excludeProperties();
-        }
+        String excludedEndpointProperties = getExcludedEnd(classElement.getAnnotation(Metadata.class));
 
         // enhance and generate
         enhanceComponentModel(componentModel, parentData, excludedEndpointProperties, excludedComponentProperties);
@@ -266,7 +286,9 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
         }
 
         // enrich the component model with additional configurations for api components
-        enhanceComponentModelWithApiModel(componentModel);
+        if (componentModel.isApi()) {
+            enhanceComponentModelWithApiModel(componentModel);
+        }
 
         String json = JsonMapper.createParameterJsonSchema(componentModel);
 
@@ -284,6 +306,259 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
     }
 
     /**
+     * Retrieve the metadata added to all the {@code String} constants defined in the class corresponding to the element
+     * {@code headersClass} of the annotation {@code UriEndpoint} along with all its super classes and implemented
+     * interfaces, convert the metadata found into instances of {@link EndpointHeaderModel} and finally add the
+     * instances of {@link EndpointHeaderModel} to the given component model.
+     * <p/>
+     * Only headers applicable for the given scheme are added.
+     *
+     * @param componentModel the component model to which the headers should be added.
+     * @param uriEndpoint    the annotation from which the headers class is retrieved.
+     * @param scheme         the scheme for which we want to add the headers.
+     */
+    void addEndpointHeaders(ComponentModel componentModel, UriEndpoint uriEndpoint, String scheme) {
+        final Class<?> headersClass = uriEndpoint.headersClass();
+        if (headersClass == void.class) {
+            getLog().debug(String.format("The endpoint %s has not defined any headers class", uriEndpoint.scheme()));
+            return;
+        }
+        if (!addEndpointHeaders(componentModel, scheme, headersClass, uriEndpoint.headersNameProvider())) {
+            getLog().debug(String.format("No headers have been detected in the headers class %s", headersClass.getName()));
+        }
+    }
+
+    /**
+     * Retrieve the metadata added to all the {@code String} constants defined in the given headers class, convert the
+     * metadata found into instances of {@link EndpointHeaderModel} and finally add the instances of
+     * {@link EndpointHeaderModel} to the given component model.
+     * <p/>
+     * Only headers applicable for the given scheme are added.
+     *
+     * @param  componentModel      the component model to which the headers should be added.
+     * @param  scheme              the scheme for which we want to add the headers.
+     * @param  headersClass        the class from which we extract the headers.
+     * @param  headersNameProvider the name of the field to get or the name of the method to invoke to get the name of
+     *                             the headers.
+     * @return                     {@code true} if at least one header has been added, {@code false} otherwise.
+     */
+    private boolean addEndpointHeaders(
+            ComponentModel componentModel, String scheme, Class<?> headersClass, String headersNameProvider) {
+        final boolean isEnum = headersClass.isEnum();
+        boolean foundHeader = false;
+        for (Field field : headersClass.getFields()) {
+            if ((isEnum || isStatic(field.getModifiers()) && field.getType() == String.class)
+                    && field.isAnnotationPresent(Metadata.class)) {
+
+                if (getLog().isDebugEnabled()) {
+                    getLog().debug(
+                            String.format("Trying to add the constant %s in the class %s as header.", field.getName(),
+                                    headersClass.getName()));
+                }
+                if (addEndpointHeader(componentModel, scheme, field, headersNameProvider)) {
+                    foundHeader = true;
+                    continue;
+                }
+            }
+
+            if (getLog().isDebugEnabled()) {
+                getLog().debug(
+                        String.format(
+                                "The field %s of the class %s is not considered as a name of a header, thus it is skipped",
+                                field.getName(), headersClass.getName()));
+            }
+        }
+        return foundHeader;
+    }
+
+    /**
+     * Retrieve the metadata added to the given field, convert the metadata found into an instance of
+     * {@link EndpointHeaderModel} and finally add the instance of {@link EndpointHeaderModel} to the given component
+     * model.
+     * <p/>
+     * The header is only added if it is applicable for the given scheme.
+     *
+     * @param  componentModel      the component to which the header should be added.
+     * @param  scheme              the scheme for which we want to add the header.
+     * @param  field               the field corresponding to the constant from which the metadata should be extracted.
+     * @param  headersNameProvider the name of the field to get or the name of the method to invoke to get the name of
+     *                             the headers.
+     * @return                     {@code true} if the header has been added, {@code false} otherwise.
+     */
+    private boolean addEndpointHeader(ComponentModel componentModel, String scheme, Field field, String headersNameProvider) {
+        final Metadata metadata = field.getAnnotation(Metadata.class);
+        if (metadata == null) {
+
+            if (getLog().isDebugEnabled()) {
+                getLog().debug(String.format("The field %s in class %s has no Metadata", field.getName(),
+                        field.getDeclaringClass().getName()));
+            }
+            return false;
+        }
+        final String[] applicableFor = metadata.applicableFor();
+        if (applicableFor.length > 0 && Arrays.stream(applicableFor).noneMatch(s -> s.equals(scheme))) {
+
+            if (getLog().isDebugEnabled()) {
+                getLog().debug(String.format("The field %s in class %s is not applicable for %s", field.getName(),
+                        field.getDeclaringClass().getName(), scheme));
+            }
+            return false;
+        }
+        final EndpointHeaderModel header = new EndpointHeaderModel();
+        String description = metadata.description().trim();
+        if (description.isEmpty()) {
+            description = getHeaderFieldJavadoc(field);
+        }
+        header.setDescription(description);
+        header.setKind("header");
+        header.setDisplayName(metadata.displayName());
+        header.setJavaType(metadata.javaType());
+        header.setRequired(metadata.required());
+        header.setDefaultValue(metadata.defaultValue());
+        header.setDeprecated(field.isAnnotationPresent(Deprecated.class));
+        header.setDeprecationNote(metadata.deprecationNote());
+        header.setSecret(metadata.secret());
+        header.setGroup(EndpointHelper.labelAsGroupName(metadata.label(), componentModel.isConsumerOnly(),
+                componentModel.isProducerOnly()));
+        header.setLabel(metadata.label());
+        try {
+            header.setEnums(getEnums(metadata, header.getJavaType().isEmpty() ? null : loadClass(header.getJavaType())));
+        } catch (NoClassDefFoundError e) {
+            if (getLog().isDebugEnabled()) {
+                getLog().debug(String.format("The java type %s could not be found", header.getJavaType()), e);
+            }
+        }
+        try {
+            setHeaderNames(header, field, headersNameProvider);
+            componentModel.addEndpointHeader(header);
+        } catch (Exception e) {
+            if (getLog().isDebugEnabled()) {
+                getLog().debug(
+                        String.format("The name of the header corresponding to the field %s in class %s cannot be retrieved",
+                                field.getName(),
+                                field.getDeclaringClass().getName()));
+            }
+        }
+        return true;
+    }
+
+    /**
+     * Set the name of the header and the name of the constant corresponding to the header.
+     * <p/>
+     * The name of the header and the name of the constant are set as follows:
+     * <ul>
+     * <li><u>In case of an interface or a class:</u> <b>The name of the header</b> is the value of the field as we
+     * assume that it is a {@code String} constant and <b>the name of the constant</b> is in the following format
+     * <i>${declaring-class-name}#${constant-name}</i></li>
+     * <li><u>In case of an enum:</u>
+     * <ul>
+     * <li><u>If {@code headersNameProvider} is set to a name of field:</u> <b>The name of the header</b> is the value
+     * of this particular field for the corresponding enum constant and <b>the name of the constant</b> is in the
+     * following format <i>${declaring-class-name}#${enum-constant-name}@${field-name}</i></li>
+     * <li><u>If {@code headersNameProvider} is set to a name of method:</u> <b>The name of the header</b> is the
+     * returned value of this particular method for the corresponding enum constant and <b>the name of the constant</b>
+     * is in the following format <i>${declaring-class-name}#${enum-constant-name}@${method-name}()</i></li>
+     * <li><u>Otherwise:</u> <b>The name of the header</b> is the name of the enum constant and <b>the name of the
+     * constant</b> is in the following format <i>${declaring-class-name}#${enum-constant-name}</i></li>
+     * </ul>
+     * </li>
+     * </ul>
+     *
+     * @param  header              the header in which the name of the header and its corresponding constant should be
+     *                             set.
+     * @param  field               the field corresponding to the name of a header.
+     * @param  headersNameProvider the name of the field to get or the name of the method to invoke to get the name of
+     *                             the headers.
+     * @throws Exception           if an error occurred while getting the name of the header
+     */
+    private void setHeaderNames(EndpointHeaderModel header, Field field, String headersNameProvider) throws Exception {
+        final Class<?> declaringClass = field.getDeclaringClass();
+        if (field.getType().isEnum()) {
+            if (!headersNameProvider.isEmpty()) {
+                final Optional<?> value = Arrays.stream(declaringClass.getEnumConstants())
+                        .filter(c -> ((Enum<?>) c).name().equals(field.getName()))
+                        .findAny();
+                if (value.isPresent()) {
+                    getLog().debug(String.format("The headers name provider has been set to %s", headersNameProvider));
+                    final Optional<Field> headersNameProviderField = Arrays.stream(declaringClass.getFields())
+                            .filter(f -> f.getName().equals(headersNameProvider))
+                            .findAny();
+                    if (headersNameProviderField.isPresent()) {
+                        getLog().debug("A field corresponding to the headers name provider has been found");
+                        header.setConstantName(
+                                String.format("%s#%s@%s", declaringClass.getName(), field.getName(), headersNameProvider));
+                        header.setName((String) headersNameProviderField.get().get(value.get()));
+                        return;
+                    }
+                    getLog().debug(
+                            String.format("No field %s could be found in the class %s", headersNameProvider, declaringClass));
+                    final Optional<Method> headersNameProviderMethod = Arrays.stream(declaringClass.getMethods())
+                            .filter(m -> m.getName().equals(headersNameProvider) && m.getParameterCount() == 0)
+                            .findAny();
+                    if (headersNameProviderMethod.isPresent()) {
+                        getLog().debug("A method without parameters corresponding to the headers name provider has been found");
+                        header.setConstantName(
+                                String.format("%s#%s@%s()", declaringClass.getName(), field.getName(), headersNameProvider));
+                        header.setName((String) headersNameProviderMethod.get().invoke(value.get()));
+                        return;
+                    }
+                    getLog().debug(String.format("No method %s without parameters could be found in the class %s",
+                            headersNameProvider, declaringClass));
+                }
+            }
+            header.setConstantName(String.format("%s#%s", declaringClass.getName(), field.getName()));
+            header.setName(field.getName());
+            return;
+        }
+        header.setConstantName(String.format("%s#%s", declaringClass.getName(), field.getName()));
+        header.setName((String) field.get(null));
+    }
+
+    /**
+     * @param  headerField the field for which we want to extract the related Javadoc.
+     * @return             the Javadoc of the header field if any. An empty string otherwise.
+     */
+    private String getHeaderFieldJavadoc(Field headerField) {
+        JavaSource<?> source;
+        final String className = headerField.getDeclaringClass().getName();
+        try {
+            source = javaSource(className, JavaSource.class);
+            if (source == null) {
+                getLog().debug(String.format("The source of the class %s could not be found", className));
+                return "";
+            }
+        } catch (Exception e) {
+            getLog().debug(
+                    String.format("An error occurred while loading the source of the class %s could not be found", className),
+                    e);
+            return "";
+        }
+        JavaDocCapable<?> member = null;
+        if (source instanceof JavaEnumSource) {
+            member = ((JavaEnumSource) source).getEnumConstant(headerField.getName());
+        } else if (source instanceof FieldHolderSource) {
+            member = ((FieldHolderSource<?>) source).getField(headerField.getName());
+        } else {
+            getLog().debug(String.format("The header field cannot be retrieved from a source of type %s", source.getName()));
+        }
+        if (member != null) {
+            String doc = getJavaDocText(loadJavaSource(className), member);
+            if (!Strings.isNullOrEmpty(doc)) {
+                return doc;
+            }
+        }
+        return "";
+    }
+
+    private String getExcludedEnd(Metadata classElement) {
+        String excludedEndpointProperties = "";
+        if (classElement != null) {
+            excludedEndpointProperties = classElement.excludeProperties();
+        }
+        return excludedEndpointProperties;
+    }
+
+    /**
      * Used for enhancing the component model with apiProperties for API based components (such as twilio, olingo and
      * others)
      */
@@ -296,13 +571,14 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
                 if (!Strings.isNullOrEmpty(apiName)) {
                     final UriParams uriParams = classElement.getAnnotation(UriParams.class);
                     String extraPrefix = uriParams != null ? uriParams.prefix() : "";
-                    findClassProperties(componentModel, classElement, Collections.EMPTY_SET, extraPrefix,
+                    findClassProperties(componentModel, classElement, Collections.emptySet(), extraPrefix,
                             null, null, false);
                 }
             }
         }
     }
 
+    @Override
     protected boolean updateResource(Path dir, String file, String data) {
         resources.put(file, data);
         return super.updateResource(dir, file, data);
@@ -319,16 +595,17 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
             }
             data = PackageHelper.loadText(is);
         } catch (Exception e) {
-            throw new RuntimeException("Error while loading " + fileName + ": " + e.toString(), e);
+            throw new RuntimeException("Error while loading " + fileName + ": " + e, e);
         }
         resources.put(fileName, data);
         return data;
     }
 
-    private void enhanceComponentModel(
+    void enhanceComponentModel(
             ComponentModel componentModel, ComponentModel parentData, String excludedEndpointProperties,
             String excludedComponentProperties) {
         componentModel.getComponentOptions().removeIf(option -> filterOutOption(componentModel, option));
+        componentModel.getEndpointHeaders().forEach(option -> fixDoc(option, null));
         componentModel.getComponentOptions()
                 .forEach(option -> fixDoc(option, parentData != null ? parentData.getComponentOptions() : null));
         componentModel.getComponentOptions().sort(EndpointHelper.createGroupAndLabelComparator());
@@ -336,12 +613,14 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
         componentModel.getEndpointOptions()
                 .forEach(option -> fixDoc(option, parentData != null ? parentData.getEndpointOptions() : null));
         componentModel.getEndpointOptions().sort(EndpointHelper.createOverallComparator(componentModel.getSyntax()));
-        // merge with parent, removing excluded and overriden properties
+        // merge with parent, remove excluded and override properties
         if (parentData != null) {
             Set<String> componentOptionNames
                     = componentModel.getComponentOptions().stream().map(BaseOptionModel::getName).collect(Collectors.toSet());
             Set<String> endpointOptionNames
                     = componentModel.getEndpointOptions().stream().map(BaseOptionModel::getName).collect(Collectors.toSet());
+            Set<String> headerNames
+                    = componentModel.getEndpointHeaders().stream().map(BaseOptionModel::getName).collect(Collectors.toSet());
             Collections.addAll(componentOptionNames, excludedComponentProperties.split(","));
             Collections.addAll(endpointOptionNames, excludedEndpointProperties.split(","));
             parentData.getComponentOptions().stream()
@@ -350,6 +629,9 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
             parentData.getEndpointOptions().stream()
                     .filter(option -> !endpointOptionNames.contains(option.getName()))
                     .forEach(option -> componentModel.getEndpointOptions().add(option));
+            parentData.getEndpointHeaders().stream()
+                    .filter(header -> !headerNames.contains(header.getName()))
+                    .forEach(header -> componentModel.getEndpointHeaders().add(header));
         }
     }
 
@@ -405,17 +687,19 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
     private void generateComponentConfigurer(
             UriEndpoint uriEndpoint, String scheme, String[] schemes, ComponentModel componentModel,
             ComponentModel parentData) {
+
         if (!uriEndpoint.generateConfigurer()) {
             return;
         }
         // only generate this once for the first scheme
-        if (schemes != null && !schemes[0].equals(scheme)) {
+        if (isFirstScheme(scheme, schemes)) {
             return;
         }
         String pfqn;
         boolean hasSuper;
-        if (parentData != null
-                && loadClass(componentModel.getJavaType()).getSuperclass() == loadClass(parentData.getJavaType())) {
+
+        Class<?> superClazz = loadClass(componentModel.getJavaType()).getSuperclass();
+        if (parentData != null && superClazz.getName().equals(parentData.getJavaType())) {
             // special for activemq and amqp scheme which should reuse jms
             pfqn = parentData.getJavaType() + "Configurer";
             hasSuper = true;
@@ -436,7 +720,7 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
             Set<String> parentOptionsNames = parentData.getComponentOptions().stream()
                     .map(ComponentOptionModel::getName).collect(Collectors.toSet());
             options = componentModel.getComponentOptions().stream().filter(o -> !parentOptionsNames.contains(o.getName()))
-                    .collect(Collectors.toList());
+                    .toList();
         } else {
             options = componentModel.getComponentOptions();
         }
@@ -446,6 +730,13 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
                 options, componentModel);
     }
 
+    private boolean isFirstScheme(String scheme, String[] schemes) {
+        if (schemes != null && !schemes[0].equals(scheme)) {
+            return true;
+        }
+        return false;
+    }
+
     private void generateEndpointConfigurer(
             Class<?> classElement, UriEndpoint uriEndpoint, String scheme, String[] schemes,
             ComponentModel componentModel, ComponentModel parentData) {
@@ -453,15 +744,17 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
             return;
         }
         // only generate this once for the first scheme
-        if (schemes != null && !schemes[0].equals(scheme)) {
+        if (isFirstScheme(scheme, schemes)) {
             return;
         }
+
+        Class<?> superClazz = loadClass(componentModel.getJavaType()).getSuperclass();
+
         String pfqn;
         boolean hasSuper;
-        if (parentData != null) {
+        if (parentData != null && superClazz.getName().equals(parentData.getJavaType())) {
             try {
                 pfqn = classElement.getSuperclass().getName() + "Configurer";
-                loadClass(pfqn);
                 hasSuper = true;
             } catch (NoClassDefFoundError e) {
                 pfqn = "org.apache.camel.support.component.PropertyConfigurerSupport";
@@ -485,7 +778,7 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
                     .map(EndpointOptionModel::getName).collect(Collectors.toSet());
             options = componentModel.getEndpointParameterOptions().stream()
                     .filter(o -> !parentOptionsNames.contains(o.getName()))
-                    .collect(Collectors.toList());
+                    .toList();
         } else {
             options = componentModel.getEndpointParameterOptions();
         }
@@ -520,6 +813,7 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
         model.setConsumerOnly(uriEndpoint.consumerOnly());
         model.setProducerOnly(uriEndpoint.producerOnly());
         model.setLenientProperties(uriEndpoint.lenientProperties());
+        model.setRemote(uriEndpoint.remote());
         model.setAsync(loadClass("org.apache.camel.AsyncEndpoint").isAssignableFrom(endpointClassElement));
         model.setApi(loadClass("org.apache.camel.ApiEndpoint").isAssignableFrom(endpointClassElement));
         model.setApiSyntax(uriEndpoint.apiSyntax());
@@ -569,13 +863,15 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
         if (endpointClassElement.getAnnotation(Metadata.class) != null) {
             deprecationNote = endpointClassElement.getAnnotation(Metadata.class).deprecationNote();
         }
-        model.setDeprecationNote(deprecationNote);
+        if (!isNullOrEmpty(deprecationNote)) {
+            model.setDeprecationNote(deprecationNote);
+        }
         model.setDeprecatedSince(project.getProperties().getProperty("deprecatedSince"));
 
-        // these information is not available at compile time and we enrich
+        // this information is not available at compile time, and we enrich
         // these later during the camel-package-maven-plugin
         if (model.getJavaType() == null) {
-            throw new IllegalStateException("Could not find component java type");
+            throw new IllegalStateException("Could not find @Component(\"" + scheme + "\") annotated class.");
         }
 
         // favor to use endpoint class javadoc as description
@@ -607,50 +903,17 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
         final Class<?> orgClassElement = classElement;
         Set<String> excludes = new HashSet<>();
         while (true) {
-            Metadata componentAnnotation = classElement.getAnnotation(Metadata.class);
-            if (componentAnnotation != null) {
-                if (Objects.equals("verifiers", componentAnnotation.label())) {
-                    componentModel.setVerifiers(componentAnnotation.enums());
-                }
-                Collections.addAll(excludes, componentAnnotation.excludeProperties().split(","));
-            }
+            processMetadataClassAnnotation(componentModel, classElement, excludes);
 
-            List<Method> methods = Stream.of(classElement.getDeclaredMethods()).filter(method -> {
-                Metadata metadata = method.getAnnotation(Metadata.class);
-                String methodName = method.getName();
-                if (metadata != null && metadata.skip()) {
-                    return false;
-                }
-                if (method.isSynthetic() || !Modifier.isPublic(method.getModifiers())) {
-                    return false;
-                }
-                // must be the setter
-                boolean isSetter = methodName.startsWith("set")
-                        && method.getParameters().length == 1
-                        && method.getReturnType() == Void.TYPE;
-                if (!isSetter) {
-                    return false;
-                }
-
-                // skip unwanted methods as they are inherited from default
-                // component and are not intended for end users to configure
-                if ("setEndpointClass".equals(methodName) || "setCamelContext".equals(methodName)
-                        || "setEndpointHeaderFilterStrategy".equals(methodName) || "setApplicationContext".equals(methodName)) {
-                    return false;
-                }
-                if (isGroovyMetaClassProperty(method)) {
-                    return false;
-                }
-                return true;
-            }).collect(Collectors.toList());
+            List<Method> methods = findCandidateClassMethods(classElement);
 
             // if the component has options with annotations then we only want to generate options that are annotated
             // as ideally components should favour doing this, so we can control what is an option and what is not
-            List<Field> fields = Stream.of(classElement.getDeclaredFields()).collect(Collectors.toList());
+            List<Field> fields = Stream.of(classElement.getDeclaredFields()).toList();
             boolean annotationBasedOptions = fields.stream().anyMatch(f -> f.getAnnotation(Metadata.class) != null)
                     || methods.stream().anyMatch(m -> m.getAnnotation(Metadata.class) != null);
 
-            if (methods.size() > 0 && !annotationBasedOptions) {
+            if (!methods.isEmpty() && !annotationBasedOptions) {
                 getLog().warn("Component class " + classElement.getName() + " has not been marked up with @Metadata for "
                               + methods.size() + " options.");
             }
@@ -668,12 +931,7 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
                 // field instead of the setter, so try to use it if its there
                 String fieldName = methodName.substring(3);
                 fieldName = fieldName.substring(0, 1).toLowerCase() + fieldName.substring(1);
-                Field fieldElement;
-                try {
-                    fieldElement = classElement.getDeclaredField(fieldName);
-                } catch (NoSuchFieldException e) {
-                    fieldElement = null;
-                }
+                Field fieldElement = getFieldElement(classElement, fieldName);
                 if (fieldElement != null && metadata == null) {
                     metadata = fieldElement.getAnnotation(Metadata.class);
                 }
@@ -700,7 +958,7 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
                         }
                         nestedTypeName = fieldTypeName;
                         nestedFieldName = fieldElement.getName();
-                        findClassProperties(componentModel, fieldTypeElement, Collections.EMPTY_SET, nestedPrefix,
+                        findClassProperties(componentModel, fieldTypeElement, Collections.emptySet(), nestedPrefix,
                                 nestedTypeName, nestedFieldName, true);
                         nestedTypeName = null;
                         nestedFieldName = null;
@@ -712,6 +970,9 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
                 String label = metadata != null ? metadata.label() : null;
                 boolean secret = metadata != null && metadata.secret();
                 boolean autowired = metadata != null && metadata.autowired();
+                boolean supportFileReference = metadata != null && metadata.supportFileReference();
+                boolean largeInput = metadata != null && metadata.largeInput();
+                String inputLanguage = metadata != null ? metadata.inputLanguage() : null;
 
                 // we do not yet have default values / notes / as no annotation
                 // support yet
@@ -744,19 +1005,7 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
                 }
 
                 // gather enums
-                List<String> enums = null;
-                if (metadata != null && !Strings.isNullOrEmpty(metadata.enums())) {
-                    String[] values = metadata.enums().split(",");
-                    enums = Stream.of(values).map(String::trim).collect(Collectors.toList());
-                } else if (fieldType.isEnum()) {
-                    enums = new ArrayList<>();
-                    for (Object val : fieldType.getEnumConstants()) {
-                        String str = val.toString();
-                        if (!enums.contains(str)) {
-                            enums.add(str);
-                        }
-                    }
-                }
+                List<String> enums = getEnums(metadata, fieldType);
 
                 // the field type may be overloaded by another type
                 boolean isDuration = false;
@@ -839,6 +1088,9 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
                     option.setNestedType(nestedType);
                     option.setConfigurationClass(nestedTypeName);
                     option.setConfigurationField(nestedFieldName);
+                    option.setSupportFileReference(supportFileReference);
+                    option.setLargeInput(largeInput);
+                    option.setInputLanguage(inputLanguage);
                     componentModel.addComponentOption(option);
                 }
             }
@@ -853,7 +1105,74 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
         }
     }
 
-    // CHECKSTYLE:OFF
+    private List<String> getEnums(Metadata metadata, Class<?> fieldType) {
+        List<String> enums = null;
+        if (metadata != null && !Strings.isNullOrEmpty(metadata.enums())) {
+            String[] values = metadata.enums().split(",");
+            enums = Stream.of(values).map(String::trim).toList();
+        } else if (fieldType != null && fieldType.isEnum()) {
+            enums = new ArrayList<>();
+            for (Object val : fieldType.getEnumConstants()) {
+                String str = val.toString();
+                if (!enums.contains(str)) {
+                    enums.add(str);
+                }
+            }
+        }
+        return enums;
+    }
+
+    private Field getFieldElement(Class<?> classElement, String fieldName) {
+        Field fieldElement;
+        try {
+            fieldElement = classElement.getDeclaredField(fieldName);
+        } catch (NoSuchFieldException e) {
+            fieldElement = null;
+        }
+        return fieldElement;
+    }
+
+    private List<Method> findCandidateClassMethods(Class<?> classElement) {
+        return Stream.of(classElement.getDeclaredMethods()).filter(method -> {
+            Metadata metadata = method.getAnnotation(Metadata.class);
+            String methodName = method.getName();
+            if (metadata != null && metadata.skip()) {
+                return false;
+            }
+            if (method.isSynthetic() || !Modifier.isPublic(method.getModifiers())) {
+                return false;
+            }
+            // must be the setter
+            boolean isSetter = methodName.startsWith("set")
+                    && method.getParameters().length == 1
+                    && method.getReturnType() == Void.TYPE;
+            if (!isSetter) {
+                return false;
+            }
+
+            // skip unwanted methods as they are inherited from default
+            // component and are not intended for end users to configure
+            if ("setEndpointClass".equals(methodName) || "setCamelContext".equals(methodName)
+                    || "setEndpointHeaderFilterStrategy".equals(methodName) || "setApplicationContext".equals(methodName)) {
+                return false;
+            }
+            if (isGroovyMetaClassProperty(method)) {
+                return false;
+            }
+            return true;
+        }).collect(Collectors.toList());
+    }
+
+    private void processMetadataClassAnnotation(ComponentModel componentModel, Class<?> classElement, Set<String> excludes) {
+        Metadata componentAnnotation = classElement.getAnnotation(Metadata.class);
+        if (componentAnnotation != null) {
+            if (Objects.equals("verifiers", componentAnnotation.label())) {
+                componentModel.setVerifiers(componentAnnotation.enums());
+            }
+            Collections.addAll(excludes, componentAnnotation.excludeProperties().split(","));
+        }
+    }
+
     protected void findClassProperties(
             ComponentModel componentModel, Class<?> classElement,
             Set<String> excludes, String prefix,
@@ -863,24 +1182,20 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
         while (true) {
             String apiName = null;
             boolean apiOption = false;
-            ApiParams apiParams = classElement.getAnnotation(ApiParams.class);
-            if (apiParams != null) {
-                apiName = apiParams.apiName();
-                apiOption = !Strings.isNullOrEmpty(apiName);
+            // only check for api if component is API based
+            ApiParams apiParams = null;
+            if (componentModel.isApi()) {
+                apiParams = classElement.getAnnotation(ApiParams.class);
+                if (apiParams != null) {
+                    apiName = apiParams.apiName();
+                    apiOption = !Strings.isNullOrEmpty(apiName);
+                }
             }
 
-            String excludedProperties = "";
-            Metadata metadata = classElement.getAnnotation(Metadata.class);
-            if (metadata != null) {
-                excludedProperties = metadata.excludeProperties();
-            }
+            collectExcludes(classElement, excludes);
 
-            final UriEndpoint uriEndpoint = classElement.getAnnotation(UriEndpoint.class);
-            if (uriEndpoint != null) {
-                Collections.addAll(excludes, excludedProperties.split(","));
-            }
-            for (Field fieldElement : classElement.getDeclaredFields()) {
-
+            Metadata metadata;
+            for (final Field fieldElement : classElement.getDeclaredFields()) {
                 metadata = fieldElement.getAnnotation(Metadata.class);
                 if (metadata != null && metadata.skip()) {
                     continue;
@@ -892,138 +1207,16 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
                 }
                 Boolean secret = metadata != null ? metadata.secret() : null;
 
-                UriPath path = fieldElement.getAnnotation(UriPath.class);
-                String fieldName = fieldElement.getName();
-                // component options should not include @UriPath as they are for endpoints only
-                if (!componentOption && path != null) {
-                    String name = prefix + (Strings.isNullOrEmpty(path.name()) ? fieldName : path.name());
-
-                    // should we exclude the name?
-                    if (excludes.contains(name)) {
-                        continue;
-                    }
-
-                    Object defaultValue = path.defaultValue();
-                    if ("".equals(defaultValue) && metadata != null) {
-                        defaultValue = metadata.defaultValue();
-                    }
-                    String defaultValueNote = path.defaultValueNote();
-                    boolean required = metadata != null && metadata.required();
-                    String label = path.label();
-                    if (Strings.isNullOrEmpty(label) && metadata != null) {
-                        label = metadata.label();
-                    }
-                    String displayName = path.displayName();
-                    if (Strings.isNullOrEmpty(displayName)) {
-                        displayName = metadata != null ? metadata.displayName() : null;
-                    }
-                    // compute a display name if we don't have anything
-                    if (Strings.isNullOrEmpty(displayName)) {
-                        displayName = Strings.asTitle(name);
-                    }
-
-                    Class<?> fieldTypeElement = fieldElement.getType();
-                    String fieldTypeName = getTypeName(GenericsUtil.resolveType(orgClassElement, fieldElement));
-
-                    String docComment = path.description();
-                    if (Strings.isNullOrEmpty(docComment)) {
-                        docComment = findJavaDoc(fieldElement, fieldName, name, classElement, false);
-                    }
-
-                    // gather enums
-                    List<String> enums = null;
-
-                    if (!Strings.isNullOrEmpty(path.enums())) {
-                        String[] values = path.enums().split(",");
-                        enums = Stream.of(values).map(String::trim).collect(Collectors.toList());
-                    } else if (fieldTypeElement.isEnum()) {
-                        enums = new ArrayList<>();
-                        for (Object val : fieldTypeElement.getEnumConstants()) {
-                            String str = val.toString();
-                            if (!enums.contains(str)) {
-                                enums.add(str);
-                            }
-                        }
-                    }
-
-                    // the field type may be overloaded by another type
-                    boolean isDuration = false;
-                    if (!Strings.isNullOrEmpty(path.javaType())) {
-                        String mjt = path.javaType();
-                        if ("java.time.Duration".equals(mjt)) {
-                            isDuration = true;
-                        } else {
-                            fieldTypeName = mjt;
-                        }
-                    }
-
-                    // prepare default value so its value is correct according to its type
-                    defaultValue = getDefaultValue(defaultValue, fieldTypeName, isDuration);
-
-                    boolean isSecret = secret != null && secret || path.secret();
-                    boolean isAutowired = metadata != null && metadata.autowired();
-                    String group = EndpointHelper.labelAsGroupName(label, componentModel.isConsumerOnly(),
-                            componentModel.isProducerOnly());
-
-                    // generics for collection types
-                    String nestedType = null;
-                    String desc = fieldTypeName;
-                    if (desc.contains("<") && desc.contains(">")) {
-                        desc = Strings.between(desc, "<", ">");
-                        // if it has additional nested types, then we only want the outer type
-                        int pos = desc.indexOf('<');
-                        if (pos != -1) {
-                            desc = desc.substring(0, pos);
-                        }
-                        // if its a map then it has a key/value, so we only want the last part
-                        pos = desc.indexOf(',');
-                        if (pos != -1) {
-                            desc = desc.substring(pos + 1);
-                        }
-                        desc = desc.replace('$', '.');
-                        desc = desc.trim();
-                        // skip if the type is generic or a wildcard
-                        if (!desc.isEmpty() && desc.indexOf('?') == -1 && !desc.contains(" extends ")) {
-                            nestedType = desc;
-                        }
-                    }
-
-                    BaseOptionModel option;
-                    if (componentOption) {
-                        option = new ComponentOptionModel();
-                    } else {
-                        option = new EndpointOptionModel();
-                    }
-                    option.setName(name);
-                    option.setKind("path");
-                    option.setDisplayName(displayName);
-                    option.setType(getType(fieldTypeName, false, isDuration));
-                    option.setJavaType(fieldTypeName);
-                    option.setRequired(required);
-                    option.setDefaultValue(defaultValue);
-                    option.setDefaultValueNote(defaultValueNote);
-                    option.setDescription(docComment.trim());
-                    option.setDeprecated(deprecated);
-                    option.setDeprecationNote(deprecationNote);
-                    option.setSecret(isSecret);
-                    option.setAutowired(isAutowired);
-                    option.setGroup(group);
-                    option.setLabel(label);
-                    option.setEnums(enums);
-                    option.setNestedType(nestedType);
-                    option.setConfigurationClass(nestedTypeName);
-                    option.setConfigurationField(nestedFieldName);
-                    if (componentModel.getEndpointOptions().stream().noneMatch(opt -> name.equals(opt.getName()))) {
-                        componentModel.addEndpointOption((EndpointOptionModel) option);
-                    }
+                if (collectUriPathProperties(componentModel, classElement, excludes, prefix, nestedTypeName, nestedFieldName,
+                        componentOption, orgClassElement, metadata, fieldElement, deprecated, deprecationNote, secret)) {
+                    continue;
                 }
+                String fieldName;
 
                 UriParam param = fieldElement.getAnnotation(UriParam.class);
-                ApiParam apiParam = fieldElement.getAnnotation(ApiParam.class);
-                fieldName = fieldElement.getName();
                 if (param != null) {
+                    fieldName = fieldElement.getName();
                     String name = prefix + (Strings.isNullOrEmpty(param.name()) ? fieldName : param.name());
-
                     // should we exclude the name?
                     if (excludes.contains(name)) {
                         continue;
@@ -1069,169 +1262,12 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
                         nestedTypeName = null;
                         nestedFieldName = null;
                     } else {
-                        String docComment = param.description();
-                        if (Strings.isNullOrEmpty(docComment)) {
-                            docComment = findJavaDoc(fieldElement, fieldName, name, classElement, false);
-                        }
-                        if (Strings.isNullOrEmpty(docComment)) {
-                            docComment = "";
-                        }
+                        ApiParam apiParam = fieldElement.getAnnotation(ApiParam.class);
 
-                        // gather enums
-                        List<String> enums = null;
-
-                        if (!Strings.isNullOrEmpty(param.enums())) {
-                            String[] values = param.enums().split(",");
-                            enums = Stream.of(values).map(String::trim).collect(Collectors.toList());
-                        } else if (fieldTypeElement.isEnum()) {
-                            enums = new ArrayList<>();
-                            for (Object val : fieldTypeElement.getEnumConstants()) {
-                                String str = val.toString();
-                                if (!enums.contains(str)) {
-                                    enums.add(str);
-                                }
-                            }
-                        }
-
-                        // the field type may be overloaded by another type
-                        boolean isDuration = false;
-                        if (!Strings.isNullOrEmpty(param.javaType())) {
-                            String jt = param.javaType();
-                            if ("java.time.Duration".equals(jt)) {
-                                isDuration = true;
-                            } else {
-                                fieldTypeName = param.javaType();
-                            }
-                        }
-
-                        // prepare default value so its value is correct according to its type
-                        defaultValue = getDefaultValue(defaultValue, fieldTypeName, isDuration);
-
-                        boolean isSecret = secret != null && secret || param.secret();
-                        boolean isAutowired = metadata != null && metadata.autowired();
-                        String group = EndpointHelper.labelAsGroupName(label, componentModel.isConsumerOnly(),
-                                componentModel.isProducerOnly());
-
-                        // generics for collection types
-                        String nestedType = null;
-                        String desc = fieldTypeName;
-                        if (desc.contains("<") && desc.contains(">")) {
-                            desc = Strings.between(desc, "<", ">");
-                            // if it has additional nested types, then we only want the outer type
-                            int pos = desc.indexOf('<');
-                            if (pos != -1) {
-                                desc = desc.substring(0, pos);
-                            }
-                            // if its a map then it has a key/value, so we only want the last part
-                            pos = desc.indexOf(',');
-                            if (pos != -1) {
-                                desc = desc.substring(pos + 1);
-                            }
-                            desc = desc.replace('$', '.');
-                            desc = desc.trim();
-                            // skip if the type is generic or a wildcard
-                            if (!desc.isEmpty() && desc.indexOf('?') == -1 && !desc.contains(" extends ")) {
-                                nestedType = desc;
-                            }
-                        }
-
-                        BaseOptionModel option;
-                        if (componentOption) {
-                            option = new ComponentOptionModel();
-                        } else if (apiOption) {
-                            option = new ApiOptionModel();
-                        } else {
-                            option = new EndpointOptionModel();
-                        }
-                        option.setName(name);
-                        option.setDisplayName(displayName);
-                        option.setType(getType(fieldTypeName, false, isDuration));
-                        option.setJavaType(fieldTypeName);
-                        option.setRequired(required);
-                        option.setDefaultValue(defaultValue);
-                        option.setDefaultValueNote(defaultValueNote);
-                        option.setDescription(docComment.trim());
-                        option.setDeprecated(deprecated);
-                        option.setDeprecationNote(deprecationNote);
-                        option.setSecret(isSecret);
-                        option.setAutowired(isAutowired);
-                        option.setGroup(group);
-                        option.setLabel(label);
-                        option.setEnums(enums);
-                        option.setNestedType(nestedType);
-                        option.setConfigurationClass(nestedTypeName);
-                        option.setConfigurationField(nestedFieldName);
-                        option.setPrefix(paramPrefix);
-                        option.setOptionalPrefix(paramOptionalPrefix);
-                        option.setMultiValue(multiValue);
-                        if (componentOption) {
-                            option.setKind("property");
-                            componentModel.addComponentOption((ComponentOptionModel) option);
-                        } else if (apiOption && apiParam != null) {
-                            option.setKind("parameter");
-                            final String targetApiName = apiName;
-                            ApiModel api;
-                            Optional<ApiModel> op = componentModel.getApiOptions().stream()
-                                    .filter(o -> o.getName().equals(targetApiName))
-                                    .findFirst();
-                            if (!op.isPresent()) {
-                                api = new ApiModel();
-                                api.setName(apiName);
-                                componentModel.getApiOptions().add(api);
-                                if (apiParams != null) {
-                                    for (String alias : apiParams.aliases()) {
-                                        api.addAlias(alias);
-                                    }
-                                }
-                                if (apiParams != null) {
-                                    api.setDescription(apiParams.description());
-                                    // component model takes precedence
-                                    api.setConsumerOnly(componentModel.isConsumerOnly() || apiParams.consumerOnly());
-                                    api.setProducerOnly(componentModel.isProducerOnly() || apiParams.producerOnly());
-                                }
-                            } else {
-                                api = op.get();
-                            }
-                            for (ApiMethod method : apiParam.apiMethods()) {
-                                ApiMethodModel apiMethod = null;
-                                for (ApiMethodModel m : api.getMethods()) {
-                                    if (m.getName().equals(method.methodName())) {
-                                        apiMethod = m;
-                                        break;
-                                    }
-                                }
-                                if (apiMethod == null) {
-                                    apiMethod = api.newMethod(method.methodName());
-                                }
-                                // the method description is stored on @ApiParams
-                                if (apiParams != null) {
-                                    for (ApiMethod m : apiParams.apiMethods()) {
-                                        if (m.methodName().equals(method.methodName())) {
-                                            apiMethod.setDescription(m.description());
-                                            for (String sig : m.signatures()) {
-                                                apiMethod.addSignature(sig);
-                                            }
-                                            break;
-                                        }
-                                    }
-                                }
-                                // copy the option and override with the correct description
-                                ApiOptionModel copy = ((ApiOptionModel) option).copy();
-                                apiMethod.addApiOptionModel(copy);
-                                // the option description is stored on @ApiMethod
-                                copy.setDescription(method.description());
-                                // whether we are consumer or producer only
-                                group = EndpointHelper.labelAsGroupName(copy.getLabel(), api.isConsumerOnly(),
-                                        api.isProducerOnly());
-                                copy.setGroup(group);
-                                copy.setOptional(apiParam.optional());
-                            }
-                        } else {
-                            option.setKind("parameter");
-                            if (componentModel.getEndpointOptions().stream().noneMatch(opt -> name.equals(opt.getName()))) {
-                                componentModel.addEndpointOption((EndpointOptionModel) option);
-                            }
-                        }
+                        collectNonNestedField(componentModel, classElement, nestedTypeName, nestedFieldName, componentOption,
+                                apiName, apiOption, apiParams, metadata, fieldElement, deprecated, deprecationNote, secret,
+                                fieldName, param, apiParam, name, paramOptionalPrefix, paramPrefix, multiValue, defaultValue,
+                                defaultValueNote, required, label, displayName, fieldTypeElement, fieldTypeName);
                     }
                 }
             }
@@ -1251,7 +1287,336 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
             }
         }
     }
-    // CHECKSTYLE:ON
+
+    private void collectNonNestedField(
+            ComponentModel componentModel, Class<?> classElement, String nestedTypeName, String nestedFieldName,
+            boolean componentOption, String apiName, boolean apiOption, ApiParams apiParams, Metadata metadata,
+            Field fieldElement, boolean deprecated, String deprecationNote, Boolean secret, String fieldName, UriParam param,
+            ApiParam apiParam, String name, String paramOptionalPrefix, String paramPrefix, boolean multiValue,
+            Object defaultValue, String defaultValueNote, boolean required, String label, String displayName,
+            Class<?> fieldTypeElement, String fieldTypeName) {
+        String docComment = param.description();
+        if (Strings.isNullOrEmpty(docComment)) {
+            docComment = findJavaDoc(fieldElement, fieldName, name, classElement, false);
+        }
+        if (Strings.isNullOrEmpty(docComment)) {
+            docComment = "";
+        }
+
+        // gather enums
+        List<String> enums = gatherEnums(param, fieldTypeElement);
+
+        // the field type may be overloaded by another type
+        boolean isDuration = false;
+        if (!Strings.isNullOrEmpty(param.javaType())) {
+            String jt = param.javaType();
+            if ("java.time.Duration".equals(jt)) {
+                isDuration = true;
+            } else {
+                fieldTypeName = param.javaType();
+            }
+        }
+
+        // prepare default value so its value is correct according to its type
+        defaultValue = getDefaultValue(defaultValue, fieldTypeName, isDuration);
+
+        boolean isSecret = secret != null && secret || param.secret();
+        boolean isAutowired = metadata != null && metadata.autowired();
+        boolean supportFileReference = metadata != null && metadata.supportFileReference();
+        String group = EndpointHelper.labelAsGroupName(label, componentModel.isConsumerOnly(),
+                componentModel.isProducerOnly());
+
+        // generics for collection types
+        String nestedType = null;
+        String desc = fieldTypeName;
+        if (desc.contains("<") && desc.contains(">")) {
+            desc = Strings.between(desc, "<", ">");
+            // if it has additional nested types, then we only want the outer type
+            int pos = desc.indexOf('<');
+            if (pos != -1) {
+                desc = desc.substring(0, pos);
+            }
+            // if its a map then it has a key/value, so we only want the last part
+            pos = desc.indexOf(',');
+            if (pos != -1) {
+                desc = desc.substring(pos + 1);
+            }
+            desc = desc.replace('$', '.');
+            desc = desc.trim();
+            // skip if the type is generic or a wildcard
+            if (!desc.isEmpty() && desc.indexOf('?') == -1 && !desc.contains(" extends ")) {
+                nestedType = desc;
+            }
+        }
+
+        BaseOptionModel option;
+        if (componentOption) {
+            option = new ComponentOptionModel();
+        } else if (apiOption) {
+            option = new ApiOptionModel();
+        } else {
+            option = new EndpointOptionModel();
+        }
+        option.setName(name);
+        option.setDisplayName(displayName);
+        option.setType(getType(fieldTypeName, false, isDuration));
+        option.setJavaType(fieldTypeName);
+        option.setRequired(required);
+        option.setDefaultValue(defaultValue);
+        option.setDefaultValueNote(defaultValueNote);
+        option.setDescription(docComment.trim());
+        option.setDeprecated(deprecated);
+        option.setDeprecationNote(deprecationNote);
+        option.setSecret(isSecret);
+        option.setAutowired(isAutowired);
+        option.setGroup(group);
+        option.setLabel(label);
+        option.setEnums(enums);
+        option.setNestedType(nestedType);
+        option.setConfigurationClass(nestedTypeName);
+        option.setConfigurationField(nestedFieldName);
+        option.setPrefix(paramPrefix);
+        option.setOptionalPrefix(paramOptionalPrefix);
+        option.setMultiValue(multiValue);
+        option.setSupportFileReference(supportFileReference);
+        if (componentOption) {
+            option.setKind("property");
+            componentModel.addComponentOption((ComponentOptionModel) option);
+        } else if (apiOption && apiParam != null) {
+            option.setKind("parameter");
+            final String targetApiName = apiName;
+            ApiModel api;
+            Optional<ApiModel> op = componentModel.getApiOptions().stream()
+                    .filter(o -> o.getName().equals(targetApiName))
+                    .findFirst();
+            if (!op.isPresent()) {
+                api = new ApiModel();
+                api.setName(apiName);
+                componentModel.getApiOptions().add(api);
+                if (apiParams != null) {
+                    for (String alias : apiParams.aliases()) {
+                        api.addAlias(alias);
+                    }
+                }
+                if (apiParams != null) {
+                    api.setDescription(apiParams.description());
+                    // component model takes precedence
+                    api.setConsumerOnly(componentModel.isConsumerOnly() || apiParams.consumerOnly());
+                    api.setProducerOnly(componentModel.isProducerOnly() || apiParams.producerOnly());
+                }
+            } else {
+                api = op.get();
+            }
+            for (ApiMethod method : apiParam.apiMethods()) {
+                ApiMethodModel apiMethod = null;
+                for (ApiMethodModel m : api.getMethods()) {
+                    if (m.getName().equals(method.methodName())) {
+                        apiMethod = m;
+                        break;
+                    }
+                }
+                if (apiMethod == null) {
+                    apiMethod = api.newMethod(method.methodName());
+                }
+                // the method description is stored on @ApiParams
+                if (apiParams != null) {
+                    for (ApiMethod m : apiParams.apiMethods()) {
+                        if (m.methodName().equals(method.methodName())) {
+                            apiMethod.setDescription(m.description());
+                            for (String sig : m.signatures()) {
+                                apiMethod.addSignature(sig);
+                            }
+                            break;
+                        }
+                    }
+                }
+                // copy the option and override with the correct description
+                ApiOptionModel copy = ((ApiOptionModel) option).copy();
+                apiMethod.addApiOptionModel(copy);
+                // the option description is stored on @ApiMethod
+                copy.setDescription(method.description());
+                // whether we are consumer or producer only
+                group = EndpointHelper.labelAsGroupName(copy.getLabel(), api.isConsumerOnly(),
+                        api.isProducerOnly());
+                copy.setGroup(group);
+                copy.setOptional(apiParam.optional());
+            }
+        } else {
+            option.setKind("parameter");
+            if (componentModel.getEndpointOptions().stream().noneMatch(opt -> name.equals(opt.getName()))) {
+                componentModel.addEndpointOption((EndpointOptionModel) option);
+            }
+        }
+    }
+
+    private boolean collectUriPathProperties(
+            ComponentModel componentModel, Class<?> classElement, Set<String> excludes, String prefix, String nestedTypeName,
+            String nestedFieldName, boolean componentOption, Class<?> orgClassElement, Metadata metadata, Field fieldElement,
+            boolean deprecated, String deprecationNote, Boolean secret) {
+        UriPath path = fieldElement.getAnnotation(UriPath.class);
+        String fieldName = fieldElement.getName();
+        // component options should not include @UriPath as they are for endpoints only
+        if (!componentOption && path != null) {
+            String name = prefix + (Strings.isNullOrEmpty(path.name()) ? fieldName : path.name());
+
+            // should we exclude the name?
+            if (excludes.contains(name)) {
+                return true;
+            }
+
+            Object defaultValue = path.defaultValue();
+            if ("".equals(defaultValue) && metadata != null) {
+                defaultValue = metadata.defaultValue();
+            }
+            String defaultValueNote = path.defaultValueNote();
+            boolean required = metadata != null && metadata.required();
+            String label = path.label();
+            if (Strings.isNullOrEmpty(label) && metadata != null) {
+                label = metadata.label();
+            }
+            String displayName = path.displayName();
+            if (Strings.isNullOrEmpty(displayName)) {
+                displayName = metadata != null ? metadata.displayName() : null;
+            }
+            // compute a display name if we don't have anything
+            if (Strings.isNullOrEmpty(displayName)) {
+                displayName = Strings.asTitle(name);
+            }
+
+            Class<?> fieldTypeElement = fieldElement.getType();
+            String fieldTypeName = getTypeName(GenericsUtil.resolveType(orgClassElement, fieldElement));
+
+            String docComment = path.description();
+            if (Strings.isNullOrEmpty(docComment)) {
+                docComment = findJavaDoc(fieldElement, fieldName, name, classElement, false);
+            }
+
+            // gather enums
+            List<String> enums = gatherEnums(path, fieldTypeElement);
+
+            // the field type may be overloaded by another type
+            boolean isDuration = false;
+            if (!Strings.isNullOrEmpty(path.javaType())) {
+                String mjt = path.javaType();
+                if ("java.time.Duration".equals(mjt)) {
+                    isDuration = true;
+                } else {
+                    fieldTypeName = mjt;
+                }
+            }
+
+            // prepare default value so its value is correct according to its type
+            defaultValue = getDefaultValue(defaultValue, fieldTypeName, isDuration);
+
+            boolean isSecret = secret != null && secret || path.secret();
+            boolean isAutowired = metadata != null && metadata.autowired();
+            boolean supportFileReference = metadata != null && metadata.supportFileReference();
+            boolean largeInput = metadata != null && metadata.largeInput();
+            String inputLanguage = metadata != null ? metadata.inputLanguage() : null;
+            String group = EndpointHelper.labelAsGroupName(label, componentModel.isConsumerOnly(),
+                    componentModel.isProducerOnly());
+
+            // generics for collection types
+            String nestedType = null;
+            String desc = fieldTypeName;
+            if (desc.contains("<") && desc.contains(">")) {
+                desc = Strings.between(desc, "<", ">");
+                // if it has additional nested types, then we only want the outer type
+                int pos = desc.indexOf('<');
+                if (pos != -1) {
+                    desc = desc.substring(0, pos);
+                }
+                // if its a map then it has a key/value, so we only want the last part
+                pos = desc.indexOf(',');
+                if (pos != -1) {
+                    desc = desc.substring(pos + 1);
+                }
+                desc = desc.replace('$', '.');
+                desc = desc.trim();
+                // skip if the type is generic or a wildcard
+                if (!desc.isEmpty() && desc.indexOf('?') == -1 && !desc.contains(" extends ")) {
+                    nestedType = desc;
+                }
+            }
+
+            BaseOptionModel option;
+            if (componentOption) {
+                option = new ComponentOptionModel();
+            } else {
+                option = new EndpointOptionModel();
+            }
+            option.setName(name);
+            option.setKind("path");
+            option.setDisplayName(displayName);
+            option.setType(getType(fieldTypeName, false, isDuration));
+            option.setJavaType(fieldTypeName);
+            option.setRequired(required);
+            option.setDefaultValue(defaultValue);
+            option.setDefaultValueNote(defaultValueNote);
+            option.setDescription(docComment.trim());
+            option.setDeprecated(deprecated);
+            option.setDeprecationNote(deprecationNote);
+            option.setSecret(isSecret);
+            option.setAutowired(isAutowired);
+            option.setGroup(group);
+            option.setLabel(label);
+            option.setEnums(enums);
+            option.setNestedType(nestedType);
+            option.setConfigurationClass(nestedTypeName);
+            option.setConfigurationField(nestedFieldName);
+            option.setSupportFileReference(supportFileReference);
+            option.setLargeInput(largeInput);
+            option.setInputLanguage(inputLanguage);
+            if (componentModel.getEndpointOptions().stream().noneMatch(opt -> name.equals(opt.getName()))) {
+                componentModel.addEndpointOption((EndpointOptionModel) option);
+            }
+        }
+        return false;
+    }
+
+    private void collectExcludes(Class<?> classElement, Set<String> excludes) {
+        final UriEndpoint uriEndpoint = classElement.getAnnotation(UriEndpoint.class);
+        if (uriEndpoint != null) {
+            String excludedProperties = getExcludedEnd(classElement.getAnnotation(Metadata.class));
+
+            Collections.addAll(excludes, excludedProperties.split(","));
+        }
+    }
+
+    private static List<String> doGatherFromEnum(Class<?> fieldTypeElement) {
+        final List<String> enums = new ArrayList<>();
+
+        for (Object val : fieldTypeElement.getEnumConstants()) {
+            String str = val.toString();
+            if (!enums.contains(str)) {
+                enums.add(str);
+            }
+        }
+
+        return enums;
+    }
+
+    private static List<String> gatherEnums(UriParam param, Class<?> fieldTypeElement) {
+        if (!Strings.isNullOrEmpty(param.enums())) {
+            String[] values = param.enums().split(",");
+            return Stream.of(values).map(String::trim).toList();
+        } else if (fieldTypeElement.isEnum()) {
+            return doGatherFromEnum(fieldTypeElement);
+        }
+
+        return null;
+    }
+
+    private static List<String> gatherEnums(UriPath path, Class<?> fieldTypeElement) {
+        if (!Strings.isNullOrEmpty(path.enums())) {
+            String[] values = path.enums().split(",");
+            return Stream.of(values).map(String::trim).toList();
+        } else if (fieldTypeElement.isEnum()) {
+            return doGatherFromEnum(fieldTypeElement);
+        }
+
+        return null;
+    }
 
     private static boolean isNullOrEmpty(Object value) {
         return value == null || "".equals(value) || "null".equals(value);
@@ -1270,8 +1635,6 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
         return false;
     }
 
-    // CHECKSTYLE:ON
-
     private static boolean isGroovyMetaClassProperty(final Method method) {
         final String methodName = method.getName();
 
@@ -1287,11 +1650,13 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
             String pfqn, String psn, String scheme, boolean hasSuper, boolean component,
             Collection<? extends BaseOptionModel> options, ComponentModel model) {
 
-        try (Writer w = new StringWriter()) {
+        try {
             boolean extended = model.isApi(); // if the component is api then the generated configurer should be an extended configurer
-            PropertyConfigurerGenerator.generatePropertyConfigurer(pn, cn, en, pfqn, psn, hasSuper, component, extended, false,
-                    options, model, w);
-            updateResource(sourcesOutputDir.toPath(), fqn.replace('.', '/') + ".java", w.toString());
+            String source = PropertyConfigurerGenerator.generatePropertyConfigurer(pn, cn, en, pfqn, psn, hasSuper, component,
+                    extended, false,
+                    options, model);
+
+            updateResource(sourcesOutputDir.toPath(), fqn.replace('.', '/') + ".java", source);
         } catch (Exception e) {
             throw new RuntimeException("Unable to generate source code file: " + fqn + ": " + e.getMessage(), e);
         }
@@ -1310,13 +1675,9 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
 
     private IndexView getIndex() {
         if (indexView == null) {
-            Path output = Paths.get(project.getBuild().getOutputDirectory());
-            try (InputStream is = Files.newInputStream(output.resolve("META-INF/jandex.idx"))) {
-                indexView = new IndexReader(is).read();
-            } catch (IOException e) {
-                throw new RuntimeException("IOException: " + e.getMessage(), e);
-            }
+            indexView = PackagePluginUtils.readJandexIndexQuietly(project);
         }
+
         return indexView;
     }
 
@@ -1348,7 +1709,7 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
 
         JavaClassSource source;
         try {
-            source = javaClassSource(classElement.getName());
+            source = javaSource(classElement.getName(), JavaClassSource.class);
             if (source == null) {
                 return "";
             }
@@ -1376,7 +1737,7 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
 
         String propName = Character.toUpperCase(fieldName.charAt(0)) + fieldName.substring(1);
         for (MethodSource<JavaClassSource> getter : source.getMethods()) {
-            if (getter.getParameters().size() == 0
+            if (getter.getParameters().isEmpty()
                     && (getter.getName().equals("get" + propName) || getter.getName().equals("is" + propName))) {
                 String doc = getJavaDocText(loadJavaSource(classElement.getName()), getter);
                 if (!Strings.isNullOrEmpty(doc)) {
@@ -1387,42 +1748,38 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
 
         if (builderPattern) {
             if (name != null && !name.equals(fieldName)) {
-                for (MethodSource<JavaClassSource> builder : source.getMethods()) {
-                    if (builder.getParameters().size() == 1 && builder.getName().equals(name)) {
-                        String doc = getJavaDocText(loadJavaSource(classElement.getName()), builder);
-                        if (!Strings.isNullOrEmpty(doc)) {
-                            return doc;
-                        }
-                    }
-                }
-                for (MethodSource<JavaClassSource> builder : source.getMethods()) {
-                    if (builder.getParameters().size() == 0 && builder.getName().equals(name)) {
-                        String doc = getJavaDocText(loadJavaSource(classElement.getName()), builder);
-                        if (!Strings.isNullOrEmpty(doc)) {
-                            return doc;
-                        }
-                    }
+                String doc = getJavaDoc(source, name, classElement.getName());
+                if (doc != null) {
+                    return doc;
                 }
             }
-            for (MethodSource<JavaClassSource> builder : source.getMethods()) {
-                if (builder.getParameters().size() == 1 && builder.getName().equals(fieldName)) {
-                    String doc = getJavaDocText(loadJavaSource(classElement.getName()), builder);
-                    if (!Strings.isNullOrEmpty(doc)) {
-                        return doc;
-                    }
-                }
-            }
-            for (MethodSource<JavaClassSource> builder : source.getMethods()) {
-                if (builder.getParameters().size() == 0 && builder.getName().equals(fieldName)) {
-                    String doc = getJavaDocText(loadJavaSource(classElement.getName()), builder);
-                    if (!Strings.isNullOrEmpty(doc)) {
-                        return doc;
-                    }
-                }
+            String doc = getJavaDoc(source, fieldName, classElement.getName());
+            if (doc != null) {
+                return doc;
             }
         }
 
         return "";
+    }
+
+    private String getJavaDoc(JavaClassSource source, String fieldName, String classElement) {
+        for (MethodSource<JavaClassSource> builder : source.getMethods()) {
+            if (builder.getParameters().size() == 1 && builder.getName().equals(fieldName)) {
+                String doc = getJavaDocText(loadJavaSource(classElement), builder);
+                if (!Strings.isNullOrEmpty(doc)) {
+                    return doc;
+                }
+            }
+        }
+        for (MethodSource<JavaClassSource> builder : source.getMethods()) {
+            if (builder.getParameters().isEmpty() && builder.getName().equals(fieldName)) {
+                String doc = getJavaDocText(loadJavaSource(classElement), builder);
+                if (!Strings.isNullOrEmpty(doc)) {
+                    return doc;
+                }
+            }
+        }
+        return null;
     }
 
     static String getJavaDocText(String source, JavaDocCapable<?> member) {
@@ -1431,9 +1788,10 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
         }
         JavaDoc<?> javaDoc = member.getJavaDoc();
         Javadoc jd = (Javadoc) javaDoc.getInternal();
-        if (source != null && jd.tags().size() > 0) {
+        if (source != null && !jd.tags().isEmpty()) {
             ASTNode n = (ASTNode) jd.tags().get(0);
             String txt = source.substring(n.getStartPosition(), n.getStartPosition() + n.getLength());
+
             return txt
                     .replaceAll(" *\n *\\* *\n", "\n\n")
                     .replaceAll(" *\n *\\* +", "\n");
@@ -1442,30 +1800,30 @@ public class EndpointSchemaGeneratorMojo extends AbstractGeneratorMojo {
     }
 
     private String getDocComment(Class<?> classElement) {
-        JavaClassSource source = javaClassSource(classElement.getName());
+        JavaClassSource source = javaSource(classElement.getName(), JavaClassSource.class);
         return getJavaDocText(loadJavaSource(classElement.getName()), source);
     }
 
-    private JavaClassSource javaClassSource(String className) {
-        return parsed.computeIfAbsent(className, this::doParseJavaClassSource);
+    private <T extends JavaSource<?>> T javaSource(String className, Class<T> targetType) {
+        return targetType.cast(parsed.computeIfAbsent(className, this::doParseJavaSource));
     }
 
     private List<Path> getSourceRoots() {
         if (sourceRoots == null) {
             sourceRoots = project.getCompileSourceRoots().stream()
                     .map(Paths::get)
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return sourceRoots;
     }
 
-    private JavaClassSource doParseJavaClassSource(String className) {
+    private JavaSource<?> doParseJavaSource(String className) {
         try {
             String source = loadJavaSource(className);
-            if (source != null) {
-                return (JavaClassSource) Roaster.parse(source);
-            } else {
+            if (source == null) {
                 return null;
+            } else {
+                return (JavaSource<?>) Roaster.parse(source);
             }
         } catch (Exception e) {
             throw new RuntimeException("Unable to parse java class " + className, e);
