@@ -18,6 +18,9 @@ package org.apache.camel.maven.packaging;
 
 import java.io.File;
 import java.io.IOException;
+import java.net.URI;
+import java.nio.file.FileSystem;
+import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.attribute.BasicFileAttributes;
@@ -25,6 +28,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -44,6 +48,7 @@ import org.apache.camel.tooling.model.EipModel;
 import org.apache.camel.tooling.model.JsonMapper;
 import org.apache.camel.tooling.model.LanguageModel;
 import org.apache.camel.tooling.model.OtherModel;
+import org.apache.camel.tooling.model.TransformerModel;
 import org.apache.camel.tooling.util.FileUtil;
 import org.apache.camel.tooling.util.PackageHelper;
 import org.apache.camel.tooling.util.Strings;
@@ -55,7 +60,14 @@ import org.apache.maven.plugins.annotations.Mojo;
 import org.apache.maven.plugins.annotations.Parameter;
 import org.apache.maven.project.MavenProject;
 import org.apache.maven.project.MavenProjectHelper;
+import org.eclipse.aether.RepositorySystem;
+import org.eclipse.aether.RepositorySystemSession;
+import org.eclipse.aether.artifact.DefaultArtifact;
+import org.eclipse.aether.repository.RemoteRepository;
+import org.eclipse.aether.resolution.ArtifactRequest;
+import org.eclipse.aether.resolution.ArtifactResult;
 
+import static org.apache.camel.maven.packaging.MojoHelper.getComponentPath;
 import static org.apache.camel.tooling.util.PackageHelper.loadText;
 
 /**
@@ -64,12 +76,10 @@ import static org.apache.camel.tooling.util.PackageHelper.loadText;
 @Mojo(name = "prepare-catalog", threadSafe = true)
 public class PrepareCatalogMojo extends AbstractMojo {
 
-    private static final String[] EXCLUDE_DOC_FILES
-            = {
-                    "camel-core-model", "camel-core-xml", "camel-http-common", "camel-http-base", "camel-jetty-common",
-                    "camel-debezium-common", "camel-infinispan-common" };
-
     private static final int UNUSED_LABELS_WARN = 15;
+    public static final String SEPARATOR = "================================================================================";
+    public static final String ADOC = ".adoc";
+    public static final String SRC_GENERATED_RESOURCES = "src/generated/resources";
 
     /**
      * The maven project.
@@ -103,16 +113,16 @@ public class PrepareCatalogMojo extends AbstractMojo {
     protected File languagesOutDir;
 
     /**
+     * The output directory for transformers catalog
+     */
+    @Parameter(defaultValue = "${project.basedir}/src/generated/resources/org/apache/camel/catalog/transformers")
+    protected File transformersOutDir;
+
+    /**
      * The output directory for others catalog
      */
     @Parameter(defaultValue = "${project.basedir}/src/generated/resources/org/apache/camel/catalog/others")
     protected File othersOutDir;
-
-    /**
-     * The output directory for documents catalog
-     */
-    @Parameter(defaultValue = "${project.basedir}/src/generated/resources/org/apache/camel/catalog/docs")
-    protected File documentsOutDir;
 
     /**
      * The output directory for models catalog
@@ -121,10 +131,10 @@ public class PrepareCatalogMojo extends AbstractMojo {
     protected File modelsOutDir;
 
     /**
-     * The output directory for archetypes catalog
+     * The output directory for models-app catalog
      */
-    @Parameter(defaultValue = "${project.basedir}/src/generated/resources/org/apache/camel/catalog/archetypes")
-    protected File archetypesOutDir;
+    @Parameter(defaultValue = "${project.basedir}/src/generated/resources/org/apache/camel/catalog/models-app")
+    protected File modelsAppOutDir;
 
     /**
      * The output directory for XML schemas catalog
@@ -141,62 +151,56 @@ public class PrepareCatalogMojo extends AbstractMojo {
     /**
      * The components directory where all the Apache Camel components are
      */
-    @Parameter(defaultValue = "${project.build.directory}/../../../components")
+    @Parameter(defaultValue = "${project.basedir}/../../components")
     protected File componentsDir;
 
     /**
      * The camel-core directory
      */
-    @Parameter(defaultValue = "${project.build.directory}/../../../core/camel-core-engine")
+    @Parameter(defaultValue = "${project.basedir}/../../core/")
     protected File coreDir;
 
     /**
      * The camel-model directory
      */
-    @Parameter(defaultValue = "${project.build.directory}/../../../core/camel-core-model")
+    @Parameter(defaultValue = "${project.basedir}/../../core/camel-core-model")
     protected File modelDir;
 
     /**
-     * The camel-base directory
+     * The DSL directory
      */
-    @Parameter(defaultValue = "${project.build.directory}/../../../core/camel-base")
-    protected File baseDir;
+    @Parameter(defaultValue = "${project.basedir}/../../dsl")
+    protected File dslDir;
 
     /**
      * The camel-core-languages directory
      */
-    @Parameter(defaultValue = "${project.build.directory}/../../../core/camel-core-languages")
+    @Parameter(defaultValue = "${project.basedir}/../../core/camel-core-languages")
     protected File languagesDir;
-
-    /**
-     * The camel-xml-jaxp directory
-     */
-    @Parameter(defaultValue = "${project.build.directory}/../../../core/camel-xml-jaxp")
-    protected File jaxpDir;
 
     /**
      * The directory where the camel-spring XML models are
      */
-    @Parameter(defaultValue = "${project.build.directory}/../../../components/camel-spring-xml")
+    @Parameter(defaultValue = "${project.basedir}/../../components/camel-spring-xml")
     protected File springDir;
-
-    /**
-     * The archetypes directory where all the Apache Camel Maven archetypes are
-     */
-    @Parameter(defaultValue = "${project.build.directory}/../../../archetypes")
-    protected File archetypesDir;
 
     /**
      * The directory where the camel-spring XML schema are
      */
-    @Parameter(defaultValue = "${project.build.directory}/../../../components/camel-spring-xml/target/schema")
+    @Parameter(defaultValue = "${project.basedir}/../../components/camel-spring-xml/target/schema")
     protected File springSchemaDir;
 
     /**
      * The directory where the camel-main metadata are
      */
-    @Parameter(defaultValue = "${project.build.directory}/../../../core/camel-main/target/classes/META-INF")
+    @Parameter(defaultValue = "${project.basedir}/../../core/camel-main/target/classes/META-INF")
     protected File mainDir;
+
+    /**
+     * Skip the execution of this mojo
+     */
+    @Parameter(defaultValue = "false", property = "camel.prepare-catalog.skip")
+    protected boolean skip;
 
     /**
      * Maven ProjectHelper.
@@ -204,27 +208,88 @@ public class PrepareCatalogMojo extends AbstractMojo {
     @Component
     protected MavenProjectHelper projectHelper;
 
+    @Component
+    private RepositorySystem repoSystem;
+
+    @Parameter(defaultValue = "${repositorySystemSession}", readonly = true, required = true)
+    private RepositorySystemSession repoSession;
+
+    @Parameter(defaultValue = "${project.remoteProjectRepositories}", readonly = true, required = true)
+    private List<RemoteRepository> repositories;
+
     private Collection<Path> allJsonFiles;
     private Collection<Path> allPropertiesFiles;
-    private Map<Path, BaseModel<?>> allModels;
+    private final Map<Path, BaseModel<?>> allModels = new HashMap<>();
 
     private static String asComponentName(Path file) {
         String name = file.getFileName().toString();
         if (name.endsWith(PackageHelper.JSON_SUFIX)) {
             return name.substring(0, name.length() - PackageHelper.JSON_SUFIX.length());
-        } else if (name.endsWith(".adoc")) {
-            return name.substring(0, name.length() - ".adoc".length());
+        } else if (name.endsWith(ADOC)) {
+            return name.substring(0, name.length() - ADOC.length());
         }
         return name;
     }
 
-    private static boolean excludeDocumentDir(String name) {
-        for (String exclude : EXCLUDE_DOC_FILES) {
-            if (exclude.equals(name)) {
-                return true;
+    /**
+     * Gives the {@code target/classes} directory if it already exists, otherwise downloads the corresponding artifact
+     * and unzips its content into the {@code target/classes} directory to support incremental build.
+     *
+     * @param  componentRootDirectory the root directory of a given component
+     * @return                        the path to the {@code target/classes} directory.
+     */
+    private Path getComponentClassesDirectory(Path componentRootDirectory) {
+        Path result = componentRootDirectory.resolve("target/classes");
+        if (Files.exists(result)) {
+            return result;
+        }
+        String artifactId = componentRootDirectory.getFileName().toString();
+        ArtifactRequest req = new ArtifactRequest()
+                .setRepositories(this.repositories)
+                .setArtifact(new DefaultArtifact("org.apache.camel", artifactId, "jar", project.getVersion()));
+        try {
+            ArtifactResult resolutionResult = this.repoSystem.resolveArtifact(this.repoSession, req);
+            File file = resolutionResult.getArtifact().getFile();
+            if (file != null && file.exists()) {
+                unzipArtifact(result, file);
+            }
+        } catch (Exception e) {
+            getLog().warn("Artifact %s could not be resolved.".formatted(artifactId), e);
+        }
+
+        return result;
+    }
+
+    /**
+     * Unzips the given jar file into the given target directory.
+     *
+     * @param  targetDirectory the target directory
+     * @param  jarFile         the jar file to unzip
+     * @throws IOException     if an error occurs while unzipping the file.
+     */
+    private void unzipArtifact(Path targetDirectory, File jarFile) throws IOException {
+        Path targetRoot = targetDirectory.normalize();
+        try (FileSystem fs = FileSystems.newFileSystem(URI.create("jar:%s".formatted(jarFile.toURI())), Map.of())) {
+            for (Path root : fs.getRootDirectories()) {
+                try (Stream<Path> walk = Files.walk(root)) {
+                    walk.forEach(
+                            source -> {
+                                Path target = targetRoot.resolve(root.relativize(source).toString()).normalize();
+                                if (target.startsWith(targetRoot)) {
+                                    try {
+                                        if (Files.isDirectory(source)) {
+                                            Files.createDirectories(target);
+                                        } else {
+                                            Files.copy(source, target);
+                                        }
+                                    } catch (IOException e) {
+                                        getLog().warn("Could not copy %s to %s.".formatted(source, target), e);
+                                    }
+                                }
+                            });
+                }
             }
         }
-        return false;
     }
 
     /**
@@ -240,31 +305,77 @@ public class PrepareCatalogMojo extends AbstractMojo {
             allJsonFiles = new TreeSet<>();
             allPropertiesFiles = new TreeSet<>();
 
-            Stream.concat(list(componentsDir.toPath()),
-                    Stream.of(coreDir.toPath(), modelDir.toPath(), baseDir.toPath(), languagesDir.toPath(), jaxpDir.toPath(),
-                            springDir.toPath()))
-                    .filter(dir -> !"target".equals(dir.getFileName().toString()))
+            try (Stream<Path> paths
+                    = Stream.of(list(coreDir.toPath()), list(componentsDir.toPath())).flatMap(s -> s);
+                 Stream<Path> stream = Stream.concat(paths,
+                         Stream.of(languagesDir.toPath(), springDir.toPath()))
+                         .filter(dir -> !"target".equals(dir.getFileName().toString()))
+                         .flatMap(p -> getComponentPath(p).stream())
+                         .filter(dir -> Files.isDirectory(dir.resolve("src")))
+                         .map(this::getComponentClassesDirectory)
+                         .flatMap(PackageHelper::walk)
+                         .filter(Files::isRegularFile)) {
+                stream
+                        .forEach(p -> {
+                            String f = p.getFileName().toString();
+                            if (f.endsWith(PackageHelper.JSON_SUFIX)) {
+                                allJsonFiles.add(p);
+                            } else if (f.equals("component.properties") || f.equals("dataformat.properties")
+                                    || f.equals("language.properties") || f.equals("other.properties")
+                                    || f.equals("transformer.properties")) {
+                                allPropertiesFiles.add(p);
+                            }
+                        });
+            }
+
+            for (Path p : allJsonFiles) {
+                var m = JsonMapper.generateModel(p);
+                if (m != null) {
+                    allModels.put(p, m);
+                }
+            }
+
+            // special for dsl-dir as its built after camel-catalog, so we can only look inside src/generated
+            try (Stream<Path> stream = Stream.of(list(dslDir.toPath())).flatMap(s -> s)
                     .flatMap(p -> getComponentPath(p).stream())
-                    .filter(dir -> Files.isDirectory(dir.resolve("src")))
-                    .map(p -> p.resolve("target/classes"))
-                    .flatMap(PackageHelper::walk).forEach(p -> {
-                        String f = p.getFileName().toString();
-                        if (f.endsWith(PackageHelper.JSON_SUFIX)) {
-                            allJsonFiles.add(p);
-                        } else if (f.equals("component.properties") || f.equals("dataformat.properties")
-                                || f.equals("language.properties") || f.equals("other.properties")) {
-                            allPropertiesFiles.add(p);
-                        }
-                    });
-            allModels = allJsonFiles.stream().collect(Collectors.toMap(p -> p, JsonMapper::generateModel));
+                    .filter(dir -> Files.isDirectory(dir.resolve(SRC_GENERATED_RESOURCES)))
+                    .map(p -> p.resolve(SRC_GENERATED_RESOURCES))
+                    .flatMap(PackageHelper::walk)
+                    .filter(Files::isRegularFile)) {
+                stream
+                        .forEach(p -> {
+                            String f = p.getFileName().toString();
+                            if (f.endsWith(PackageHelper.JSON_SUFIX)) {
+                                allJsonFiles.add(p);
+                                var m = JsonMapper.generateModel(p);
+                                if (m instanceof OtherModel) {
+                                    OtherModel om = (OtherModel) m;
+                                    if (!project.getVersion().equals(om.getVersion())) {
+                                        // update version in model and file because we prepare catalog before we build DSL
+                                        // so their previous generated model files may use previous version (eg 3.x.0-SNAPSHOT -> 3.15.0)
+                                        try {
+                                            String s = Files.readString(p);
+                                            s = s.replaceAll(om.getVersion(), project.getVersion());
+                                            FileUtil.updateFile(p, s);
+                                        } catch (IOException e) {
+                                            // ignore
+                                        }
+                                        om.setVersion(project.getVersion());
+                                    }
+                                    allModels.put(p, m);
+                                }
+                            }
+                        });
+            }
 
             executeModel();
+            executeModelApps();
             Set<String> components = executeComponents();
             Set<String> dataformats = executeDataFormats();
             Set<String> languages = executeLanguages();
+            Set<String> transformers = executeTransformers();
             Set<String> others = executeOthers();
             executeDocuments(components, dataformats, languages, others);
-            executeArchetypes();
             executeXmlSchemas();
             executeMain();
         } catch (Exception e) {
@@ -273,11 +384,11 @@ public class PrepareCatalogMojo extends AbstractMojo {
     }
 
     protected void executeModel() throws Exception {
-        Path coreDir = this.modelDir.toPath();
-        Path springDir = this.springDir.toPath();
+        Path modelDir = this.modelDir.toPath();
+        this.springDir.toPath();
         Path modelsOutDir = this.modelsOutDir.toPath();
 
-        getLog().info("================================================================================");
+        getLog().info(SEPARATOR);
         getLog().info("Copying all Camel model json descriptors");
 
         // lets use sorted set/maps
@@ -287,12 +398,12 @@ public class PrepareCatalogMojo extends AbstractMojo {
         Set<Path> missingJavaDoc = new TreeSet<>();
         Map<String, Set<String>> usedLabels = new TreeMap<>();
 
-        // find all json files in camel-core and camel-spring
-        Path coreDirTarget = coreDir.resolve("target/classes/org/apache/camel/model");
-        Path springTarget1 = springDir.resolve("target/classes/org/apache/camel/spring");
-        Path springTarget2 = springDir.resolve("target/classes/org/apache/camel/core/xml");
+        // find all json files in camel-core
+        Path coreDirTarget = modelDir.resolve("target/classes/org/apache/camel/model");
+        Path coreModelAppDirTarget = modelDir.resolve("target/classes/org/apache/camel/model/app");
         jsonFiles = allJsonFiles.stream()
-                .filter(p -> p.startsWith(coreDirTarget) || p.startsWith(springTarget1) || p.startsWith(springTarget2))
+                .filter(p -> p.startsWith(coreDirTarget))
+                .filter(p -> !p.startsWith(coreModelAppDirTarget))
                 .collect(Collectors.toCollection(TreeSet::new));
         getLog().info("Found " + jsonFiles.size() + " model json files");
 
@@ -303,7 +414,9 @@ public class PrepareCatalogMojo extends AbstractMojo {
 
         // Copy all descriptors
         Map<Path, Path> newJsons = map(jsonFiles, p -> p, p -> modelsOutDir.resolve(p.getFileName()));
-        list(modelsOutDir).filter(p -> !newJsons.containsValue(p)).forEach(this::delete);
+        try (Stream<Path> stream = list(modelsOutDir).filter(p -> !newJsons.containsValue(p))) {
+            stream.forEach(this::delete);
+        }
         newJsons.forEach(this::copy);
 
         for (Path file : jsonFiles) {
@@ -340,7 +453,39 @@ public class PrepareCatalogMojo extends AbstractMojo {
         printModelsReport(jsonFiles, duplicateJsonFiles, missingLabels, usedLabels, missingJavaDoc);
     }
 
-    // CHECKSTYLE:OFF
+    protected void executeModelApps() throws Exception {
+        Path modelDir = this.modelDir.toPath();
+        Path modelsOutDir = this.modelsAppOutDir.toPath();
+
+        getLog().info(SEPARATOR);
+        getLog().info("Copying all Camel model-app json descriptors");
+
+        // lets use sorted set/maps
+        Set<Path> jsonFiles;
+
+        // find all json files in camel-core
+        Path coreDirTarget = modelDir.resolve("target/classes/org/apache/camel/model/app");
+        jsonFiles = allJsonFiles.stream()
+                .filter(p -> p.startsWith(coreDirTarget))
+                .collect(Collectors.toCollection(TreeSet::new));
+        getLog().info("Found " + jsonFiles.size() + " model-app json files");
+
+        // make sure to create out dir
+        Files.createDirectories(modelsOutDir);
+
+        // Copy all descriptors
+        Map<Path, Path> newJsons = map(jsonFiles, p -> p, p -> modelsOutDir.resolve(p.getFileName()));
+        try (Stream<Path> stream = list(modelsOutDir).filter(p -> !newJsons.containsValue(p))) {
+            stream.forEach(this::delete);
+        }
+        newJsons.forEach(this::copy);
+
+        Path all = modelsOutDir.resolve("../models-app.properties");
+        Set<String> modelNames
+                = jsonFiles.stream().map(PrepareCatalogMojo::asComponentName).collect(Collectors.toCollection(TreeSet::new));
+        FileUtil.updateFile(all, String.join("\n", modelNames) + "\n");
+    }
+
     protected Set<String> executeComponents() throws Exception {
         Path componentsOutDir = this.componentsOutDir.toPath();
 
@@ -357,11 +502,13 @@ public class PrepareCatalogMojo extends AbstractMojo {
         Set<Path> missingFirstVersions = new TreeSet<>();
 
         // find all json files in components and camel-core
-        componentFiles = allPropertiesFiles.stream().filter(p -> p.endsWith("component.properties")).collect(Collectors.toCollection(TreeSet::new));
-        jsonFiles = allJsonFiles.stream().filter(p -> allModels.get(p) instanceof ComponentModel).collect(Collectors.toCollection(TreeSet::new));
+        componentFiles = allPropertiesFiles.stream().filter(p -> p.endsWith("component.properties"))
+                .collect(Collectors.toCollection(TreeSet::new));
+        jsonFiles = allJsonFiles.stream().filter(p -> allModels.get(p) instanceof ComponentModel)
+                .collect(Collectors.toCollection(TreeSet::new));
         componentFiles.stream().filter(p -> p.endsWith("component.properties")).forEach(p -> {
             Path parent = getModule(p);
-            List<Path> jsons = jsonFiles.stream().filter(f -> f.startsWith(parent)).collect(Collectors.toList());
+            List<Path> jsons = jsonFiles.stream().filter(f -> f.startsWith(parent)).toList();
             if (jsons.isEmpty()) {
                 missingComponents.add(parent);
             }
@@ -378,7 +525,9 @@ public class PrepareCatalogMojo extends AbstractMojo {
 
         // Copy all descriptors
         Map<Path, Path> newJsons = map(jsonFiles, p -> p, p -> componentsOutDir.resolve(p.getFileName()));
-        list(componentsOutDir).filter(p -> !newJsons.containsValue(p)).forEach(this::delete);
+        try (Stream<Path> stream = list(componentsOutDir).filter(p -> !newJsons.containsValue(p))) {
+            stream.forEach(this::delete);
+        }
         newJsons.forEach(this::copy);
 
         Set<String> alternativeSchemes = new HashSet<>();
@@ -402,14 +551,17 @@ public class PrepareCatalogMojo extends AbstractMojo {
 
                 // check all the component options and grab the label(s) they
                 // use
-                model.getComponentOptions().stream().map(BaseOptionModel::getLabel).filter(l -> !Strings.isNullOrEmpty(l)).flatMap(l -> Stream.of(label.split(",")))
-                    .forEach(usedOptionLabels::add);
+                model.getComponentOptions().stream().map(BaseOptionModel::getLabel).filter(l -> !Strings.isNullOrEmpty(l))
+                        .flatMap(l -> Stream.of(label.split(",")))
+                        .forEach(usedOptionLabels::add);
 
                 // check all the endpoint options and grab the label(s) they use
-                model.getEndpointOptions().stream().map(BaseOptionModel::getLabel).filter(l -> !Strings.isNullOrEmpty(l)).flatMap(l -> Stream.of(label.split(",")))
-                    .forEach(usedOptionLabels::add);
+                model.getEndpointOptions().stream().map(BaseOptionModel::getLabel).filter(l -> !Strings.isNullOrEmpty(l))
+                        .flatMap(l -> Stream.of(label.split(",")))
+                        .forEach(usedOptionLabels::add);
 
-                long unused = model.getEndpointOptions().stream().map(BaseOptionModel::getLabel).filter(Strings::isNullOrEmpty).count();
+                long unused = model.getEndpointOptions().stream().map(BaseOptionModel::getLabel).filter(Strings::isNullOrEmpty)
+                        .count();
                 if (unused >= UNUSED_LABELS_WARN) {
                     unlabeledOptions.add(name);
                 }
@@ -434,10 +586,12 @@ public class PrepareCatalogMojo extends AbstractMojo {
         }
 
         Path all = componentsOutDir.resolve("../components.properties");
-        Set<String> componentNames = jsonFiles.stream().map(PrepareCatalogMojo::asComponentName).collect(Collectors.toCollection(TreeSet::new));
+        Set<String> componentNames
+                = jsonFiles.stream().map(PrepareCatalogMojo::asComponentName).collect(Collectors.toCollection(TreeSet::new));
         FileUtil.updateFile(all, String.join("\n", componentNames) + "\n");
 
-        printComponentsReport(jsonFiles, duplicateJsonFiles, missingComponents, usedComponentLabels, usedOptionLabels, unlabeledOptions, missingFirstVersions);
+        printComponentsReport(jsonFiles, duplicateJsonFiles, missingComponents, usedComponentLabels, usedOptionLabels,
+                unlabeledOptions, missingFirstVersions);
 
         // filter out duplicate component names that are alternative scheme
         // names
@@ -458,8 +612,10 @@ public class PrepareCatalogMojo extends AbstractMojo {
         Set<Path> missingFirstVersions = new TreeSet<>();
 
         // find all data formats from the components directory
-        dataFormatFiles = allPropertiesFiles.stream().filter(p -> p.endsWith("dataformat.properties")).collect(Collectors.toCollection(TreeSet::new));
-        jsonFiles = allJsonFiles.stream().filter(p -> allModels.get(p) instanceof DataFormatModel).collect(Collectors.toCollection(TreeSet::new));
+        dataFormatFiles = allPropertiesFiles.stream().filter(p -> p.endsWith("dataformat.properties"))
+                .collect(Collectors.toCollection(TreeSet::new));
+        jsonFiles = allJsonFiles.stream().filter(p -> allModels.get(p) instanceof DataFormatModel)
+                .collect(Collectors.toCollection(TreeSet::new));
 
         getLog().info("Found " + dataFormatFiles.size() + " dataformat.properties files");
         getLog().info("Found " + jsonFiles.size() + " dataformat json files");
@@ -472,7 +628,9 @@ public class PrepareCatalogMojo extends AbstractMojo {
 
         // Copy all descriptors
         Map<Path, Path> newJsons = map(jsonFiles, p -> p, p -> dataFormatsOutDir.resolve(p.getFileName()));
-        list(dataFormatsOutDir).filter(p -> !newJsons.containsValue(p)).forEach(this::delete);
+        try (Stream<Path> stream = list(dataFormatsOutDir).filter(p -> !newJsons.containsValue(p))) {
+            stream.forEach(this::delete);
+        }
         newJsons.forEach(this::copy);
 
         for (Path file : jsonFiles) {
@@ -493,7 +651,8 @@ public class PrepareCatalogMojo extends AbstractMojo {
         }
 
         Path all = dataFormatsOutDir.resolve("../dataformats.properties");
-        Set<String> dataFormatNames = jsonFiles.stream().map(PrepareCatalogMojo::asComponentName).collect(Collectors.toCollection(TreeSet::new));
+        Set<String> dataFormatNames
+                = jsonFiles.stream().map(PrepareCatalogMojo::asComponentName).collect(Collectors.toCollection(TreeSet::new));
         FileUtil.updateFile(all, String.join("\n", dataFormatNames) + "\n");
 
         printDataFormatsReport(jsonFiles, duplicateJsonFiles, usedLabels, missingFirstVersions);
@@ -514,8 +673,10 @@ public class PrepareCatalogMojo extends AbstractMojo {
         Set<Path> missingFirstVersions = new TreeSet<>();
 
         // find all languages from the components directory
-        languageFiles = allPropertiesFiles.stream().filter(p -> p.endsWith("language.properties")).collect(Collectors.toCollection(TreeSet::new));
-        jsonFiles = allJsonFiles.stream().filter(p -> allModels.get(p) instanceof LanguageModel).collect(Collectors.toCollection(TreeSet::new));
+        languageFiles = allPropertiesFiles.stream().filter(p -> p.endsWith("language.properties"))
+                .collect(Collectors.toCollection(TreeSet::new));
+        jsonFiles = allJsonFiles.stream().filter(p -> allModels.get(p) instanceof LanguageModel)
+                .collect(Collectors.toCollection(TreeSet::new));
 
         getLog().info("Found " + languageFiles.size() + " language.properties files");
         getLog().info("Found " + jsonFiles.size() + " language json files");
@@ -528,7 +689,9 @@ public class PrepareCatalogMojo extends AbstractMojo {
 
         // Copy all descriptors
         Map<Path, Path> newJsons = map(jsonFiles, p -> p, p -> languagesOutDir.resolve(p.getFileName()));
-        list(languagesOutDir).filter(p -> !newJsons.containsValue(p)).forEach(this::delete);
+        try (Stream<Path> stream = list(languagesOutDir).filter(p -> !newJsons.containsValue(p))) {
+            stream.forEach(this::delete);
+        }
         newJsons.forEach(this::copy);
 
         for (Path file : jsonFiles) {
@@ -549,12 +712,55 @@ public class PrepareCatalogMojo extends AbstractMojo {
         }
 
         Path all = languagesOutDir.resolve("../languages.properties");
-        Set<String> languagesNames = jsonFiles.stream().map(PrepareCatalogMojo::asComponentName).collect(Collectors.toCollection(TreeSet::new));
+        Set<String> languagesNames
+                = jsonFiles.stream().map(PrepareCatalogMojo::asComponentName).collect(Collectors.toCollection(TreeSet::new));
         FileUtil.updateFile(all, String.join("\n", languagesNames) + "\n");
 
         printLanguagesReport(jsonFiles, duplicateJsonFiles, usedLabels, missingFirstVersions);
 
         return languagesNames;
+    }
+
+    protected Set<String> executeTransformers() throws Exception {
+        Path transformersOutDir = this.transformersOutDir.toPath();
+
+        getLog().info("Copying all Camel transformer json descriptors");
+
+        // lets use sorted set/maps
+        Set<Path> jsonFiles;
+        Set<Path> duplicateJsonFiles;
+        Set<Path> transformerFiles;
+
+        // find all transformers from the components directory
+        transformerFiles = allPropertiesFiles.stream().filter(p -> p.endsWith("transformer.properties"))
+                .collect(Collectors.toCollection(TreeSet::new));
+        jsonFiles = allJsonFiles.stream().filter(p -> allModels.get(p) instanceof TransformerModel)
+                .collect(Collectors.toCollection(TreeSet::new));
+
+        getLog().info("Found " + transformerFiles.size() + " transformer.properties files");
+        getLog().info("Found " + jsonFiles.size() + " transformer json files");
+
+        // make sure to create out dir
+        Files.createDirectories(transformersOutDir);
+
+        // Check duplicates
+        duplicateJsonFiles = getDuplicates(jsonFiles);
+
+        // Copy all descriptors
+        Map<Path, Path> newJsons = map(jsonFiles, p -> p, p -> transformersOutDir.resolve(p.getFileName()));
+        try (Stream<Path> stream = list(transformersOutDir).filter(p -> !newJsons.containsValue(p))) {
+            stream.forEach(this::delete);
+        }
+        newJsons.forEach(this::copy);
+
+        Path all = transformersOutDir.resolve("../transformers.properties");
+        Set<String> transformerNames
+                = jsonFiles.stream().map(PrepareCatalogMojo::asComponentName).collect(Collectors.toCollection(TreeSet::new));
+        FileUtil.updateFile(all, String.join("\n", transformerNames) + "\n");
+
+        printTransformersReport(jsonFiles, duplicateJsonFiles);
+
+        return transformerNames;
     }
 
     private Set<String> executeOthers() throws Exception {
@@ -569,25 +775,58 @@ public class PrepareCatalogMojo extends AbstractMojo {
         Map<String, Set<String>> usedLabels = new TreeMap<>();
         Set<Path> missingFirstVersions = new TreeSet<>();
 
-        otherFiles = allPropertiesFiles.stream().filter(p -> p.endsWith("other.properties")).collect(Collectors.toCollection(TreeSet::new));
+        otherFiles = allPropertiesFiles.stream().filter(p -> p.endsWith("other.properties"))
+                .collect(Collectors.toCollection(TreeSet::new));
         jsonFiles = allJsonFiles.stream().filter(p -> {
             Path m = getModule(p);
             switch (m.getFileName().toString()) {
+                // we want to skip some JARs from core
+                case "camel-api":
+                case "camel-base":
+                case "camel-base-engine":
+                case "camel-core":
+                case "camel-core-catalog":
+                case "camel-core-engine":
+                case "camel-core-languages":
                 case "camel-core-model":
+                case "camel-core-processor":
+                case "camel-core-reifier":
                 case "camel-core-xml":
+                case "camel-management-api":
+                case "camel-support":
+                case "camel-util":
+                case "camel-xml-io":
+                case "camel-xml-io-util":
+                case "camel-xml-jaxb":
+                case "camel-xml-jaxp":
+                    // and some from dsl
+                case "dsl-support":
+                case "camel-dsl-support":
+                case "camel-endpointdsl-support":
+                    // and components with middle folders
+                case "camel-as2":
+                case "camel-avro-rpc":
+                case "camel-aws":
+                case "camel-azure":
                 case "camel-box":
+                case "camel-cxf":
+                case "camel-debezium":
+                case "camel-debezium-common":
+                case "camel-fhir":
+                case "camel-google":
                 case "camel-http-base":
                 case "camel-http-common":
+                case "camel-huawei":
+                case "camel-infinispan":
                 case "camel-jetty-common":
-                case "camel-as2":
+                case "camel-kantive":
+                case "camel-microprofile":
                 case "camel-olingo2":
                 case "camel-olingo4":
-                case "camel-servicenow":
                 case "camel-salesforce":
-                case "camel-fhir":
-                case "camel-debezium-common":
-                case "camel-vertx-kafka":
-                case "camel-infinispan":
+                case "camel-servicenow":
+                case "camel-test":
+                case "camel-vertx":
                     return false;
                 default:
                     return true;
@@ -605,7 +844,9 @@ public class PrepareCatalogMojo extends AbstractMojo {
 
         // Copy all descriptors
         Map<Path, Path> newJsons = map(jsonFiles, p -> p, p -> othersOutDir.resolve(p.getFileName()));
-        list(othersOutDir).filter(p -> !newJsons.containsValue(p)).forEach(this::delete);
+        try (Stream<Path> stream = list(othersOutDir).filter(p -> !newJsons.containsValue(p))) {
+            stream.forEach(this::delete);
+        }
         newJsons.forEach(this::copy);
 
         for (Path file : jsonFiles) {
@@ -631,22 +872,13 @@ public class PrepareCatalogMojo extends AbstractMojo {
         }
 
         Path all = othersOutDir.resolve("../others.properties");
-        Set<String> otherNames = jsonFiles.stream().map(PrepareCatalogMojo::asComponentName).collect(Collectors.toCollection(TreeSet::new));
+        Set<String> otherNames
+                = jsonFiles.stream().map(PrepareCatalogMojo::asComponentName).collect(Collectors.toCollection(TreeSet::new));
         FileUtil.updateFile(all, String.join("\n", otherNames) + "\n");
 
         printOthersReport(jsonFiles, duplicateJsonFiles, usedLabels, missingFirstVersions);
 
         return otherNames;
-    }
-
-    protected void executeArchetypes() throws Exception {
-        Path archetypesDir = this.archetypesDir.toPath();
-        Path archetypesOutDir = this.archetypesOutDir.toPath();
-
-        getLog().info("Copying Archetype Catalog");
-
-        // find the generate catalog
-        copyFile(archetypesDir.resolve("target/classes/archetype-catalog.xml"), archetypesOutDir);
     }
 
     protected void executeXmlSchemas() throws Exception {
@@ -664,57 +896,52 @@ public class PrepareCatalogMojo extends AbstractMojo {
         copyFile(mainDir.toPath().resolve("camel-main-configuration-metadata.json"), mainOutDir.toPath());
     }
 
-    protected void executeDocuments(Set<String> components, Set<String> dataformats, Set<String> languages, Set<String> others) throws Exception {
-        Path documentsOutDir = this.documentsOutDir.toPath();
-
-        getLog().info("Copying all Camel documents (ascii docs)");
-
+    protected void executeDocuments(
+            Set<String> components, Set<String> dataformats, Set<String> languages, Set<String> others) {
         // lets use sorted set/maps
         Set<Path> adocFiles = new TreeSet<>();
         Set<Path> missingAdocFiles = new TreeSet<>();
-        Set<Path> duplicateAdocFiles = new TreeSet<>();
+        Set<Path> duplicateAdocFiles;
 
         // find all camel maven modules
-        Stream.concat(
-            list(componentsDir.toPath())
-                .filter(dir -> !dir.getFileName().startsWith(".") && !"target".equals(dir.getFileName().toString()))
-                .flatMap(p -> getComponentPath(p).stream()),
-            Stream.of(coreDir.toPath(), baseDir.toPath(), languagesDir.toPath(), jaxpDir.toPath()))
-            .forEach(dir -> {
-                List<Path> l = PackageHelper.walk(dir.resolve("src/main/docs"))
-                    .filter(f -> f.getFileName().toString().endsWith(".adoc"))
-                    .collect(Collectors.toList());
+        try (Stream<Path> stream = Stream.concat(
+                list(componentsDir.toPath())
+                        .filter(dir -> !dir.getFileName().startsWith(".") && !"target".equals(dir.getFileName().toString()))
+                        .flatMap(p -> getComponentPath(p).stream()),
+                Stream.of(coreDir.toPath(), languagesDir.toPath()))) {
+            stream
+                    .forEach(dir -> {
+                        try (Stream<Path> pathStream = PackageHelper.walk(dir.resolve("src/main/docs"))
+                                .filter(f -> f.getFileName().toString().endsWith(ADOC))) {
+                            List<Path> l = pathStream
+                                    .toList();
 
-                if (l.isEmpty()) {
-                    String n = dir.getFileName().toString();
-                    boolean isDir = dir.toFile().isDirectory();
-                    boolean valid = isDir && !n.startsWith(".") && !n.endsWith("-base") && !n.endsWith("-common");
-                    if (valid) {
-                        missingAdocFiles.add(dir);
-                    }
-                } else {
-                    adocFiles.addAll(l);
-                }
-            });
+                            if (l.isEmpty()) {
+                                String n = dir.getFileName().toString();
+                                boolean isDir = dir.toFile().isDirectory();
+                                boolean valid = isDir && !n.startsWith(".") && !n.endsWith("-base") && !n.endsWith("-common")
+                                        && !n.equals("src");
+                                if (valid) {
+                                    // the dir must be active (inactive can be removed component from old branch)
+                                    String[] poms = dir.toFile().list((dir1, name) -> "pom.xml".equals(name));
+                                    valid = poms != null && poms.length == 1;
+                                }
+                                if (valid) {
+                                    missingAdocFiles.add(dir);
+                                }
+                            } else {
+                                adocFiles.addAll(l);
+                            }
+                        }
+                    });
+        }
 
         getLog().info("Found " + adocFiles.size() + " ascii document files");
 
-        // make sure to create out dir
-        Files.createDirectories(documentsOutDir);
-
         // Check duplicates
         duplicateAdocFiles = getDuplicates(adocFiles);
-
-        // Copy all descriptors
-        Map<Path, Path> newJsons = map(adocFiles, p -> p, p -> documentsOutDir.resolve(p.getFileName()));
-        list(documentsOutDir).filter(p -> !newJsons.containsValue(p) && !newJsons.containsValue(p.resolveSibling(p.getFileName().toString().replace(".html", ".adoc"))))
-            .forEach(this::delete);
-        newJsons.forEach(this::copy);
-
-        Path all = documentsOutDir.resolve("../docs.properties");
-        Set<String> docNames = adocFiles.stream().map(PrepareCatalogMojo::asComponentName).collect(Collectors.toCollection(TreeSet::new));
-        FileUtil.updateFile(all, String.join("\n", docNames) + "\n");
-
+        Set<String> docNames
+                = adocFiles.stream().map(PrepareCatalogMojo::asComponentName).collect(Collectors.toCollection(TreeSet::new));
         printDocumentsReport(adocFiles, duplicateAdocFiles, missingAdocFiles);
 
         // find out if we have documents for each component / dataformat /
@@ -722,7 +949,8 @@ public class PrepareCatalogMojo extends AbstractMojo {
         printMissingDocumentsReport(docNames, components, dataformats, languages, others);
     }
 
-    private void printMissingDocumentsReport(Set<String> docs, Set<String> components, Set<String> dataformats, Set<String> languages, Set<String> others) {
+    private void printMissingDocumentsReport(
+            Set<String> docs, Set<String> components, Set<String> dataformats, Set<String> languages, Set<String> others) {
         getLog().info("");
         getLog().info("Camel missing documents report");
         getLog().info("");
@@ -746,16 +974,15 @@ public class PrepareCatalogMojo extends AbstractMojo {
                     break;
             }
             String name = component + "-component";
-            if (!docs.contains(name) && (!component.equalsIgnoreCase("salesforce") && !component.equalsIgnoreCase("servicenow"))) {
+            if (!docs.contains(name)
+                    && (!component.equalsIgnoreCase("salesforce") && !component.equalsIgnoreCase("servicenow"))) {
                 missing.add(name);
             }
         }
         if (!missing.isEmpty()) {
             getLog().info("");
             getLog().warn("\tMissing .adoc component documentation: " + missing.size());
-            for (String name : missing) {
-                getLog().warn("\t\t" + name);
-            }
+            printMissingWarning(missing);
         }
         missing.clear();
 
@@ -772,9 +999,7 @@ public class PrepareCatalogMojo extends AbstractMojo {
         if (!missing.isEmpty()) {
             getLog().info("");
             getLog().warn("\tMissing .adoc dataformat documentation: " + missing.size());
-            for (String name : missing) {
-                getLog().warn("\t\t" + name);
-            }
+            printMissingWarning(missing);
         }
         missing.clear();
 
@@ -787,108 +1012,124 @@ public class PrepareCatalogMojo extends AbstractMojo {
         if (!missing.isEmpty()) {
             getLog().info("");
             getLog().warn("\tMissing .adoc language documentation: " + missing.size());
-            for (String name : missing) {
-                getLog().warn("\t\t" + name);
-            }
+            printMissingWarning(missing);
         }
         missing.clear();
 
         for (String other : others) {
-            String name = other;
-            if (!docs.contains(name)) {
-                missing.add(name);
+
+            if (!docs.contains(other)) {
+                missing.add(other);
             }
         }
         if (!missing.isEmpty()) {
             getLog().info("");
             getLog().warn("\tMissing .adoc other documentation: " + missing.size());
-            for (String name : missing) {
-                getLog().warn("\t\t" + name);
-            }
+            printMissingWarning(missing);
         }
         missing.clear();
 
         getLog().info("");
-        getLog().info("================================================================================");
+        getLog().info(SEPARATOR);
     }
 
-    private void printModelsReport(Set<Path> json, Set<Path> duplicate, Set<Path> missingLabels, Map<String, Set<String>> usedLabels, Set<Path> missingJavaDoc) {
-        getLog().info("================================================================================");
+    private void printMissingWarning(List<String> missing) {
+        for (String name : missing) {
+            getLog().warn("\t\t" + name);
+        }
+    }
+
+    private void printModelsReport(
+            Set<Path> json, Set<Path> duplicate, Set<Path> missingLabels, Map<String, Set<String>> usedLabels,
+            Set<Path> missingJavaDoc) {
+        getLog().info(SEPARATOR);
 
         getLog().info("");
         getLog().info("Camel model catalog report");
         getLog().info("");
         getLog().info("\tModels found: " + json.size());
-        for (Path file : json) {
-            getLog().info("\t\t" + asComponentName(file));
-        }
+        printComponentDebug(json);
         if (!duplicate.isEmpty()) {
             getLog().info("");
             getLog().warn("\tDuplicate models detected: " + duplicate.size());
-            for (Path file : duplicate) {
-                getLog().warn("\t\t" + asComponentName(file));
-            }
+            printComponentWarning(duplicate);
         }
         if (!missingLabels.isEmpty()) {
             getLog().info("");
             getLog().warn("\tMissing labels detected: " + missingLabels.size());
-            for (Path file : missingLabels) {
-                getLog().warn("\t\t" + asComponentName(file));
-            }
+            printComponentWarning(missingLabels);
         }
-        if (!usedLabels.isEmpty()) {
-            getLog().info("");
-            getLog().info("\tUsed labels: " + usedLabels.size());
-            for (Map.Entry<String, Set<String>> entry : usedLabels.entrySet()) {
-                getLog().info("\t\t" + entry.getKey() + ":");
-                for (String name : entry.getValue()) {
-                    getLog().info("\t\t\t" + name);
-                }
-            }
-        }
+        printUsedLabels(usedLabels);
         if (!missingJavaDoc.isEmpty()) {
             getLog().info("");
             getLog().warn("\tMissing javadoc on models: " + missingJavaDoc.size());
-            for (Path file : missingJavaDoc) {
-                getLog().warn("\t\t" + asComponentName(file));
-            }
+            printComponentWarning(missingJavaDoc);
         }
         getLog().info("");
-        getLog().info("================================================================================");
+        getLog().info(SEPARATOR);
     }
 
-    private void printComponentsReport(Set<Path> json, Set<Path> duplicate, Set<Path> missing, Map<String, Set<String>> usedComponentLabels, Set<String> usedOptionsLabels,
-                                       Set<String> unusedLabels, Set<Path> missingFirstVersions) {
-        getLog().info("================================================================================");
+    private void printComponentWarning(Set<Path> duplicate) {
+        for (Path file : duplicate) {
+            getLog().warn("\t\t" + asComponentName(file));
+        }
+    }
+
+    private void printComponentDebug(Set<Path> json) {
+        if (getLog().isDebugEnabled()) {
+            for (Path file : json) {
+                getLog().debug("\t\t" + asComponentName(file));
+            }
+        }
+    }
+
+    private void printUsedLabels(Map<String, Set<String>> usedLabels) {
+        if (getLog().isDebugEnabled()) {
+            if (!usedLabels.isEmpty()) {
+                getLog().info("");
+                getLog().info("\tUsed labels: " + usedLabels.size());
+                for (Map.Entry<String, Set<String>> entry : usedLabels.entrySet()) {
+                    getLog().info("\t\t" + entry.getKey() + ":");
+                    for (String name : entry.getValue()) {
+                        getLog().info("\t\t\t" + name);
+                    }
+                }
+            }
+        }
+    }
+
+    private void printComponentsReport(
+            Set<Path> json, Set<Path> duplicate, Set<Path> missing, Map<String, Set<String>> usedComponentLabels,
+            Set<String> usedOptionsLabels,
+            Set<String> unusedLabels, Set<Path> missingFirstVersions) {
+        getLog().info(SEPARATOR);
         getLog().info("");
         getLog().info("Camel component catalog report");
         getLog().info("");
         getLog().info("\tComponents found: " + json.size());
-        for (Path file : json) {
-            getLog().info("\t\t" + asComponentName(file));
-        }
+        printComponentDebug(json);
         if (!duplicate.isEmpty()) {
             getLog().info("");
             getLog().warn("\tDuplicate components detected: " + duplicate.size());
-            for (Path file : duplicate) {
-                getLog().warn("\t\t" + asComponentName(file));
-            }
+            printComponentWarning(duplicate);
         }
-        if (!usedComponentLabels.isEmpty()) {
-            getLog().info("");
-            getLog().info("\tUsed component labels: " + usedComponentLabels.size());
-            for (Map.Entry<String, Set<String>> entry : usedComponentLabels.entrySet()) {
-                getLog().info("\t\t" + entry.getKey() + ":");
-                for (String name : entry.getValue()) {
-                    getLog().info("\t\t\t" + name);
+        if (getLog().isDebugEnabled()) {
+            if (!usedComponentLabels.isEmpty()) {
+                getLog().info("");
+                getLog().info("\tUsed component labels: " + usedComponentLabels.size());
+                for (Map.Entry<String, Set<String>> entry : usedComponentLabels.entrySet()) {
+                    getLog().debug("\t\t" + entry.getKey() + ":");
+                    for (String name : entry.getValue()) {
+                        getLog().debug("\t\t\t" + name);
+                    }
                 }
             }
-        }
-        if (!usedOptionsLabels.isEmpty()) {
-            getLog().info("");
-            getLog().info("\tUsed component/endpoint options labels: " + usedOptionsLabels.size());
-            for (String name : usedOptionsLabels) {
-                getLog().info("\t\t\t" + name);
+            if (!usedOptionsLabels.isEmpty()) {
+                getLog().info("");
+                getLog().info("\tUsed component/endpoint options labels: " + usedOptionsLabels.size());
+                for (String name : usedOptionsLabels) {
+                    getLog().info("\t\t\t" + name);
+                }
             }
         }
         if (!unusedLabels.isEmpty()) {
@@ -901,158 +1142,129 @@ public class PrepareCatalogMojo extends AbstractMojo {
         if (!missing.isEmpty()) {
             getLog().info("");
             getLog().warn("\tMissing components detected: " + missing.size());
-            for (Path name : missing) {
-                getLog().warn("\t\t" + name.getFileName().toString());
-            }
+            printWarnings(missing);
         }
         if (!missingFirstVersions.isEmpty()) {
             getLog().info("");
             getLog().warn("\tComponents without firstVersion defined: " + missingFirstVersions.size());
-            for (Path name : missingFirstVersions) {
-                getLog().warn("\t\t" + name.getFileName().toString());
-            }
+            printWarnings(missingFirstVersions);
         }
         getLog().info("");
-        getLog().info("================================================================================");
+        getLog().info(SEPARATOR);
     }
 
-    private void printDataFormatsReport(Set<Path> json, Set<Path> duplicate, Map<String, Set<String>> usedLabels, Set<Path> missingFirstVersions) {
-        getLog().info("================================================================================");
+    private void printWarnings(Set<Path> missing) {
+        for (Path name : missing) {
+            getLog().warn("\t\t" + name.getFileName().toString());
+        }
+    }
+
+    private void printDataFormatsReport(
+            Set<Path> json, Set<Path> duplicate, Map<String, Set<String>> usedLabels, Set<Path> missingFirstVersions) {
+        getLog().info(SEPARATOR);
         getLog().info("");
         getLog().info("Camel data format catalog report");
         getLog().info("");
         getLog().info("\tDataFormats found: " + json.size());
-        for (Path file : json) {
-            getLog().info("\t\t" + asComponentName(file));
-        }
+        printComponentDebug(json);
         if (!duplicate.isEmpty()) {
             getLog().info("");
             getLog().warn("\tDuplicate dataformat detected: " + duplicate.size());
-            for (Path file : duplicate) {
-                getLog().warn("\t\t" + asComponentName(file));
-            }
+            printComponentWarning(duplicate);
         }
-        if (!usedLabels.isEmpty()) {
-            getLog().info("");
-            getLog().info("\tUsed labels: " + usedLabels.size());
-            for (Map.Entry<String, Set<String>> entry : usedLabels.entrySet()) {
-                getLog().info("\t\t" + entry.getKey() + ":");
-                for (String name : entry.getValue()) {
-                    getLog().info("\t\t\t" + name);
-                }
-            }
-        }
+        printUsedLabels(usedLabels);
         if (!missingFirstVersions.isEmpty()) {
             getLog().info("");
             getLog().warn("\tDataFormats without firstVersion defined: " + missingFirstVersions.size());
-            for (Path name : missingFirstVersions) {
-                getLog().warn("\t\t" + name.getFileName().toString());
-            }
+            printWarnings(missingFirstVersions);
         }
         getLog().info("");
-        getLog().info("================================================================================");
+        getLog().info(SEPARATOR);
     }
 
-    private void printLanguagesReport(Set<Path> json, Set<Path> duplicate, Map<String, Set<String>> usedLabels, Set<Path> missingFirstVersions) {
-        getLog().info("================================================================================");
+    private void printLanguagesReport(
+            Set<Path> json, Set<Path> duplicate, Map<String, Set<String>> usedLabels, Set<Path> missingFirstVersions) {
+        getLog().info(SEPARATOR);
         getLog().info("");
         getLog().info("Camel language catalog report");
         getLog().info("");
         getLog().info("\tLanguages found: " + json.size());
-        for (Path file : json) {
-            getLog().info("\t\t" + asComponentName(file));
-        }
+        printComponentDebug(json);
         if (!duplicate.isEmpty()) {
             getLog().info("");
             getLog().warn("\tDuplicate language detected: " + duplicate.size());
-            for (Path file : duplicate) {
-                getLog().warn("\t\t" + asComponentName(file));
-            }
+            printComponentWarning(duplicate);
         }
-        if (!usedLabels.isEmpty()) {
-            getLog().info("");
-            getLog().info("\tUsed labels: " + usedLabels.size());
-            for (Map.Entry<String, Set<String>> entry : usedLabels.entrySet()) {
-                getLog().info("\t\t" + entry.getKey() + ":");
-                for (String name : entry.getValue()) {
-                    getLog().info("\t\t\t" + name);
-                }
-            }
-        }
+        printUsedLabels(usedLabels);
         if (!missingFirstVersions.isEmpty()) {
             getLog().info("");
             getLog().warn("\tLanguages without firstVersion defined: " + missingFirstVersions.size());
-            for (Path name : missingFirstVersions) {
-                getLog().warn("\t\t" + name.getFileName().toString());
-            }
+            printWarnings(missingFirstVersions);
         }
         getLog().info("");
-        getLog().info("================================================================================");
+        getLog().info(SEPARATOR);
     }
 
-    private void printOthersReport(Set<Path> json, Set<Path> duplicate, Map<String, Set<String>> usedLabels, Set<Path> missingFirstVersions) {
-        getLog().info("================================================================================");
+    private void printTransformersReport(
+            Set<Path> json, Set<Path> duplicate) {
+        getLog().info(SEPARATOR);
+        getLog().info("");
+        getLog().info("Camel transformer catalog report");
+        getLog().info("");
+        getLog().info("\tTransformers found: " + json.size());
+        printComponentDebug(json);
+        if (!duplicate.isEmpty()) {
+            getLog().info("");
+            getLog().warn("\tDuplicate transformer detected: " + duplicate.size());
+            printComponentWarning(duplicate);
+        }
+        getLog().info("");
+        getLog().info(SEPARATOR);
+    }
+
+    private void printOthersReport(
+            Set<Path> json, Set<Path> duplicate, Map<String, Set<String>> usedLabels, Set<Path> missingFirstVersions) {
+        getLog().info(SEPARATOR);
         getLog().info("");
         getLog().info("Camel other catalog report");
         getLog().info("");
         getLog().info("\tOthers found: " + json.size());
-        for (Path file : json) {
-            getLog().info("\t\t" + asComponentName(file));
-        }
+        printComponentDebug(json);
         if (!duplicate.isEmpty()) {
             getLog().info("");
             getLog().warn("\tDuplicate other detected: " + duplicate.size());
-            for (Path file : duplicate) {
-                getLog().warn("\t\t" + asComponentName(file));
-            }
+            printComponentWarning(duplicate);
         }
-        if (!usedLabels.isEmpty()) {
-            getLog().info("");
-            getLog().info("\tUsed labels: " + usedLabels.size());
-            for (Map.Entry<String, Set<String>> entry : usedLabels.entrySet()) {
-                getLog().info("\t\t" + entry.getKey() + ":");
-                for (String name : entry.getValue()) {
-                    getLog().info("\t\t\t" + name);
-                }
-            }
-        }
+        printUsedLabels(usedLabels);
         if (!missingFirstVersions.isEmpty()) {
             getLog().info("");
             getLog().warn("\tOthers without firstVersion defined: " + missingFirstVersions.size());
-            for (Path name : missingFirstVersions) {
-                getLog().warn("\t\t" + name.getFileName().toString());
-            }
+            printWarnings(missingFirstVersions);
         }
         getLog().info("");
-        getLog().info("================================================================================");
+        getLog().info(SEPARATOR);
     }
 
     private void printDocumentsReport(Set<Path> docs, Set<Path> duplicate, Set<Path> missing) {
-        getLog().info("================================================================================");
+        getLog().info(SEPARATOR);
         getLog().info("");
         getLog().info("Camel document catalog report");
         getLog().info("");
         getLog().info("\tDocuments found: " + docs.size());
-        for (Path file : docs) {
-            getLog().info("\t\t" + asComponentName(file));
-        }
+        printComponentDebug(docs);
         if (!duplicate.isEmpty()) {
             getLog().info("");
             getLog().warn("\tDuplicate document detected: " + duplicate.size());
-            for (Path file : duplicate) {
-                getLog().warn("\t\t" + asComponentName(file));
-            }
+            printComponentWarning(duplicate);
         }
         getLog().info("");
         if (!missing.isEmpty()) {
             getLog().info("");
             getLog().warn("\tMissing document detected: " + missing.size());
-            for (Path name : missing) {
-                getLog().warn("\t\t" + name.getFileName().toString());
-            }
+            printWarnings(missing);
         }
         getLog().info("");
-        getLog().info("================================================================================");
+        getLog().info(SEPARATOR);
     }
 
     private void copyFile(Path file, Path toDir) throws IOException, MojoFailureException {
@@ -1072,8 +1284,6 @@ public class PrepareCatalogMojo extends AbstractMojo {
     private List<Path> concat(List<Path> l1, List<Path> l2) {
         return Stream.concat(l1.stream(), l2.stream()).collect(Collectors.toList());
     }
-
-    // CHECKSTYLE:ON
 
     private Stream<Path> list(Path dir) {
         try {
@@ -1124,7 +1334,7 @@ public class PrepareCatalogMojo extends AbstractMojo {
 
     private Path getModule(Path p) {
         Path parent = p;
-        while (!parent.endsWith("target")) {
+        while (!parent.endsWith("target") && !parent.endsWith("src")) {
             parent = parent.getParent();
         }
         return parent.getParent();
@@ -1141,31 +1351,6 @@ public class PrepareCatalogMojo extends AbstractMojo {
                 // list
                 this::concat); // merge lists
         return byName.values().stream().flatMap(l -> l.stream().skip(1)).collect(Collectors.toCollection(TreeSet::new));
-    }
-
-    private List<Path> getComponentPath(Path dir) {
-        switch (dir.getFileName().toString()) {
-            case "camel-as2":
-                return Collections.singletonList(dir.resolve("camel-as2-component"));
-            case "camel-salesforce":
-                return Collections.singletonList(dir.resolve("camel-salesforce-component"));
-            case "camel-olingo2":
-                return Collections.singletonList(dir.resolve("camel-olingo2-component"));
-            case "camel-olingo4":
-                return Collections.singletonList(dir.resolve("camel-olingo4-component"));
-            case "camel-box":
-                return Collections.singletonList(dir.resolve("camel-box-component"));
-            case "camel-servicenow":
-                return Collections.singletonList(dir.resolve("camel-servicenow-component"));
-            case "camel-fhir":
-                return Collections.singletonList(dir.resolve("camel-fhir-component"));
-            case "camel-vertx-kafka":
-                return Collections.singletonList(dir.resolve("camel-vertx-kafka-component"));
-            case "camel-infinispan":
-                return Arrays.asList(dir.resolve("camel-infinispan"), dir.resolve("camel-infinispan-embedded"));
-            default:
-                return Collections.singletonList(dir);
-        }
     }
 
 }
